--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -771,7 +771,7 @@ foxtrick.ntremoveconfirmation=هل تود حقا إضافة/إزالة هذا ا
 foxtrick.confirmstripserver=هل تود إزالة الروابط من سيرفر هاتريك لإستخدام المنتدى؟
 foxtrick.conferences.signaturetoggle=التوقيع
 foxtrick.conferences.markunread=تحديد كغير مقروء من هنا
-foxtrick.tweaks.selectplayer=إختيار اللاعب
+copy.selectplayer=إختيار اللاعب
 foxtrick.linkscustom.selecticon=إختيار الأيقونة
 foxtrick.linkscustom.addpersonallink=إضافة رابط شخصي
 foxtrick.linkscustom.addlink=إضافة رابط
@@ -784,11 +784,11 @@ foxtrick.linkscustom.tags=الرموز
 foxtrick.linkscustom.help=مساعدة
 foxtrick.linkscustom.helptext=أولا هذا هو وضع المحرر. النقر على عنوان هذا الصندوق يقوم بتغيير الوضع بين العادي ووضع المحرر. فقط في الوضع العادي تعمل  روابط الشخصية بشكل كامل. يمكن إضافة الروابط الثابتة الخارجية بسهولة. فقط قم بإضافة عنوان الويب كاملا مثل http\: //alltid.org/league/427/. لإستخدام الروابط الثابتة الداخلية لا تقم بإضافة الجزء المتعلق بالسيرفر مثل /World/Series/Default.aspx?LeagueLevelUnitID\=427. تحتاج الرموز للروابط المتحركة النادرة. بإستخدام الرموز تتغير الروابط بشكل متحرك إلى المعلومات الموجودة في الصفحة التي تكون فيها. مثلا http\://alltid.org/league/[leagueid] ستؤدي دائما إلى صفحة Alltid الخاصة بالدوري الذي تتصفحه في هاتريك. الرموز المتوفرة في كل صفحة موجودة في صندوق الإختيار. يمكنك فقط إستخدام الرموز الموجودة في الصفحة التي تقوم بإضافة رابط المخصصة فيها. النص الموجود في الصندوق عبارة عن قالب وضع كمثال للتوضيح فقط. يمكنك كتابة رمز خاص بك باستخدام [].
 foxtrick.linkscustom.helptext2=يمكنك كذلك تصدير روابط ومشاركتها مع الآخرين. لعمل هذا يمكنك النقر على زر التصدير ومن ثم إختيار ملف لحفظ ذلك الرابط. يتم إضافة الروابط إلى ذلك الملف لذلك يمكنك حفظ روابط متعددة في ملف واحد. لإستيراد الروابط توجه إلى صندوق التفضيلات ومن ثم إلى إستيراد التفضيلات. المدخلات في الملف فقط يتم إستيرادها والتي هي في هذه الحالة روابطك الشخصية. لن يتم حذف أي من روابطك السابقة.
-foxtrick.matches.income=الدخل\:
-foxtrick.tweaks.Birthdays=أيام الميلاد
-foxtrick.tweaks.BirthdayToday=أيام الميلاد اليوم
-foxtrick.tweaks.BirthdayLastWeek=أيام الميلاد الأسبوع الماضي
-foxtrick.tweaks.BirthdayNextWeek=أيام الميلاد الأسبوع القادم
+matches.income=الدخل\:
+copy.Birthdays=أيام الميلاد
+copy.BirthdayToday=أيام الميلاد اليوم
+copy.BirthdayLastWeek=أيام الميلاد الأسبوع الماضي
+copy.BirthdayNextWeek=أيام الميلاد الأسبوع القادم
 foxtrick.copymatchid=أنقر لنسخ رقم المباراة إلى الحافظة
 foxtrick.ExtendedPlayerDetails.perseason=/الموسم
 
@@ -811,10 +811,10 @@ CurrentSquad=التشكيلة الحالية
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=إجراءات
-foxtrick.tweaks.writeinguestbook=اكتب في سجل الزوار
-foxtrick.tweaks.copyplayerad=نسخ رقم اللاعب
-foxtrick.tweaks.copied=تم نسخ رقم اللاعب في الحافظة.
+sidebarBox.actions=إجراءات
+managerButtons.writeInGuestbook=اكتب في سجل الزوار
+copy.copyplayerad=نسخ رقم اللاعب
+copy.copied=تم نسخ رقم اللاعب في الحافظة.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -847,31 +847,31 @@ MatchReportFormat.extraTime=الوقت الإضافي
 MatchReportFormat.penaltyShootOut=ركلات الترجيح
 MatchReportFormat.result=النتيجة
 
-CopySelected.desc=Copy selection with Ctrl+C.
-SpecialPaste.desc=Paste with Shift + Left Click.
+copy.copySelected=Copy selection with Ctrl+C.
+copy.operaPaste=Paste with Shift + Left Click.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=نسخ جدول المهارات إلى الحافظة (بصيغة HT-ML)
-foxtrick.tweaks.skilltablecopied=تم نسخ جدول المهارات في الحافظة.
-foxtrick.tweaks.matchidcopied=تم نسخ رقم المباراة في الحافظة.
-foxtrick.tweaks.postidcopied=تم نسخ رقم الرسالة [post\=%s] في الحافظة.
-foxtrick.tweaks.postingcopied=تم نسخ الرسالة %s في الحافظة.
-foxtrick.tweaks.youthstatistics=Youth Statistics ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=نسخ جدول المهارات إلى الحافظة (بصيغة HT-ML)
+copy.copied.skilltable=تم نسخ جدول المهارات في الحافظة.
+copy.copied.matchid=تم نسخ رقم المباراة في الحافظة.
+copy.copied.postid=تم نسخ رقم الرسالة [post\=%s] في الحافظة.
+copy.copied.posting=تم نسخ الرسالة %s في الحافظة.
+copy.youthstatistics=Youth Statistics ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=الهجوم ضد الدفاع
-foxtrick.matches.right=يمين
-foxtrick.matches.left=يسار
-foxtrick.matches.center=وسط
-foxtrick.matches.defense=دفاع
-foxtrick.matches.attack=هجوم
-foxtrick.matches.indfreekick=الركلات الثابتة غير المباشرة
-foxtrick.matches.wronglang=FoxTrick\: لا يمكن عرض الإحصائيات لأن لغتك غير مسجلة أو لأنك اخترت اللغة الخطأ في التفضيلات. الرجاء التأكد من أن لغة FoxTrick التي تستخدمها مطابقة للغة هاتريك.
+matches.attackdefensebars=الهجوم ضد الدفاع
+matches.right=يمين
+matches.left=يسار
+matches.center=وسط
+matches.defense=دفاع
+matches.attack=هجوم
+matches.indfreekick=الركلات الثابتة غير المباشرة
+matches.wronglang=FoxTrick\: لا يمكن عرض الإحصائيات لأن لغتك غير مسجلة أو لأنك اخترت اللغة الخطأ في التفضيلات. الرجاء التأكد من أن لغة FoxTrick التي تستخدمها مطابقة للغة هاتريك.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=إحصائيات الداعم
+matches.suppstats=إحصائيات الداعم
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -906,14 +906,14 @@ TeamPopupLinks.OpenNewTab=فتح في لسان جديد
 total_stars=مجموع النجوم
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=إظهار الخريطة
-foxtrick.FlagCollectionToMap.HideMap=إخفاء الخريطة
-foxtrick.FlagCollectionToMap.Africa=أفريقيا
-foxtrick.FlagCollectionToMap.Asia=آسيا
-foxtrick.FlagCollectionToMap.Europe=أوروبا
-foxtrick.FlagCollectionToMap.MEast=الشرق الأوسط
-foxtrick.FlagCollectionToMap.SAmerica=أمريكا الجنوبية
-foxtrick.FlagCollectionToMap.World=العالم
+flagCollectionToMap.ShowMap=إظهار الخريطة
+flagCollectionToMap.HideMap=إخفاء الخريطة
+flagCollectionToMap.Africa=أفريقيا
+flagCollectionToMap.Asia=آسيا
+flagCollectionToMap.Europe=أوروبا
+flagCollectionToMap.MEast=الشرق الأوسط
+flagCollectionToMap.SAmerica=أمريكا الجنوبية
+flagCollectionToMap.World=العالم
 
 # SkillTable
 Skill_table=جدول المهارات
@@ -958,16 +958,16 @@ minimum=على الأقل
 maximum=على الأكثر
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=عرض حسب الرقم
-Senior=أول
-Youth=شباب
-Tournaments=البطولات
-Tournament=البطولة
+rapidId.viewById=عرض حسب الرقم
+rapidId.senior=أول
+rapidId.youth=شباب
+rapidId.tournaments=البطولات
+rapidId.tournament=البطولة
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=تغيير عرض الجدول.
-foxtrick.SkillTable.Add_homegrown_title=يقوم بإضافة كل اللاعبين الناشئين من الحاليين
-foxtrick.SkillTable.showTimeInClub_title=يقوم بإظهار الوقت منذ أن إنضم اللاعب إلى الفريق الأول
+skillTable.switchView=تغيير عرض الجدول.
+skillTable.addHomegrown=يقوم بإضافة كل اللاعبين الناشئين من الحاليين
+skillTable.showTimeInClub=يقوم بإظهار الوقت منذ أن إنضم اللاعب إلى الفريق الأول
 foxtrick.SkillTable.detach=فصل
 
 # HTMSPrediction
@@ -1041,21 +1041,21 @@ LocalTime.local.title=الوقت بالتوقيت المحلي. انقر على 
 Links.feeds=خلاصات من قوائم الروابط (مفصولة بخطوط)
 
 #actions
-Copy=نسخ
-View=عرض
+button.copy=نسخ
+rapidId.view=عرض
 Switch_view=تغيير نمط العرض
 Detach=فصل
 AddHomegrown=إضافة اللاعبين الناشئين في الفريق
 showTimeInClub=إظهار الوقت في النادي
-sort.up=أعلى
-sort.down=أسفل
-action.clearCache=مسح الذاكرة المؤقتة
-action.clearCache.title=يقوم بمسح الذاكرة المؤقتة. يقوم البرنامج بتحميل ملفات إضافية من سيرفرات هاتريك حسب الطلب. إلى أن تقوم بإغلاق البرنامج يتم إستخدام تلك الملفات في كل وقت إلا أن هذه الملفات قد تصبح قديمة في حالات نادرة. قم بمسح الذاكرة المؤقتة إذا كنت تريد البرنامج أن يقوم بتحميل تلك الملفات مجددا.
+button.up=أعلى
+button.down=أسفل
+api.clearCache=مسح الذاكرة المؤقتة
+api.clearCache.title=يقوم بمسح الذاكرة المؤقتة. يقوم البرنامج بتحميل ملفات إضافية من سيرفرات هاتريك حسب الطلب. إلى أن تقوم بإغلاق البرنامج يتم إستخدام تلك الملفات في كل وقت إلا أن هذه الملفات قد تصبح قديمة في حالات نادرة. قم بمسح الذاكرة المؤقتة إذا كنت تريد البرنامج أن يقوم بتحميل تلك الملفات مجددا.
 
 # fennec ui
-pageAction.rightSidebar=إظهار الشريط الأيمن
+pageAction.rightMenu=إظهار الشريط الأيمن
 pageAction.mainContent=إظهار المحتوى الرئيسي
-pageAction.leftSidebar=إظهار الشريط الأيسر
+pageAction.leftMenu=إظهار الشريط الأيسر
 pageAction.all=إظهار الكل
 
 # buttons
@@ -1189,11 +1189,11 @@ about.designers=المصممون
 prefs.view.by.category=عرض حسب الفئة
 prefs.view.by.page=عرض حسب آخر صفحة في هاتريك
 
-prefs.delete_foxtrick_branches_ask=هل أنت متأكد من أنك تود إعادة تعيين الإعدادت إلى الإفتراضية؟
-prefs.delete_oauth_ask=إلغاء التخويل في فريق %s?
-prefs.disable_all_foxtrick_modules_ask=هل أنت متأكد من أنك تود تعطيل كل الوحدات؟
-prefs.revoke_permissions_ask=هل أنت متأكد من أنك تود إلغاء كل التصاريح الإختيارية؟
+prefs.restoreDefault.ask=هل أنت متأكد من أنك تود إعادة تعيين الإعدادت إلى الإفتراضية؟
+prefs.deleteToken.ask=إلغاء التخويل في فريق %s?
+prefs.disableAllModules.ask=هل أنت متأكد من أنك تود تعطيل كل الوحدات؟
+prefs.revokePermissions.ask=هل أنت متأكد من أنك تود إلغاء كل التصاريح الإختيارية؟
 
-prefs.permissionsHint=%s يحتاج إلى تخويل للعمل. قم بتمكينه في المربع التالي. إذا رفضت عملية التمكين فإن هذه الخاصية سيتم تعطيلها.
+prefs.getPermissions.alert=%s يحتاج إلى تخويل للعمل. قم بتمكينه في المربع التالي. إذا رفضت عملية التمكين فإن هذه الخاصية سيتم تعطيلها.
 
 ###EOF
