--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -616,7 +616,7 @@ foxtrick.ntremoveconfirmation=Želite li ubaciti/izbaciti ovog igrača iz svog t
 foxtrick.confirmstripserver=Želite li ukloniti adresu Hattrick servera s linkova kako bi bili upotrebljivi na forumu?
 foxtrick.conferences.signaturetoggle=Potpis
 foxtrick.conferences.markunread=Označi nepročitano odavdje
-foxtrick.tweaks.selectplayer=Izaberi igrača
+copy.selectplayer=Izaberi igrača
 foxtrick.linkscustom.selecticon=Izaberi ikonicu
 foxtrick.linkscustom.addpersonallink=Moji linkovi
 foxtrick.linkscustom.addlink=Dodaj link
@@ -629,11 +629,11 @@ foxtrick.linkscustom.tags=Oznake
 foxtrick.linkscustom.help=Pomoć
 foxtrick.linkscustom.helptext=Prije svega ovo je samo režim za uređivanje. Ako kliknete na zaglavlje ovog okvira preći ćete iz uređivačkog u normalni režim rada. Vaši linkovi su potpuno u funkciji samo kada ste u normalnom režimu rada. Vanjske linkove je lako dodati, samo ubacite punu adresu (Primer: http: \/\/alltid.org\/league\/427\/). Za interni statički link preskočite dio koji se odnosi na server (Primjer: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). Oznake su vam potrebne samo za rjeđe, dinamičke linkove. Uz pomoć oznaka linkovi se dinamički mijenjaju koristeći informaciju sa stranice na kojoj se trenutno nalazite. Na primjer http:\/\/alltid.org\/league\/[leagueid] će vas uvijek odvesti na Alltid stranicu lige koju trenutno pregledate na Hattricku. Oznake koje su vam dostupne za svaku stranicu su prikazane u padajućem meniju. Možete koristiti i oznake koje su navedene na stranici za koju dodajete vaš personalizirani link. Tekst koji je naveden je samo primjer, a svoje oznake možete napraviti sami (uz pomoć [ ]).
 foxtrick.linkscustom.helptext2=Svoje linkove možete također eksportovati i na taj način ih staviti na raspolaganje drugima. Da biste to uradili možete kliknuti na dugme ‘Exportuj’ i potom izaberete fajl u kome ćete sačuvati linkove. Linkovi će biti samo dodati tom fajlu, i kao posljedica toga, možete sačuvati više linkova u isti fajl. Da biste uvezli linkove idite u tab ‘Glavne opcije’ podešavanja za Foxtrik i u podmeni ‘Uvezi ili Eksportuj karakteristike’. Samo karakteristike koje se nalaze u fajlu će biti uvezene, a u vašem slučaju će to biti samo linkovi. Nijedan od vaših prethodno sačuvanih linkova neće biti obrisan.
-foxtrick.matches.income=Prihod:
-foxtrick.tweaks.Birthdays=Rođendani
-foxtrick.tweaks.BirthdayToday=Rođendani danas
-foxtrick.tweaks.BirthdayLastWeek=Rođendani prošle sedmice
-foxtrick.tweaks.BirthdayNextWeek=Rođendani sljedeće sedmice
+matches.income=Prihod:
+copy.Birthdays=Rođendani
+copy.BirthdayToday=Rođendani danas
+copy.BirthdayLastWeek=Rođendani prošle sedmice
+copy.BirthdayNextWeek=Rođendani sljedeće sedmice
 foxtrick.copymatchid=Kopiraj matchID u clipboard
 foxtrick.ExtendedPlayerDetails.perseason=po sezoni
 
@@ -668,44 +668,44 @@ Coach=Trener
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Radnje
+sidebarBox.actions=Radnje
 # Look on your players page (Club -> Players) to the box title on the right with the list of players
 
-foxtrick.tweaks.writeinguestbook=Upišite se u knjigu gostiju
-foxtrick.tweaks.copyplayerad=Iskopirajte podatke o igraču u clipboard
-foxtrick.tweaks.copied=Podaci o igraču su iskopirani u clipboard
+managerButtons.writeInGuestbook=Upišite se u knjigu gostiju
+copy.copyplayerad=Iskopirajte podatke o igraču u clipboard
+copy.copied=Podaci o igraču su iskopirani u clipboard
 
 
 CopyRatings.both=Kopiraj ocjene (u HT-ML)
 CopyRatings.home=Kopiraj ocjene domaćeg tima (u HT-ML)
 CopyRatings.away=Kopiraj ocjene gostujućeg tima (u HT-ML)
 CopyRatings.copied=Ocjene su uspјešno iskopirane u clipboard.
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
+copy.youthclub=hattrick-youthclub.org
 
-foxtrick.tweaks.copyskilltable=Kopiraj tabelu s vještinama u clipboard (u HT-ML)
-
-
+copy.copy.skilltable=Kopiraj tabelu s vještinama u clipboard (u HT-ML)
 
 
 
-foxtrick.tweaks.skilltablecopied=Izvorni kod tabele s vještinama je kopiran u clipboard.
-foxtrick.tweaks.matchidcopied=ID utakmice je kopiran u clipboard.
-foxtrick.tweaks.postidcopied=Post ID [post=%s] je kopiran u clipboard.
-foxtrick.tweaks.postingcopied=Post %s je kopiran u clipboard.
+
+
+copy.copied.skilltable=Izvorni kod tabele s vještinama je kopiran u clipboard.
+copy.copied.matchid=ID utakmice je kopiran u clipboard.
+copy.copied.postid=Post ID [post=%s] je kopiran u clipboard.
+copy.copied.posting=Post %s je kopiran u clipboard.
 
 #matches
-foxtrick.matches.attackdefensebars=Napad-Odbrana
-foxtrick.matches.right=Desno
-foxtrick.matches.left=Lijevo
-foxtrick.matches.center=Centralno
-foxtrick.matches.defense=odb
-foxtrick.matches.attack=nap
-foxtrick.matches.indfreekick=Indirektni udarci
-foxtrick.matches.wronglang=Foxtrick: Statistika ne može biti prikazana jer vaš jezik nije prijavljen ili niste podesili odgovarajući jezik u postavkama na Hattricku. Provjerite je li jezik u Foxtricku isti kao i jezik koji ste podesili na Hattricku.
+matches.attackdefensebars=Napad-Odbrana
+matches.right=Desno
+matches.left=Lijevo
+matches.center=Centralno
+matches.defense=odb
+matches.attack=nap
+matches.indfreekick=Indirektni udarci
+matches.wronglang=Foxtrick: Statistika ne može biti prikazana jer vaš jezik nije prijavljen ili niste podesili odgovarajući jezik u postavkama na Hattricku. Provjerite je li jezik u Foxtricku isti kao i jezik koji ste podesili na Hattricku.
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match) to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Statistike supportera
+matches.suppstats=Statistike supportera
 # Look on your Matches page: copy the header of the sold seats box
 
 
@@ -740,14 +740,14 @@ less=manje...
 total_stars=Ukupno zvijezda
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Prikaži mapu
-foxtrick.FlagCollectionToMap.HideMap=Zatvori mapu
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Azija
-foxtrick.FlagCollectionToMap.Europe=Evropa
-foxtrick.FlagCollectionToMap.MEast=Bliski Istok
-foxtrick.FlagCollectionToMap.SAmerica=Južna Amerika
-foxtrick.FlagCollectionToMap.World=Svijet
+flagCollectionToMap.ShowMap=Prikaži mapu
+flagCollectionToMap.HideMap=Zatvori mapu
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Azija
+flagCollectionToMap.Europe=Evropa
+flagCollectionToMap.MEast=Bliski Istok
+flagCollectionToMap.SAmerica=Južna Amerika
+flagCollectionToMap.World=Svijet
 
 # SkillTable
 Skill_table=Tabela vještina
@@ -775,8 +775,8 @@ CurrentBidderShort=Trenutni ponuđač
 CurrentBidderShort.abbr=Pon
 
 
-Senior=Senior
-Youth=Junior
+rapidId.senior=Senior
+rapidId.youth=Junior
 
 # TransferSearchResultFilters
 
@@ -789,10 +789,10 @@ minimum=Najmanje
 maximum=Najviše
 
 # Rapid ID
-foxtrick.RapidId.ViewById=Pregled prema ID-u
+rapidId.viewById=Pregled prema ID-u
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Promijeni pregled tabele.
+skillTable.switchView=Promijeni pregled tabele.
 
 # External Chat
 foxtrick.LeagueAndMatchChat.MatchChat=Non HT chat o utakmici
@@ -808,8 +808,8 @@ HTMSPrediction.title=Analiza utakmice prema HTMS
 HTMSPrediction.changePrediction=Promijeni pretpostavku
 
 #actions
-Copy=Kopiraj
-View=Pogledaj
+button.copy=Kopiraj
+rapidId.view=Pogledaj
 Switch_view=Promijeni pogled
 Filter=Filter
 
@@ -883,8 +883,8 @@ button.export=Snimi
 button.import=Učitaj
 
 
-prefs.delete_foxtrick_branches_ask=Zaista želite obrisati sve sačuvane karakteristike?\nFirefox se mora restartovati da bi promjena stupila na snagu!
-prefs.disable_all_foxtrick_modules_ask=Zaista želite isključiti sve Foxtrick module?\n
+prefs.restoreDefault.ask=Zaista želite obrisati sve sačuvane karakteristike?\nFirefox se mora restartovati da bi promjena stupila na snagu!
+prefs.disableAllModules.ask=Zaista želite isključiti sve Foxtrick module?\n
 
 prefs.additional.title=Dodatne opcije
 prefs.additional.smallCopyIcons=Prikaži opcije kopiranja u zaglavlju umjesto sa strane
