--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -565,7 +565,7 @@ foxtrick.ntremoveconfirmation=Voleu afegir/eliminar aquest jugador de la plantil
 foxtrick.confirmstripserver=Voleu treure el nom del servidor de hattrick dels enllaços per fer que aquests funcionin en els fòrums?
 foxtrick.conferences.signaturetoggle=Signatura
 foxtrick.conferences.markunread=Marca com pendents de llegit a partit d'aquí
-foxtrick.tweaks.selectplayer=Seleccioneu el jugador
+copy.selectplayer=Seleccioneu el jugador
 foxtrick.linkscustom.selecticon=Selecciona la icona
 foxtrick.linkscustom.addpersonallink=Afegeix un enllaç personal
 foxtrick.linkscustom.addlink=Afegeix un enllaç
@@ -578,11 +578,11 @@ foxtrick.linkscustom.tags=Etiquetes
 foxtrick.linkscustom.help=Ajuda
 foxtrick.linkscustom.helptext=Primer, això és el mode d’edició. Si feu clic a la capçalera d’aquesta caixa canviareu entre el mode d’edició i el normal. Només quan esteu en mode normal els vostres enllaços funcionaran del tot. Els enllaços externs d’estadístiques son fàcils d’afegit, només cal afegir tota la URL (Exemple\: http\: //alltid.org/league/427/). Per pàgines internes d’estadístiques suprimiu la part del servidor (Exemple\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Només us calen les etiquetes per enllaços dinàmics poc corrents. Amb les etiquetes els enllaços es canvien de forma dinàmica emprant la informació del lloc on sou; per exemple http\://alltid.org/league/[leagueid] us portarà a la mateixa lliga en alltid que la que esteu mirant a hattrick. Les etiquetes que es poden emprar a cada lloc es mostren a la caixa de selecció. Només podeu emprar aquelles etiquetes que es mostren al lloc on afegiu l’enllaç personalitzat. El text que es mostra és tant sols una plantilla d’exemple. Podeu escriure l’etiqueta (amb els []).
 foxtrick.linkscustom.helptext2=Podeu exportar també els vostres enllaços per compartir-los. Per fer-ho heu de fer clic al botó d’exportar i triar un fitxer on desar els enllaços. Els enllaços s’afegiran al fitxer, d’aquesta forma podeu tenir força enllaços en un mateix fitxer. Per importar enllaços heu d’anar a l’apartat d’importar de la finestra de preferències. Només s’importaran les preferències del fitxers seleccionat s’importaran, el que en aquest cas son els enllaços. No es suprimiran cap dels enllaços que ja teniu.
-foxtrick.matches.income=Ingressos\:
-foxtrick.tweaks.Birthdays=Aniversaris
-foxtrick.tweaks.BirthdayToday=Aniversaris avui
-foxtrick.tweaks.BirthdayLastWeek=Aniversaris la darrera setmana
-foxtrick.tweaks.BirthdayNextWeek=Aniversaris la propera setmana
+matches.income=Ingressos\:
+copy.Birthdays=Aniversaris
+copy.BirthdayToday=Aniversaris avui
+copy.BirthdayLastWeek=Aniversaris la darrera setmana
+copy.BirthdayNextWeek=Aniversaris la propera setmana
 foxtrick.copymatchid=Fe-ho clic per copia al porta-retalls la id del partit
 foxtrick.ExtendedPlayerDetails.perseason=/temporada
 
@@ -601,10 +601,10 @@ Coach=Entrenador
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Accions
-foxtrick.tweaks.writeinguestbook=Escriu al llibre de visites
-foxtrick.tweaks.copyplayerad=Copia l’anunci del jugador al porta-retalls
-foxtrick.tweaks.copied=S’ha copiat l’anunci de jugador al porta-retalls.
+sidebarBox.actions=Accions
+managerButtons.writeInGuestbook=Escriu al llibre de visites
+copy.copyplayerad=Copia l’anunci del jugador al porta-retalls
+copy.copied=S’ha copiat l’anunci de jugador al porta-retalls.
 
 
 CopyRatings.both=Copia els ratis (HT-ML)
@@ -615,27 +615,27 @@ CopyRatings.copied=S’han copiat els ratis al porta-retalls.
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Copia la taula d'habilitats al porta-retalls (HT-ML)
-foxtrick.tweaks.skilltablecopied=S’han copiat les dades de la taula d'habilitats al porta-retalls.
-foxtrick.tweaks.matchidcopied=S’ha copiat l'identificador de partit al porta-retalls.
-foxtrick.tweaks.postidcopied=El ID de missatge [post\=%s] s'ha copial al porta-retalls.
-foxtrick.tweaks.postingcopied=S’han copiat els missatge %s al porta-retalls.
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Copia la taula d'habilitats al porta-retalls (HT-ML)
+copy.copied.skilltable=S’han copiat les dades de la taula d'habilitats al porta-retalls.
+copy.copied.matchid=S’ha copiat l'identificador de partit al porta-retalls.
+copy.copied.postid=El ID de missatge [post\=%s] s'ha copial al porta-retalls.
+copy.copied.posting=S’han copiat els missatge %s al porta-retalls.
 
 #matches
-foxtrick.matches.attackdefensebars=Atac Vs. Defensa
-foxtrick.matches.right=Dreta
-foxtrick.matches.left=Esquerra
-foxtrick.matches.center=Central
-foxtrick.matches.defense=de.
-foxtrick.matches.attack=at.
-foxtrick.matches.indfreekick=Tirs Lliures indirectes
-foxtrick.matches.wronglang=FoxTrick\: No es poden mostrar les qualificacions ja que, o la vostra llengua no està registrada, o heu seleccionat en les preferències una llengua incorrecta. Comproveu que el vostre idioma a FoxTrick és el mateix que el de hattrick.
+matches.attackdefensebars=Atac Vs. Defensa
+matches.right=Dreta
+matches.left=Esquerra
+matches.center=Central
+matches.defense=de.
+matches.attack=at.
+matches.indfreekick=Tirs Lliures indirectes
+matches.wronglang=FoxTrick\: No es poden mostrar les qualificacions ja que, o la vostra llengua no està registrada, o heu seleccionat en les preferències una llengua incorrecta. Comproveu que el vostre idioma a FoxTrick és el mateix que el de hattrick.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Estadístiques de Supporter
+matches.suppstats=Estadístiques de Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -666,14 +666,14 @@ less=menys…
 total_stars=Nombre total d’estrelles
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Mostra el mapa
-foxtrick.FlagCollectionToMap.HideMap=Amaga el mapa
-foxtrick.FlagCollectionToMap.Africa=Africa
-foxtrick.FlagCollectionToMap.Asia=Àsia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Orient mitjà
-foxtrick.FlagCollectionToMap.SAmerica=Amèrica del sud
-foxtrick.FlagCollectionToMap.World=Món
+flagCollectionToMap.ShowMap=Mostra el mapa
+flagCollectionToMap.HideMap=Amaga el mapa
+flagCollectionToMap.Africa=Africa
+flagCollectionToMap.Asia=Àsia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Orient mitjà
+flagCollectionToMap.SAmerica=Amèrica del sud
+flagCollectionToMap.World=Món
 
 # SkillTable
 Skill_table=Taula d'habilitats
@@ -711,12 +711,12 @@ minimum=Almenys
 maximum=Màxim
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Mostra per ID
-Senior=Sènior
-Youth=Juvenil
+rapidId.viewById=Mostra per ID
+rapidId.senior=Sènior
+rapidId.youth=Juvenil
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Canvia la visualització de la taula.
+skillTable.switchView=Canvia la visualització de la taula.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Resultat predit
@@ -747,8 +747,8 @@ CrossTable.table=Taula d'encreuaments de lliga
 # Links
 
 #actions
-Copy=Copia
-View=Visualitza
+button.copy=Copia
+rapidId.view=Visualitza
 Switch_view=Canvi de vista
 
 # fennec ui
@@ -826,8 +826,8 @@ prefs.additional.HTMLDebugLog=Mostra informació de depuració al peu de la pàg
 
 
 
-prefs.delete_foxtrick_branches_ask=Voleu recuperar els valors per defecte de les preferències?\nCaldrà reiniciar el firefox per activar aquest canvi.
-prefs.disable_all_foxtrick_modules_ask=Voleu emprar deshabilitat tots els mòduls?\n
+prefs.restoreDefault.ask=Voleu recuperar els valors per defecte de les preferències?\nCaldrà reiniciar el firefox per activar aquest canvi.
+prefs.disableAllModules.ask=Voleu emprar deshabilitat tots els mòduls?\n
 
 
 ###EOF
