--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -452,7 +452,7 @@ foxtrick.staffconfirmationsack=Ønsker du at fyr %num %slags?
 foxtrick.confirmstripserver=Ønsker du at fravælge hattrick serveren fra linkene for at gøre det anvendeligt i forum?
 foxtrick.conferences.signaturetoggle=Signatur
 foxtrick.conferences.markunread=Markere som ulæst herfra
-foxtrick.tweaks.BirthdayToday=Fødselsdage i dag
+copy.BirthdayToday=Fødselsdage i dag
 foxtrick.ExtendedPlayerDetails.perseason=/ Sæson
 
 foxtrick.defensiveTrainer=En %s træner, der er defensivt orienteret.
@@ -501,26 +501,26 @@ MatchReportFormat.extraTime=Overtid
 MatchReportFormat.penaltyShootOut=Straffesparkskonkurrence
 MatchReportFormat.result=Resultat
 
-CopySelected.desc=Kopier det markerede med Ctrl + C.
-SpecialPaste.desc=Indsæt med Shift + Venstre klik.
+copy.copySelected=Kopier det markerede med Ctrl + C.
+copy.operaPaste=Indsæt med Shift + Venstre klik.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Kopier evneskema til udklipsholderen (i HT-ML format)
-foxtrick.tweaks.skilltablecopied=Evneskemaet er kopieret til udklipsholderen.
-foxtrick.tweaks.matchidcopied=Kamp-ID'et er kopieret til udklipsholderen.
-foxtrick.tweaks.postidcopied=Indlæg ID [post\=%s] er kopieret til udklipsholderen.
-foxtrick.tweaks.postingcopied=Postede %s er kopieret til udklipsholderen.
-foxtrick.tweaks.youthstatistics=Ungdom Statistik HT-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Kopier evneskema til udklipsholderen (i HT-ML format)
+copy.copied.skilltable=Evneskemaet er kopieret til udklipsholderen.
+copy.copied.matchid=Kamp-ID'et er kopieret til udklipsholderen.
+copy.copied.postid=Indlæg ID [post\=%s] er kopieret til udklipsholderen.
+copy.copied.posting=Postede %s er kopieret til udklipsholderen.
+copy.youthstatistics=Ungdom Statistik HT-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Angreb vs forsvar
-foxtrick.matches.right=Højre
-foxtrick.matches.left=Venstre
-foxtrick.matches.center=Centralmidtbane
-foxtrick.matches.defense=Forsvar
-foxtrick.matches.attack=Angreb
-foxtrick.matches.indfreekick=Ind. frispark
-foxtrick.matches.wronglang=Foxtrick\: stats kan ikke vises, fordi dit sprog ikke er registreret eller fordi du har angivet et forkert sprog i indstillingerne.
+matches.attackdefensebars=Angreb vs forsvar
+matches.right=Højre
+matches.left=Venstre
+matches.center=Centralmidtbane
+matches.defense=Forsvar
+matches.attack=Angreb
+matches.indfreekick=Ind. frispark
+matches.wronglang=Foxtrick\: stats kan ikke vises, fordi dit sprog ikke er registreret eller fordi du har angivet et forkert sprog i indstillingerne.
 
 
 # NOTE TO TRANSLATORS
@@ -551,14 +551,14 @@ TeamPopupLinks.OpenNewTab=Åben i ny fane
 total_stars=Total stjerne tæller
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Vis kort
-foxtrick.FlagCollectionToMap.HideMap=Skjul kort
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asien
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Mellemøsten
-foxtrick.FlagCollectionToMap.SAmerica=Syd Amerika
-foxtrick.FlagCollectionToMap.World=Verden
+flagCollectionToMap.ShowMap=Vis kort
+flagCollectionToMap.HideMap=Skjul kort
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asien
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Mellemøsten
+flagCollectionToMap.SAmerica=Syd Amerika
+flagCollectionToMap.World=Verden
 
 # SkillTable
 Skill_table=Evneskema
@@ -603,14 +603,14 @@ minimum=Mindst
 maximum=Maksimum
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Vis efter ID
-Senior=Senior
-Youth=Ungdom
+rapidId.viewById=Vis efter ID
+rapidId.senior=Senior
+rapidId.youth=Ungdom
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Skift visningen af ​​tabellen.
-foxtrick.SkillTable.Add_homegrown_title=Tilføjer alle spillere af egen avl fra den aktuelle seniorhold liste
-foxtrick.SkillTable.showTimeInClub_title=Viser tiden siden spiller tiltrådte klubbens seniorhold
+skillTable.switchView=Skift visningen af ​​tabellen.
+skillTable.addHomegrown=Tilføjer alle spillere af egen avl fra den aktuelle seniorhold liste
+skillTable.showTimeInClub=Viser tiden siden spiller tiltrådte klubbens seniorhold
 foxtrick.SkillTable.detach=Frigør
 
 # HTMSPrediction
@@ -683,21 +683,21 @@ LocalTime.local.title=Tid i lokal tidszone. Klik på uret for at skifte til Hatt
 Links.feeds=Feeds af link lister (adskilt med linjeskift)
 
 #actions
-Copy=kopiere
-View=Vis
+button.copy=kopiere
+rapidId.view=Vis
 Switch_view=Skift visning
 Detach=Frigør
 AddHomegrown=Tilføj spiller af egenavl
 showTimeInClub=Vis tid i klubben
-sort.up=Op
-sort.down=Ned
-action.clearCache=Ryd cache
-action.clearCache.title=Rydder FoxTricks Xml cache. FoxTrick henter ekstra oplysninger fra Hattrick servere efter behov. Indtil du lukker din browser, vil FoxTrick efterfølgende, bruge lokalt lagrede kopier af disse oplysninger. I sjældne tilfælde kan oplysningerne blive forældet. Ryd cache, hvis du ønsker FoxTrick skal hente de ekstra informationer igen.
+button.up=Op
+button.down=Ned
+api.clearCache=Ryd cache
+api.clearCache.title=Rydder FoxTricks Xml cache. FoxTrick henter ekstra oplysninger fra Hattrick servere efter behov. Indtil du lukker din browser, vil FoxTrick efterfølgende, bruge lokalt lagrede kopier af disse oplysninger. I sjældne tilfælde kan oplysningerne blive forældet. Ryd cache, hvis du ønsker FoxTrick skal hente de ekstra informationer igen.
 
 # fennec ui
-pageAction.rightSidebar=Vis højre bjælke
+pageAction.rightMenu=Vis højre bjælke
 pageAction.mainContent=Vis hovedindhold
-pageAction.leftSidebar=Vis venstre bjælke
+pageAction.leftMenu=Vis venstre bjælke
 pageAction.all=Vis alt
 
 # buttons
