--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -778,7 +778,7 @@ foxtrick.ntremoveconfirmation=Willst du wirklich diesen Spieler hinzufügen / en
 foxtrick.confirmstripserver=Entfernen des Hattrick-Servers auf dem Link um ihn im Forum nutzbar zu machen?
 foxtrick.conferences.signaturetoggle=Signatur
 foxtrick.conferences.markunread=Als ungelesen markieren
-foxtrick.tweaks.selectplayer=Spieler auswählen
+copy.selectplayer=Spieler auswählen
 foxtrick.linkscustom.selecticon=Icon auswählen
 foxtrick.linkscustom.addpersonallink=Eigenen Link zufügen
 foxtrick.linkscustom.addlink=Link zufügen
@@ -791,11 +791,11 @@ foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Hilfe
 foxtrick.linkscustom.helptext=Zuerst einmal, dies ist nur der Editormodus. Man kann zwischen dem normalen und dem Editormodus wechseln in dem man auf die Überschrift dieser Box klickt. Nur im normalen Modus sind die eigenen Links voll funktionsfähig. Externe statische Links sind leicht einzufügen, einfach die volle Url angeben (Beispiel\:  http\: //alltid.org/league/427/). Für interne statische Links muss der Serverteil weggelassen werden (Beispiel\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Die Tags braucht man nur für seltenere dynamische Links. Die Tags werden durch die entsprechende Information der Seite, auf der du dich gerade befindest, ausgetauscht. Zum Beispiel http\://alltid.org/league/[leagueid] würde dich immer zu der Alltidseite der Liga führen, die du dir gerade in Hattrick anschaust. Die zur Verfügung stehenden Tags befinden sich in der Auswahlbox und sind auf jeder Seite verschieden. Nur die gelisteten Tags können auf der jeweiligen Seite für eigene Links eingesetzt werden. Der durch die Auswahlbox erzeugte Text ist nur eine exemplarische Schablone. Man kann die Tags auch selber einfügen (einschliesslich der []).
 foxtrick.linkscustom.helptext2=Du kannst deine Links auch speichern und mit Freunden teilen. Dazu musst du nur den Export-Butten drücken und eine Datei zum Speichern auswählen. Die Links werden der Datei hinzugefügt. Somit kannst du mehrere Links in eine Datei speichern. Um Links zu importieren, gehe in die Einstellungen von FoxTrick und drücke den Importieren-Button. Lediglich Einträge, welche in der Datei vorkommen, werden hinzugefügt bzw. überschrieben - in diesem Fall deine Links. Keiner deiner existierenden Links wird dabei überschrieben.
-foxtrick.matches.income=Einnahmen\:
-foxtrick.tweaks.Birthdays=Geburtstage
-foxtrick.tweaks.BirthdayToday=Geburtstag heute
-foxtrick.tweaks.BirthdayLastWeek=Geburtstage der letzten Woche
-foxtrick.tweaks.BirthdayNextWeek=Geburtstage der kommenden Woche
+matches.income=Einnahmen\:
+copy.Birthdays=Geburtstage
+copy.BirthdayToday=Geburtstag heute
+copy.BirthdayLastWeek=Geburtstage der letzten Woche
+copy.BirthdayNextWeek=Geburtstage der kommenden Woche
 foxtrick.copymatchid=Klicken, um die MatchID in die Zwischenablage zu kopieren
 foxtrick.ExtendedPlayerDetails.perseason=/ Saison
 
@@ -818,10 +818,10 @@ CurrentSquad=Aktuelles Team
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Aktionen
-foxtrick.tweaks.writeinguestbook=Eintrag im Gästebuch verfassen
-foxtrick.tweaks.copyplayerad=Spieleranzeige kopieren
-foxtrick.tweaks.copied=Die Spieleranzeige wurde in die Zwischenablage kopiert.
+sidebarBox.actions=Aktionen
+managerButtons.writeInGuestbook=Eintrag im Gästebuch verfassen
+copy.copyplayerad=Spieleranzeige kopieren
+copy.copied=Die Spieleranzeige wurde in die Zwischenablage kopiert.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -854,31 +854,31 @@ MatchReportFormat.extraTime=Verlängerung
 MatchReportFormat.penaltyShootOut=Elfmeterschießen
 MatchReportFormat.result=Endergebnis
 
-CopySelected.desc=Auswahl mit Strg+C kopieren.
-SpecialPaste.desc=Einfügen mit Umschalt + Linksklick.
+copy.copySelected=Auswahl mit Strg+C kopieren.
+copy.operaPaste=Einfügen mit Umschalt + Linksklick.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
-foxtrick.tweaks.skilltablecopied=Der Skilltabellen-Quelltext wurde in die Zwischenablage kopiert.
-foxtrick.tweaks.matchidcopied=MatchID in die Zwischenablage kopiert.
-foxtrick.tweaks.postidcopied=PostID in die Zwischenablage kopiert.
-foxtrick.tweaks.postingcopied=Posting in die Zwischenablage kopiert.
-foxtrick.tweaks.youthstatistics=Youth Statistics ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
+copy.copied.skilltable=Der Skilltabellen-Quelltext wurde in die Zwischenablage kopiert.
+copy.copied.matchid=MatchID in die Zwischenablage kopiert.
+copy.copied.postid=PostID in die Zwischenablage kopiert.
+copy.copied.posting=Posting in die Zwischenablage kopiert.
+copy.youthstatistics=Youth Statistics ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Teamvergleich
-foxtrick.matches.right=rechts
-foxtrick.matches.left=links
-foxtrick.matches.center=zentral
-foxtrick.matches.defense=Abwehr
-foxtrick.matches.attack=Angriff
-foxtrick.matches.indfreekick=ind. Freistösse
-foxtrick.matches.wronglang=FoxTrick\: Statistiken können nicht angezeigt werden, da die gewählte Sprache nicht unterstützt wird oder falsch eingestellt wurde. Bitte stell sicher, dass deine FoxTrick-Spracheinstellung mit der Sprache von Hattrick übereinstimmt\!
+matches.attackdefensebars=Teamvergleich
+matches.right=rechts
+matches.left=links
+matches.center=zentral
+matches.defense=Abwehr
+matches.attack=Angriff
+matches.indfreekick=ind. Freistösse
+matches.wronglang=FoxTrick\: Statistiken können nicht angezeigt werden, da die gewählte Sprache nicht unterstützt wird oder falsch eingestellt wurde. Bitte stell sicher, dass deine FoxTrick-Spracheinstellung mit der Sprache von Hattrick übereinstimmt\!
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter Statistiken
+matches.suppstats=Supporter Statistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -913,14 +913,14 @@ TeamPopupLinks.OpenNewTab=In neuem Tab öffnen
 total_stars=Summe der Sterne
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Karte anzeigen
-foxtrick.FlagCollectionToMap.HideMap=Karte verbergen
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asien
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Mittlerer Osten
-foxtrick.FlagCollectionToMap.SAmerica=Südamerika
-foxtrick.FlagCollectionToMap.World=Welt
+flagCollectionToMap.ShowMap=Karte anzeigen
+flagCollectionToMap.HideMap=Karte verbergen
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asien
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Mittlerer Osten
+flagCollectionToMap.SAmerica=Südamerika
+flagCollectionToMap.World=Welt
 
 # SkillTable
 Skill_table=Fähigkeitentabelle
@@ -965,16 +965,16 @@ minimum=Mind.
 maximum=Max.
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Anzeige nach ID
-Senior=Senior
-Youth=Jugend
-Tournaments=Turniere
-Tournament=Turnier
+rapidId.viewById=Anzeige nach ID
+rapidId.senior=Senior
+rapidId.youth=Jugend
+rapidId.tournaments=Turniere
+rapidId.tournament=Turnier
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Wechselt die Ansicht der Tabelle
-foxtrick.SkillTable.Add_homegrown_title=Alle eigengewächse des aktuellen Teams zufügen
-foxtrick.SkillTable.showTimeInClub_title=Zeit des Vereinsbeitritts anzeigen
+skillTable.switchView=Wechselt die Ansicht der Tabelle
+skillTable.addHomegrown=Alle eigengewächse des aktuellen Teams zufügen
+skillTable.showTimeInClub=Zeit des Vereinsbeitritts anzeigen
 foxtrick.SkillTable.detach=Detach
 
 # HTMSPrediction
@@ -1048,21 +1048,21 @@ LocalTime.local.title=Anzeige in Lokalzeit. Klicken um zur Hattrickzeit zu wechs
 Links.feeds=Feeds von Linklisten (in getrennten Zeilen)
 
 #actions
-Copy=Kopieren
-View=Anzeigen
+button.copy=Kopieren
+rapidId.view=Anzeigen
 Switch_view=Ansicht wechseln
 Detach=Detach
 AddHomegrown=Eigengewächse zufügen
 showTimeInClub=Zeit im Verein anzeigen
-sort.up=Hoch
-sort.down=Runter
-action.clearCache=Cache leeren
-action.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bedarf zusätzliche Informationen von Hattricks Servern. Bis zum nächsten Neustart des Browsers benutzt FoxTrick lokal gespeicherte Kopien dieser Daten. Gelegendlich können diese nicht mehr aktuell sein. Lösche den Cache, falls FoxTrick die Zusatzdaten erneut laden soll.
+button.up=Hoch
+button.down=Runter
+api.clearCache=Cache leeren
+api.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bedarf zusätzliche Informationen von Hattricks Servern. Bis zum nächsten Neustart des Browsers benutzt FoxTrick lokal gespeicherte Kopien dieser Daten. Gelegendlich können diese nicht mehr aktuell sein. Lösche den Cache, falls FoxTrick die Zusatzdaten erneut laden soll.
 
 # fennec ui
-pageAction.rightSidebar=Rechtes Menue anzeigen
+pageAction.rightMenu=Rechtes Menue anzeigen
 pageAction.mainContent=Hauptbereich anzeigen
-pageAction.leftSidebar=Linkes Menue anzeigen
+pageAction.leftMenu=Linkes Menue anzeigen
 pageAction.all=Zeige alles
 
 # buttons
@@ -1199,11 +1199,11 @@ about.designers=Designer
 prefs.view.by.category=Nach Kategorie
 prefs.view.by.page=Nach letzter HT-Seite
 
-prefs.delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?
-prefs.delete_oauth_ask=OAuth Token/Secret der Vereinsid %s löschen? 
-prefs.disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?
-prefs.revoke_permissions_ask=Bist Du sicher, dass Du alle optionalen Berechtigungen widerrufen willst?
+prefs.restoreDefault.ask=Wirklich alle Einstellungen zurücksetzen?
+prefs.deleteToken.ask=OAuth Token/Secret der Vereinsid %s löschen? 
+prefs.disableAllModules.ask=Sollen wirklich alle Module deaktiviert werden?
+prefs.revokePermissions.ask=Bist Du sicher, dass Du alle optionalen Berechtigungen widerrufen willst?
 
-prefs.permissionsHint=%s braucht spezielle Erlaubnis um zu funktionieren. Erlaub den Zugriff im folgenden Dialog.
+prefs.getPermissions.alert=%s braucht spezielle Erlaubnis um zu funktionieren. Erlaub den Zugriff im folgenden Dialog.
 
 ###EOF
