--- a/content/locale/el/foxtrick.properties
+++ b/content/locale/el/foxtrick.properties
@@ -639,7 +639,7 @@ foxtrick.staffconfirmationsack=Θέλετε να απολύσετε %num %kind;
 foxtrick.ntremoveconfirmation=Είστε βέβαιοι ότι θέλετε να προσθέσετε/καταργήσετε τον εν λόγω παίκτη από την ομάδα;
 foxtrick.conferences.signaturetoggle=Υπογραφή
 foxtrick.conferences.markunread=Επισημάνετε μη αναγνωσμένα μηνύματα από εδώ
-foxtrick.tweaks.selectplayer=Επιλογή παίκτη
+copy.selectplayer=Επιλογή παίκτη
 foxtrick.linkscustom.selecticon=Επιλογή εικονίδιου
 foxtrick.linkscustom.addpersonallink=Πρόσθεσε προσωπικό σύνδεσμο
 foxtrick.linkscustom.addlink=Πρόσθεσε σύνδεσμο
@@ -651,11 +651,11 @@ foxtrick.linkscustom.addtag=Προσθέτει μια ετικέττα
 foxtrick.linkscustom.tags=Ετικέττες
 foxtrick.linkscustom.help=Βοήθεια
 foxtrick.linkscustom.helptext2=Μπορείς επίσης να εξάγεις τους συνδέσμους σου και να τους διαμοιράσεις. Για να γίνει αυτό κάνε κλικ στον μπουτόν εξαγωγής και επέλεξε ένα αρχείο για να Σώσεις τους συνδέσμους. Οι σύνδεσμοι προσθέτονται στο τέλος του αρχείου, συνεπώς μπορείς να έχεις πολλούς συνδέσμους σε ένα αρχείο. Για να εισάγεις συνδέσμους πήγαινε στις Προτιμήσεις κα κατόπιν στην εισαγωγή προτιμήσεων. Μόνο οι προτιμήσεις που υπάρχουν στο επιλεγμένο αρχείο θα εισαχθούν , οι οποίες σ'αυτήν την περίπτωση ειναι οι σύνδεσμοι σου. Κανένας απο τους προηγούμενους συνδέσμους δεν θα διαγραφεί.
-foxtrick.matches.income=Εσοδα\:
-foxtrick.tweaks.Birthdays=Γενέθλια
-foxtrick.tweaks.BirthdayToday=Γενέθλια Σήμερα
-foxtrick.tweaks.BirthdayLastWeek=Γενέθλια την περασμένη εβδομάδα
-foxtrick.tweaks.BirthdayNextWeek=Γενέθλια την επόμενη εβδομάδα
+matches.income=Εσοδα\:
+copy.Birthdays=Γενέθλια
+copy.BirthdayToday=Γενέθλια Σήμερα
+copy.BirthdayLastWeek=Γενέθλια την περασμένη εβδομάδα
+copy.BirthdayNextWeek=Γενέθλια την επόμενη εβδομάδα
 foxtrick.copymatchid=Κάντε κλικ για να αντιγράψετε matchID στο Πρόχειρο
 foxtrick.ExtendedPlayerDetails.perseason=/σαιζόν
 
@@ -678,10 +678,10 @@ CurrentSquad=Τρέχουσα εντεκάδα
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Ενέργειες
-foxtrick.tweaks.writeinguestbook=Γράψε στο βιβλίο επισκεπτών
-foxtrick.tweaks.copyplayerad=Αντιγραφή παίκτη στο πρόχειρο
-foxtrick.tweaks.copied=Ο παίκτης προστέθηκε στο πρόχειρο
+sidebarBox.actions=Ενέργειες
+managerButtons.writeInGuestbook=Γράψε στο βιβλίο επισκεπτών
+copy.copyplayerad=Αντιγραφή παίκτη στο πρόχειρο
+copy.copied=Ο παίκτης προστέθηκε στο πρόχειρο
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -714,31 +714,31 @@ MatchReportFormat.extraTime=παράταση
 MatchReportFormat.penaltyShootOut=Πέναλτι
 MatchReportFormat.result=Αποτέλεσμα
 
-CopySelected.desc=Αντιγραφή επιλογής με το συνδυασμό πλήκτρων Ctrl + c.
-SpecialPaste.desc=Επικόλληση με Shift + αριστερό κλικ.
+copy.copySelected=Αντιγραφή επιλογής με το συνδυασμό πλήκτρων Ctrl + c.
+copy.operaPaste=Επικόλληση με Shift + αριστερό κλικ.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Αντιγραφή πίνακα ικανοτητων στο πρόχειρο (σε HT-Λ)
-foxtrick.tweaks.skilltablecopied=Ο πίνακας ικανοτήτων έχει αντιγραφεί στο Πρόχειρο.
-foxtrick.tweaks.matchidcopied=η ταυτοτητα του παιχνιδιου εχει αντιγραφει στο προχειρο
-foxtrick.tweaks.postidcopied=Δημοσίευση ID [post \= % s] έχει αντιγραφεί στο Πρόχειρο.
-foxtrick.tweaks.postingcopied=Καταχώρηση %s έχει αντιγραφεί στο Πρόχειρο.
-foxtrick.tweaks.youthstatistics=ομαδα νεων στατιστικα
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Αντιγραφή πίνακα ικανοτητων στο πρόχειρο (σε HT-Λ)
+copy.copied.skilltable=Ο πίνακας ικανοτήτων έχει αντιγραφεί στο Πρόχειρο.
+copy.copied.matchid=η ταυτοτητα του παιχνιδιου εχει αντιγραφει στο προχειρο
+copy.copied.postid=Δημοσίευση ID [post \= % s] έχει αντιγραφεί στο Πρόχειρο.
+copy.copied.posting=Καταχώρηση %s έχει αντιγραφεί στο Πρόχειρο.
+copy.youthstatistics=ομαδα νεων στατιστικα
 
 #matches
-foxtrick.matches.attackdefensebars=Μπάρες Επίθεση εν. Άμυνας
-foxtrick.matches.right=Δεξιά
-foxtrick.matches.left=Αριστερά
-foxtrick.matches.center=Κεντρικό
-foxtrick.matches.defense=αμ
-foxtrick.matches.attack=επ
-foxtrick.matches.indfreekick=Εμμεσο φάουλ
-foxtrick.matches.wronglang=Foxtrick\: Τα στατιστικά δεν μπορούν να εμφανιστούν επειδή η γλώσσα σας δεν υπάρχει ή επειδή έχετε λάθος γλώσσα στις προτιμήσεις. Παρακαλώ βεβαιωθείτε ότι η γλώσσα του Foxtrick είναι η ίδια με του Hattrick.
+matches.attackdefensebars=Μπάρες Επίθεση εν. Άμυνας
+matches.right=Δεξιά
+matches.left=Αριστερά
+matches.center=Κεντρικό
+matches.defense=αμ
+matches.attack=επ
+matches.indfreekick=Εμμεσο φάουλ
+matches.wronglang=Foxtrick\: Τα στατιστικά δεν μπορούν να εμφανιστούν επειδή η γλώσσα σας δεν υπάρχει ή επειδή έχετε λάθος γλώσσα στις προτιμήσεις. Παρακαλώ βεβαιωθείτε ότι η γλώσσα του Foxtrick είναι η ίδια με του Hattrick.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Στατιστικά συνδρομητών
+matches.suppstats=Στατιστικά συνδρομητών
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -773,14 +773,14 @@ TeamPopupLinks.OpenNewTab=Άνοιγμα σε νέα καρτέλα
 total_stars=Μέτρηση Συνόλου Αστεριών
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Δείξε χάρτη
-foxtrick.FlagCollectionToMap.HideMap=Κρύψε χάρτη
-foxtrick.FlagCollectionToMap.Africa=Αφρική
-foxtrick.FlagCollectionToMap.Asia=Ασία
-foxtrick.FlagCollectionToMap.Europe=Ευρώπη
-foxtrick.FlagCollectionToMap.MEast=Μέση Ανατολή
-foxtrick.FlagCollectionToMap.SAmerica=Νότια Αμερική
-foxtrick.FlagCollectionToMap.World=Κόσμος
+flagCollectionToMap.ShowMap=Δείξε χάρτη
+flagCollectionToMap.HideMap=Κρύψε χάρτη
+flagCollectionToMap.Africa=Αφρική
+flagCollectionToMap.Asia=Ασία
+flagCollectionToMap.Europe=Ευρώπη
+flagCollectionToMap.MEast=Μέση Ανατολή
+flagCollectionToMap.SAmerica=Νότια Αμερική
+flagCollectionToMap.World=Κόσμος
 
 # SkillTable
 Skill_table=Πίνακας ικανοτήτων
@@ -825,15 +825,15 @@ minimum=Τουλάχιστον
 maximum=Μέγιστο
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Προβολή με ID
-Senior=Μεγάλη
-Youth=Νέοι
-Tournaments=Τουρνουά
-Tournament=Τουρνουά
+rapidId.viewById=Προβολή με ID
+rapidId.senior=Μεγάλη
+rapidId.youth=Νέοι
+rapidId.tournaments=Τουρνουά
+rapidId.tournament=Τουρνουά
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Εναλλαγή της προβολής του πίνακα.
-foxtrick.SkillTable.showTimeInClub_title=Εμφανίζει το χρόνο από τη στιγμή που ο παίκτης εντάχθηκε στη μεγάλη ομάδα
+skillTable.switchView=Εναλλαγή της προβολής του πίνακα.
+skillTable.showTimeInClub=Εμφανίζει το χρόνο από τη στιγμή που ο παίκτης εντάχθηκε στη μεγάλη ομάδα
 foxtrick.SkillTable.detach=Απόσπαση
 
 # HTMSPrediction
@@ -906,20 +906,20 @@ LocalTime.local.title=Τοπική ώρα. Κάντε κλικ για εναλλ
 Links.feeds=Τροφοδοσίες λιστών συνδέσμων (διαχωρισμένες με αλλαγές γραμμών)
 
 #actions
-Copy=Αντιγραφή
-View=Προβολή
+button.copy=Αντιγραφή
+rapidId.view=Προβολή
 Switch_view=Αλλαγή προβολής
 Detach=Απόσπαση
 showTimeInClub=Εμφάνιση χρόνου στην ομάδα
-sort.up=Πάνω
-sort.down=Προς τα κάτω
-action.clearCache=Καθαρισμός μνήμης cache
-action.clearCache.title=Καθαρίζει την προσωρινή μνήμη των Xml FoxTricks (cache). Το FoxTrick κάνει λήψη επιπλέον πληροφοριώνς από τους servers του Hattrick. Μέχρι να τερματίσετε τον φυλλομετρητή σας, το FoxTrick θα χρησιμοποιήσει δεδομένα που έχουν αποθηκευτεί τοπικά. Σε σπάνιες περιπτώσεις ίσως είναι παλιά. Καθαρίστε την προσωρινή μνήμη αν θέλετε το Foxtrick να κατεβάσει τις πρόσθετες πληροφορίες και πάλι.
+button.up=Πάνω
+button.down=Προς τα κάτω
+api.clearCache=Καθαρισμός μνήμης cache
+api.clearCache.title=Καθαρίζει την προσωρινή μνήμη των Xml FoxTricks (cache). Το FoxTrick κάνει λήψη επιπλέον πληροφοριώνς από τους servers του Hattrick. Μέχρι να τερματίσετε τον φυλλομετρητή σας, το FoxTrick θα χρησιμοποιήσει δεδομένα που έχουν αποθηκευτεί τοπικά. Σε σπάνιες περιπτώσεις ίσως είναι παλιά. Καθαρίστε την προσωρινή μνήμη αν θέλετε το Foxtrick να κατεβάσει τις πρόσθετες πληροφορίες και πάλι.
 
 # fennec ui
-pageAction.rightSidebar=Εμφάνιση δεξιάς μπάρας
+pageAction.rightMenu=Εμφάνιση δεξιάς μπάρας
 pageAction.mainContent=Εμφάνιση κύριου περιεχομένου
-pageAction.leftSidebar=Εμφάνιση αριστερής μπάρας
+pageAction.leftMenu=Εμφάνιση αριστερής μπάρας
 pageAction.all=Εμφάνιση όλων
 
 # buttons
@@ -1051,11 +1051,11 @@ about.designers=Σχεδιαστές
 prefs.view.by.category=Προβολή ανά κατηγορία
 prefs.view.by.page=Προβολή από την τελευταία σελίδα HT
 
-prefs.delete_foxtrick_branches_ask=Θέλεις σίγουρα να επαναφέρεις τις αρχικές ρυθμίσεις?\nΟ Firefox πρέπει να επανεκκινήσει για να ισχύουν οι αλλαγές\!
-prefs.delete_oauth_ask=Διαγραφή ένδειξης OAuth για teamid % s; 
-prefs.disable_all_foxtrick_modules_ask=Σίγουρα θέλεις να απενεργοποιήσεις όλες τις επιλογές?\n
-prefs.revoke_permissions_ask=Είστε βέβαιοι ότι θέλετε να ανακαλέσει όλα τα προαιρετικά δικαιώματα;
+prefs.restoreDefault.ask=Θέλεις σίγουρα να επαναφέρεις τις αρχικές ρυθμίσεις?\nΟ Firefox πρέπει να επανεκκινήσει για να ισχύουν οι αλλαγές\!
+prefs.deleteToken.ask=Διαγραφή ένδειξης OAuth για teamid % s; 
+prefs.disableAllModules.ask=Σίγουρα θέλεις να απενεργοποιήσεις όλες τις επιλογές?\n
+prefs.revokePermissions.ask=Είστε βέβαιοι ότι θέλετε να ανακαλέσει όλα τα προαιρετικά δικαιώματα;
 
-prefs.permissionsHint=%s χρειάζεται άδεια πρόσβασης γα να εκτελείτε. Να επιτρέπεται η πρόσβαση;
+prefs.getPermissions.alert=%s χρειάζεται άδεια πρόσβασης γα να εκτελείτε. Να επιτρέπεται η πρόσβαση;
 
 ###EOF
