--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -714,7 +714,7 @@ foxtrick.ntremoveconfirmation=¿Realmente deseas añadir / eliminar a este jugad
 foxtrick.confirmstripserver=¿Deseas eliminar la información del servidor de los enlaces para que funcionen en el foro?
 foxtrick.conferences.signaturetoggle=Firma
 foxtrick.conferences.markunread=Marcar como no leídos desde aquí
-foxtrick.tweaks.selectplayer=Seleccionar jugador
+copy.selectplayer=Seleccionar jugador
 foxtrick.linkscustom.selecticon=Seleccionar icono
 foxtrick.linkscustom.addpersonallink=Añadir link personalizado
 foxtrick.linkscustom.addlink=Añadir link
@@ -727,11 +727,11 @@ foxtrick.linkscustom.tags=Etiquetas
 foxtrick.linkscustom.help=Ayuda
 foxtrick.linkscustom.helptext=En primer lugar, esto es sólo el modo de edición. Al hacer clic en el encabezado de esta sección cambias entre el modo editor y el modo normal. Sólo en el modo normal tus propios enlaces son totalmente funcionales. Enlaces externos estáticos son fáciles de añadir, basta con añadir la URL completa (por ejemplo\: http\: //alltid.org/league/427/). Para enlaces internos no incluyas a la parte del servidor (Ejemplo\: /World/Series/Default.aspx?LeagueLevelUnitID \= 427). Sólo necesitas las etiquetas para enlaces dinámicos más raros. Con las etiquetas los enlaces cambian dinámicamente con la información de la página que se encuentra. Por ejemplo http\://alltid.org/league/[leagueid] siempre te llevará a la página Alltid de la liga que seacaba de ver en Hattrick. Las etiquetas que están disponibles en cada página se enumeran en el cuadro de selección. Sólo se pueden utilizar las que se enumeran en la página que desea agregar su enlace personalizado. El texto en el cuadro es sólo una plantilla de muestra. Puedes escribir una etiqueta tú mismo (usando []).
 foxtrick.linkscustom.helptext2=También puedes exportar tus enlaces y compartirlos. Para hacer esto haz clic en el botón Exportar y selecciona un archivo para guardar ese enlace. Los enlaces se añaden a ese archivo, por lo tanto, puedes guardar varios enlaces en un solo archivo. Para importar los enlaces ve al cuadro de preferencias y a la opción importar las preferencias. Sólo las entradas en el archivo seleccionado será importadas, que en este caso son los links. Ninguno de los enlaces anteriores se borrará.
-foxtrick.matches.income=Ingresos\:
-foxtrick.tweaks.Birthdays=Cumpleaños
-foxtrick.tweaks.BirthdayToday=Cumpleaños hoy
-foxtrick.tweaks.BirthdayLastWeek=Cumpleaños la semana pasada
-foxtrick.tweaks.BirthdayNextWeek=Cumpleaños la próxima semana
+matches.income=Ingresos\:
+copy.Birthdays=Cumpleaños
+copy.BirthdayToday=Cumpleaños hoy
+copy.BirthdayLastWeek=Cumpleaños la semana pasada
+copy.BirthdayNextWeek=Cumpleaños la próxima semana
 foxtrick.copymatchid=Pulsa para copiar el ID del partido al portapapeles
 foxtrick.ExtendedPlayerDetails.perseason=/ temporada
 
@@ -754,10 +754,10 @@ CurrentSquad=Formación actual
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Acciones
-foxtrick.tweaks.writeinguestbook=Escribir en el libro de visitas
-foxtrick.tweaks.copyplayerad=Copiar información de jugador a portapapeles
-foxtrick.tweaks.copied=La información del jugador ha sido copiada al portapapeles.
+sidebarBox.actions=Acciones
+managerButtons.writeInGuestbook=Escribir en el libro de visitas
+copy.copyplayerad=Copiar información de jugador a portapapeles
+copy.copied=La información del jugador ha sido copiada al portapapeles.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -790,31 +790,31 @@ MatchReportFormat.extraTime=Tiempo extra
 MatchReportFormat.penaltyShootOut=Tanda de penaltis
 MatchReportFormat.result=Resultado
 
-CopySelected.desc=Copiar selección con Ctrl + C.
-SpecialPaste.desc=Pegar con Mayús + clic izquierdo.
+copy.copySelected=Copiar selección con Ctrl + C.
+copy.operaPaste=Pegar con Mayús + clic izquierdo.
 
-foxtrick.tweaks.youthclub=Hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Copiar tabla de habilidades al portapapeles (estilo Hattrick Foro)
-foxtrick.tweaks.skilltablecopied=la tabla de habilidades se ha copiado al portapapeles
-foxtrick.tweaks.matchidcopied=El id del partido ha sido copiado al portapapeles.
-foxtrick.tweaks.postidcopied=El id del post ha sido copiado al portapapeles.
-foxtrick.tweaks.postingcopied=El mensaje ha sido copiado al portapapeles.
-foxtrick.tweaks.youthstatistics=Estadísticas de juveniles ht-ys.org
+copy.youthclub=Hattrick-youthclub.org
+copy.copy.skilltable=Copiar tabla de habilidades al portapapeles (estilo Hattrick Foro)
+copy.copied.skilltable=la tabla de habilidades se ha copiado al portapapeles
+copy.copied.matchid=El id del partido ha sido copiado al portapapeles.
+copy.copied.postid=El id del post ha sido copiado al portapapeles.
+copy.copied.posting=El mensaje ha sido copiado al portapapeles.
+copy.youthstatistics=Estadísticas de juveniles ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Comparación Ataque vs Defensa
-foxtrick.matches.right=Derecha
-foxtrick.matches.left=Izquierda
-foxtrick.matches.center=Centro
-foxtrick.matches.defense=def
-foxtrick.matches.attack=at
-foxtrick.matches.indfreekick=Tiro indirecto
-foxtrick.matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
+matches.attackdefensebars=Comparación Ataque vs Defensa
+matches.right=Derecha
+matches.left=Izquierda
+matches.center=Centro
+matches.defense=def
+matches.attack=at
+matches.indfreekick=Tiro indirecto
+matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Estadísticas de Supporter
+matches.suppstats=Estadísticas de Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -849,14 +849,14 @@ TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
 total_stars=Suma total de estrellas
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Mostrar mapa
-foxtrick.FlagCollectionToMap.HideMap=Ocultar mapa
-foxtrick.FlagCollectionToMap.Africa=África
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Oriente Medio
-foxtrick.FlagCollectionToMap.SAmerica=Sudamérica
-foxtrick.FlagCollectionToMap.World=Mundial
+flagCollectionToMap.ShowMap=Mostrar mapa
+flagCollectionToMap.HideMap=Ocultar mapa
+flagCollectionToMap.Africa=África
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Oriente Medio
+flagCollectionToMap.SAmerica=Sudamérica
+flagCollectionToMap.World=Mundial
 
 # SkillTable
 Skill_table=Tabla de habilidades
@@ -901,14 +901,14 @@ minimum=Al menos
 maximum=Máximo
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Ver por ID
-Senior=Adulto
-Youth=Juvenil
+rapidId.viewById=Ver por ID
+rapidId.senior=Adulto
+rapidId.youth=Juvenil
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Cambia la vista de la tabla.
-foxtrick.SkillTable.Add_homegrown_title=Añadir todos los jugadores promocionados por el equipo desde el actual
-foxtrick.SkillTable.showTimeInClub_title=Muestra el tiempo transcurrido desde que el jugador fue promocionado al equipo senior
+skillTable.switchView=Cambia la vista de la tabla.
+skillTable.addHomegrown=Añadir todos los jugadores promocionados por el equipo desde el actual
+skillTable.showTimeInClub=Muestra el tiempo transcurrido desde que el jugador fue promocionado al equipo senior
 foxtrick.SkillTable.detach=Desasignar
 
 # HTMSPrediction
@@ -978,20 +978,20 @@ LocalTime.local.title=Hora local. Click para cambiar a hora de la zona Hattrick 
 # Links
 
 #actions
-Copy=Copiar
-View=Ver
+button.copy=Copiar
+rapidId.view=Ver
 Switch_view=Cambiar vista
 Detach=Desasignar
 AddHomegrown=Añadir jugadores promocionados por el club
 showTimeInClub=Mostrar tiempo en el club
-sort.up=Arriba
-sort.down=Abajo
-action.clearCache=Eliminar la caché
+button.up=Arriba
+button.down=Abajo
+api.clearCache=Eliminar la caché
 
 # fennec ui
-pageAction.rightSidebar=Mostrar la barra de la derecha
+pageAction.rightMenu=Mostrar la barra de la derecha
 pageAction.mainContent=Mostrar contenido principal
-pageAction.leftSidebar=Mostrar la barra de la izquierda
+pageAction.leftMenu=Mostrar la barra de la izquierda
 pageAction.all=Mostrar todo
 
 # buttons
@@ -1117,10 +1117,10 @@ about.designers=Diseñadores
 prefs.view.by.category=Por categoría
 prefs.view.by.page=Por última página HT
 
-prefs.delete_foxtrick_branches_ask=¿Seguro que quieres restaurar los valores por defecto?\n¡Firefox se reiniciará\!
-prefs.disable_all_foxtrick_modules_ask=¿Desea deshabilitar todos los módulos?\n
-prefs.revoke_permissions_ask=¿Está seguro que desea revocar todos los permisos opcionales?
+prefs.restoreDefault.ask=¿Seguro que quieres restaurar los valores por defecto?\n¡Firefox se reiniciará\!
+prefs.disableAllModules.ask=¿Desea deshabilitar todos los módulos?\n
+prefs.revokePermissions.ask=¿Está seguro que desea revocar todos los permisos opcionales?
 
-prefs.permissionsHint=%s necesita permisos para trabajar. Otórgaselos en el siguiente diálogo.
+prefs.getPermissions.alert=%s necesita permisos para trabajar. Otórgaselos en el siguiente diálogo.
 
 ###EOF
