--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -271,7 +271,7 @@ foxtrick.matchdetail.ifkshort=YFT
 foxtrick.bidconfirmation=Wolst biede op dizze spiler? De priis is %s.
 foxtrick.tlconfirmation=Wolst dizze spiler te keap sette? Dyn fraachpriis is %s.
 foxtrick.conferences.signaturetoggle=Hântekening
-foxtrick.tweaks.selectplayer=Selektear spiler
+copy.selectplayer=Selektear spiler
 foxtrick.linkscustom.selecticon=Selektear ikoan
 foxtrick.linkscustom.addpersonallink=Foegje persoanlike koppeling ta
 foxtrick.linkscustom.addlink=Foegje koppeling ta
@@ -284,7 +284,7 @@ foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Hulp
 foxtrick.linkscustom.helptext=Dit is de editor-kant. Atst klikst op de kop fan dit fak skeakelst tusken editor en normaal úterlik. Dyn koppelings wurkje allinnich folledich yn normaal úterlik. Fêste eksterne koppelings binne ienfâldich ta te foegjen, ful gewoan de hiele url yn (bygelyks\: http\: //alltid.org/league/427/). Foar fêste ynterne koppelings slaast it serverdiel oer (bygelyks\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Tags hast allinnich nedich foar seldsumer dynamyske koppelings. Mei tags wurde de koppelings dynamysk feroare mei de ynfo op de side wêr'tst bist (http\://alltid.org/league/[leagueid] liedt dy bygelyks altyd nei de alltid-side fan de kompetysje dy'tst yn Hattrick iepenstean hast). De beskikbere tags steane per side yn it blêderfak. Do kinst allinnich dy sjen dy't hearre by de side wêr'tst dyn koppeling tafoegest. De tekst dy't oanmakke wurdt is in foarbyld. Do kinst de tag sels skriuwe (mei de []).
 foxtrick.linkscustom.helptext2=Do kinst dyn koppelings ek eksportearje en diele. Om dit te dwaan klikst op de eksportearknop en selektearrest in bestân om de koppeling op te slaan. Koppelings wurde oan dat bestân tafoege, sa kinst meardere koppelings yn ien bestân opslaan. Om koppelings te ymportearjen giest nei it foarkeurenskerm, ûnder ymportear foarkeuren. De foarkeuren yn it selektearre bestân wurde allinnich ymportearre, yn dit gefal binne dat dyn koppelings. Gjin fan dyn foarige koppelings sille ferwidere wurde.
-foxtrick.matches.income=Ynkomsten\:
+matches.income=Ynkomsten\:
 
 
 #following string uses pluralForms
@@ -296,10 +296,10 @@ Coach=Coach
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Aksjes
-foxtrick.tweaks.writeinguestbook=Skriuw yn gastenboek
-foxtrick.tweaks.copyplayerad=Kopiearje spileradvertinsje nei klemboerd
-foxtrick.tweaks.copied=De spileradvertinsje is kopiearre nei it klemboerd.
+sidebarBox.actions=Aksjes
+managerButtons.writeInGuestbook=Skriuw yn gastenboek
+copy.copyplayerad=Kopiearje spileradvertinsje nei klemboerd
+copy.copied=De spileradvertinsje is kopiearre nei it klemboerd.
 
 
 CopyRatings.copied=De wurdearrings binne kopiearre nei it klemboerd.
@@ -309,19 +309,19 @@ CopyRatings.copied=De wurdearrings binne kopiearre nei it klemboerd.
 
 
 #matches
-foxtrick.matches.attackdefensebars=Oanfal - Ferdigening
-foxtrick.matches.right=Rjochts
-foxtrick.matches.left=Links
-foxtrick.matches.center=Sintraal
-foxtrick.matches.defense=ferd
-foxtrick.matches.attack=oanf
-foxtrick.matches.indfreekick=Ynd. frije trapen
-foxtrick.matches.wronglang=Foxtrick\: De stats kinne net toand wurde omdat dyn taal net registrearre is, of omdat de ferkearde taal ynsteld is by foarkeuren. Sjoch nei of dyn Foxtricktaal gelyk is oan dyn Hattricktaal.
+matches.attackdefensebars=Oanfal - Ferdigening
+matches.right=Rjochts
+matches.left=Links
+matches.center=Sintraal
+matches.defense=ferd
+matches.attack=oanf
+matches.indfreekick=Ynd. frije trapen
+matches.wronglang=Foxtrick\: De stats kinne net toand wurde omdat dyn taal net registrearre is, of omdat de ferkearde taal ynsteld is by foarkeuren. Sjoch nei of dyn Foxtricktaal gelyk is oan dyn Hattricktaal.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporterstatistiken
+matches.suppstats=Supporterstatistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -344,14 +344,14 @@ less=minder...
 total_stars=Totaal oantal stjerren
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Toan kaart
-foxtrick.FlagCollectionToMap.HideMap=Ferberch kaart
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asië
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Midden-Easten
-foxtrick.FlagCollectionToMap.SAmerica=Súd-Amearika
-foxtrick.FlagCollectionToMap.World=Wrâld
+flagCollectionToMap.ShowMap=Toan kaart
+flagCollectionToMap.HideMap=Ferberch kaart
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asië
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Midden-Easten
+flagCollectionToMap.SAmerica=Súd-Amearika
+flagCollectionToMap.World=Wrâld
 
 # SkillTable
 
@@ -397,9 +397,9 @@ TickerAlert.sound=Lûd
 #actions
 
 # fennec ui
-pageAction.rightSidebar=Lit rjochter balk sjen
+pageAction.rightMenu=Lit rjochter balk sjen
 pageAction.mainContent=Lit haadinhâld sjen
-pageAction.leftSidebar=Lit linker balk sjen
+pageAction.leftMenu=Lit linker balk sjen
 pageAction.all=Lit alles sjen
 
 # buttons
@@ -461,8 +461,8 @@ prefs.loadSave.import=Ymportear foxtrickfoarkeuren (Foarkeuren kinne oerskreaun 
 
 
 
-prefs.delete_foxtrick_branches_ask=Wolst echt de standertynstellings werom sette?\nFirefox moat hjirfoar herstarte wurde\!
-prefs.disable_all_foxtrick_modules_ask=Wolst echt alle modules útskeakelje?\n
+prefs.restoreDefault.ask=Wolst echt de standertynstellings werom sette?\nFirefox moat hjirfoar herstarte wurde\!
+prefs.disableAllModules.ask=Wolst echt alle modules útskeakelje?\n
 
 
 ###EOF
