--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -778,7 +778,7 @@ foxtrick.ntremoveconfirmation=Da li zaista želite dodati/izbaciti ovog igrača 
 foxtrick.confirmstripserver=Da li zaista želite ukloniti broj servera iz linka za prikladniji prikaz na forumu?
 foxtrick.conferences.signaturetoggle=Potpis
 foxtrick.conferences.markunread=Označi kao nepročitano od ovog posta
-foxtrick.tweaks.selectplayer=Izaberi igrača
+copy.selectplayer=Izaberi igrača
 foxtrick.linkscustom.selecticon=Izaberi ikonu
 foxtrick.linkscustom.addpersonallink=Dodaj vlastiti link
 foxtrick.linkscustom.addlink=Dodaj link
@@ -791,11 +791,11 @@ foxtrick.linkscustom.tags=Oznake
 foxtrick.linkscustom.help=Pomoć
 foxtrick.linkscustom.helptext=Kao prvo, ovo je samo režim za uređivanje. Klikom na zaglavlje ovog okvira prelazi se iz uređivačkog u normalan režim rada. Vaši linkovi su u funkciji samo kada ste u normalnom režimu rada. Vanjske linkove je lako dodati, samo ubacite punu adresu (Primjer\: http\: //alltid.org/league/427/). Za interni statički link preskočite dio koji se odnosi na server (Primjer\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Oznake su vam potrebne samo za rjeđe dinamičke linkove. Uz pomoć oznaka linkovi se dinamički menjaju koristeći informaciju sa stranice na kojoj se trenutno nalazite. Npr. http\://alltid.org/league/[leagueid] će vas uvijek odvesti na 'Alltidovu' stranicu lige koju trenutno pregledavate. Oznake koje su vam dostupne za svaku stranicu prikazane su u padajućem izborniku. Možete koristiti samo oznake koje su navedene na stranici na koju dodajete novi vlastiti link. Tekst koji je naveden je samo primjer. Vaše oznake možete napraviti sami (s pomoću ugl. zagrada - []).
 foxtrick.linkscustom.helptext2=Svoje linkove možete izvoziti i dijeliti s drugim korisnicima. To se može učiniti klikom na link 'Izvezi', te odabirom dokumenta za spremanje. Linkovi se pridodaju u taj dokument, a u isti dokument možete spremiti više linkova. Da biste uvezli linkove, morate otvoriti Foxtrickove postavke i otići na podizbornik s postavkama za 'uvoz/izvoz'. Uvezene će biti samo postavke koje su prikazane u tom dokumentu, u ovom slučaju vaši linkovi. Niti jedan od vaših prethodnih linkova neće biti uklonjen.
-foxtrick.matches.income=Prihod\:
-foxtrick.tweaks.Birthdays=Rođendani
-foxtrick.tweaks.BirthdayToday=Rođendani danas
-foxtrick.tweaks.BirthdayLastWeek=Rođendani prošli tjedan
-foxtrick.tweaks.BirthdayNextWeek=Rođendani sljedeći tjedan
+matches.income=Prihod\:
+copy.Birthdays=Rođendani
+copy.BirthdayToday=Rođendani danas
+copy.BirthdayLastWeek=Rođendani prošli tjedan
+copy.BirthdayNextWeek=Rođendani sljedeći tjedan
 foxtrick.copymatchid=Klikni za kopiranje ID broja utakmice u međuspremnik
 foxtrick.ExtendedPlayerDetails.perseason=/-sezoni
 
@@ -818,10 +818,10 @@ CurrentSquad=Trenutna postava
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Dodatne Radnje
-foxtrick.tweaks.writeinguestbook=Upiši u knjigu gostiju
-foxtrick.tweaks.copyplayerad=Kopiraj igračev ID
-foxtrick.tweaks.copied=Igračev oglas je kopiran u međuspremnik.
+sidebarBox.actions=Dodatne Radnje
+managerButtons.writeInGuestbook=Upiši u knjigu gostiju
+copy.copyplayerad=Kopiraj igračev ID
+copy.copied=Igračev oglas je kopiran u međuspremnik.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -854,31 +854,31 @@ MatchReportFormat.extraTime=Produžetci
 MatchReportFormat.penaltyShootOut=Izvođenje jedanaesteraca
 MatchReportFormat.result=Rezultat
 
-CopySelected.desc=Kopiraj obilježeno sa ctrl + c.
-SpecialPaste.desc=Zalijepi sa shift + lijevi klik.
+copy.copySelected=Kopiraj obilježeno sa ctrl + c.
+copy.operaPaste=Zalijepi sa shift + lijevi klik.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Kopiraj tablicu s vještinama u međuspremnik (HT-ML stil)
-foxtrick.tweaks.skilltablecopied=Tablica sa vještinama kopirana je u međuspremnik.
-foxtrick.tweaks.matchidcopied=ID broj utakmice kopiran je u međuspremnik.
-foxtrick.tweaks.postidcopied=ID broj poruke kopiran je u međuspremnik.
-foxtrick.tweaks.postingcopied=Poruka kopirana je u međuspremnik.
-foxtrick.tweaks.youthstatistics=Statistika jouniora ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Kopiraj tablicu s vještinama u međuspremnik (HT-ML stil)
+copy.copied.skilltable=Tablica sa vještinama kopirana je u međuspremnik.
+copy.copied.matchid=ID broj utakmice kopiran je u međuspremnik.
+copy.copied.postid=ID broj poruke kopiran je u međuspremnik.
+copy.copied.posting=Poruka kopirana je u međuspremnik.
+copy.youthstatistics=Statistika jouniora ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Prikaz 'Napad protiv Obrane'
-foxtrick.matches.right=Desni
-foxtrick.matches.left=Lijevi
-foxtrick.matches.center=Središnji
-foxtrick.matches.defense=obr
-foxtrick.matches.attack=nap
-foxtrick.matches.indfreekick=Ind. slob. udarac
-foxtrick.matches.wronglang=Foxtrick\: Statistika ne može biti prikazana jer vaš jezik nije prijavljen ili niste podesili prikladan jezik u postavkama. Pripazite da odaberete isti jezik kako u Foxtricku tako i u Hattricku.
+matches.attackdefensebars=Prikaz 'Napad protiv Obrane'
+matches.right=Desni
+matches.left=Lijevi
+matches.center=Središnji
+matches.defense=obr
+matches.attack=nap
+matches.indfreekick=Ind. slob. udarac
+matches.wronglang=Foxtrick\: Statistika ne može biti prikazana jer vaš jezik nije prijavljen ili niste podesili prikladan jezik u postavkama. Pripazite da odaberete isti jezik kako u Foxtricku tako i u Hattricku.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Statistike Supportera
+matches.suppstats=Statistike Supportera
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -913,14 +913,14 @@ TeamPopupLinks.OpenNewTab=Otvori u novoj kartici
 total_stars=Ukupan broj zvjezdica
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Prikaži kartu
-foxtrick.FlagCollectionToMap.HideMap=Sakrij kartu
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Azija
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Srednji Istok
-foxtrick.FlagCollectionToMap.SAmerica=Južna Amerika
-foxtrick.FlagCollectionToMap.World=Svijet
+flagCollectionToMap.ShowMap=Prikaži kartu
+flagCollectionToMap.HideMap=Sakrij kartu
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Azija
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Srednji Istok
+flagCollectionToMap.SAmerica=Južna Amerika
+flagCollectionToMap.World=Svijet
 
 # SkillTable
 Skill_table=Tablica vještina
@@ -965,16 +965,16 @@ minimum=Barem
 maximum=Najviše
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Pregled preko ID broja
-Senior=Senior
-Youth=Junior
-Tournaments=Turniri
-Tournament=Turnir
+rapidId.viewById=Pregled preko ID broja
+rapidId.senior=Senior
+rapidId.youth=Junior
+rapidId.tournaments=Turniri
+rapidId.tournament=Turnir
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Promijeni izgled tablice.
-foxtrick.SkillTable.Add_homegrown_title=Dodaje sve domaće igrače od trenutnih
-foxtrick.SkillTable.showTimeInClub_title=Prikaži vrijeme od kad se igrač pridružio klupskoj seniorskoj momčadi
+skillTable.switchView=Promijeni izgled tablice.
+skillTable.addHomegrown=Dodaje sve domaće igrače od trenutnih
+skillTable.showTimeInClub=Prikaži vrijeme od kad se igrač pridružio klupskoj seniorskoj momčadi
 foxtrick.SkillTable.detach=Odvoji
 
 # HTMSPrediction
@@ -1048,21 +1048,21 @@ LocalTime.local.title=Vrijeme u lokalnoj vremenskoj zoni. Klikni na sat za promj
 Links.feeds=Izvori liste linkova (odvojeni redovima)
 
 #actions
-Copy=Kopiraj
-View=Pregled
+button.copy=Kopiraj
+rapidId.view=Pregled
 Switch_view=Promijeni pregled
 Detach=Odvoji
 AddHomegrown=Dodaj domaće igrače
 showTimeInClub=Prikaži vrijeme u klubu
-sort.up=Gore
-sort.down=Dolje
-action.clearCache=Počisti predmemoriju
-action.clearCache.title=Briše FoxTrickovu Xml predmemoriju. FoxTrick skida dodatne informacije s Hattrickovih servera na zahtjev. Prije nego zatvorite web preglednik, FoxTrick će koristiti lokalnu spemljenu kopiju. U rijetkim slučajevima može biti vremenski zastarjelo. Obrišite predmemoriju ako želite da FoxTrick skine opet s dodatnim informacijama.
+button.up=Gore
+button.down=Dolje
+api.clearCache=Počisti predmemoriju
+api.clearCache.title=Briše FoxTrickovu Xml predmemoriju. FoxTrick skida dodatne informacije s Hattrickovih servera na zahtjev. Prije nego zatvorite web preglednik, FoxTrick će koristiti lokalnu spemljenu kopiju. U rijetkim slučajevima može biti vremenski zastarjelo. Obrišite predmemoriju ako želite da FoxTrick skine opet s dodatnim informacijama.
 
 # fennec ui
-pageAction.rightSidebar=Prikaži desnu traku
+pageAction.rightMenu=Prikaži desnu traku
 pageAction.mainContent=Prikaži glavni sadržaj
-pageAction.leftSidebar=Prikaži lijevu traku
+pageAction.leftMenu=Prikaži lijevu traku
 pageAction.all=Prikaži sve
 
 # buttons
@@ -1203,11 +1203,11 @@ about.designers=Dizajneri
 prefs.view.by.category=Pogled po kategorijama
 prefs.view.by.page=Pregled po zadnjoj HT stranici
 
-prefs.delete_foxtrick_branches_ask=Da li ste sigurni da želite vratiti uobičajena podešenja?\nFirefox je potrebno restartati\!
-prefs.delete_oauth_ask=Brisanje OAuth koda za TeamID %s?
-prefs.disable_all_foxtrick_modules_ask=Da li ste sigurni da želite isključiti sve Foxtrickove opcije?\n
-prefs.revoke_permissions_ask=Jeste li sigurni da želite poništiti sve dozvole?
+prefs.restoreDefault.ask=Da li ste sigurni da želite vratiti uobičajena podešenja?\nFirefox je potrebno restartati\!
+prefs.deleteToken.ask=Brisanje OAuth koda za TeamID %s?
+prefs.disableAllModules.ask=Da li ste sigurni da želite isključiti sve Foxtrickove opcije?\n
+prefs.revokePermissions.ask=Jeste li sigurni da želite poništiti sve dozvole?
 
-prefs.permissionsHint=%s treba dozvolu za rad. Dopusti pristup u sljedećem dijaloškom okviru. Ako odbijete ova opcija će biti isključena.
+prefs.getPermissions.alert=%s treba dozvolu za rad. Dopusti pristup u sljedećem dijaloškom okviru. Ako odbijete ova opcija će biti isključena.
 
 ###EOF
