--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -689,7 +689,7 @@ foxtrick.ntremoveconfirmation=Valóban behívod/kirúgod ezt a játékost?
 foxtrick.confirmstripserver=Valóban eltávolítod a szerverszámokat a hivatkozásokból, hogy használhatóbbak legyenek a fórumban?
 foxtrick.conferences.signaturetoggle=Aláírás
 foxtrick.conferences.markunread=Olvasatlannak jelölés innentől
-foxtrick.tweaks.selectplayer=Játékos kiválasztása
+copy.selectplayer=Játékos kiválasztása
 foxtrick.linkscustom.selecticon=Ikon kiválasztása
 foxtrick.linkscustom.addpersonallink=Személyes hivatkozás hozzáadása
 foxtrick.linkscustom.addlink=Hivatkozás hozzáadása
@@ -702,11 +702,11 @@ foxtrick.linkscustom.tags=Azonosítók
 foxtrick.linkscustom.help=Súgó
 foxtrick.linkscustom.helptext=Ez csak a szerkesztő mód. A szerkesztő és a normál mód között a mező fejlécére kattintva tudsz váltani. A saját hivatkozásaid csak normál módban működnek rendesen. A külső statikus hivatkozások hozzáadása egyszerű\: csak írd be a teljes URL-címet (pl. http\: //alltid.org/league/427/). Belső statikus hivatkozások hozzáadásánál hagyd ki a kiszolgálóra utaló részt (pl. /World/Series/Default.aspx?LeagueLevelUnitID\=427). Azonosítókra csak a ritkább dinamikus hivatkozások esetében van szükség. Az azonosítókkal a hivatkozások dinamikusan változnak, és felhasználják azt az információt is, hogy melyik oldalon vagy. Pl. a http\://alltid.org/league/[leagueid] mindig annak a csoportnak az Alltid-oldalára visz, amelyet éppen megtekintettél a Hattrickben. Az egyes oldalakhoz felhasználható azonosítók felsorolását a legördülő menüben találod. Csak azokat tudod felhasználni, amelyek fel vannak sorolva azon az oldalon, ahová a saját hivatkozásodat szeretnéd hozzáadni. A szövegmezőben létrehozott szöveg mindössze egyszerű sablon. Azonosítót Te magad is beírhatsz (a [] felhasználásával).
 foxtrick.linkscustom.helptext2=A hivatkozásokat exportálhatod és megoszthatod. Ehhez kattints az Exportálás gombra, és a hivatkozás mentéséhez válaszd ki a fájlt. A hivatkozások az adott fájlhoz csatlakoznak, így egy fájllal több hivatkozást is menteni tudsz. A hivatkozások importálásához nyisd meg a Beállítások párbeszédpanelt, és válaszd ki „A beállítások importálása” lehetőséget. Importálni csak a kiválasztott fájlban megjelenő adatokat lehet, amelyek ebben az esetben a Te hivatkozásaid. A korábbi hivatkozásaid nem törlődnek.
-foxtrick.matches.income=Bevétel\:
-foxtrick.tweaks.Birthdays=Születésnapok
-foxtrick.tweaks.BirthdayToday=Mai születésnapok
-foxtrick.tweaks.BirthdayLastWeek=Születésnapok a múlt héten
-foxtrick.tweaks.BirthdayNextWeek=Születésnapok a jövő héten
+matches.income=Bevétel\:
+copy.Birthdays=Születésnapok
+copy.BirthdayToday=Mai születésnapok
+copy.BirthdayLastWeek=Születésnapok a múlt héten
+copy.BirthdayNextWeek=Születésnapok a jövő héten
 foxtrick.copymatchid=A mérkőzésazonosító vágólapra másolásához kattints ide
 foxtrick.ExtendedPlayerDetails.perseason=/szezon
 
@@ -727,10 +727,10 @@ CurrentSquad=Aktuális keret
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Műveletek
-foxtrick.tweaks.writeinguestbook=Írj a vendégkönyvbe
-foxtrick.tweaks.copyplayerad=A játékoshirdetés vágólapra másolása
-foxtrick.tweaks.copied=A játékoshirdetést vágólapra másoltad.
+sidebarBox.actions=Műveletek
+managerButtons.writeInGuestbook=Írj a vendégkönyvbe
+copy.copyplayerad=A játékoshirdetés vágólapra másolása
+copy.copied=A játékoshirdetést vágólapra másoltad.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -763,31 +763,31 @@ MatchReportFormat.extraTime=Hosszabbítás
 MatchReportFormat.penaltyShootOut=Tizenegyespárbaj
 MatchReportFormat.result=Eredmény
 
-CopySelected.desc=Kijelölés másolása\: Ctrl + C.
-SpecialPaste.desc=Beillesztés Shift + bal kattintás együtt.
+copy.copySelected=Kijelölés másolása\: Ctrl + C.
+copy.operaPaste=Beillesztés Shift + bal kattintás együtt.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=A képességek vágólapra másolása (HT-ML-ben)
-foxtrick.tweaks.skilltablecopied=A képességtáblázat forráskódját vágólapra másoltad.
-foxtrick.tweaks.matchidcopied=A mérkőzésazonosítót vágólapra másoltad.
-foxtrick.tweaks.postidcopied=A hozzászólás azonosítóját [hozzászólás\=%s] vágólapra másoltad.
-foxtrick.tweaks.postingcopied=A következő hozzászólást\: %s vágólapra másoltad.
-foxtrick.tweaks.youthstatistics=Ifi statisztikák ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=A képességek vágólapra másolása (HT-ML-ben)
+copy.copied.skilltable=A képességtáblázat forráskódját vágólapra másoltad.
+copy.copied.matchid=A mérkőzésazonosítót vágólapra másoltad.
+copy.copied.postid=A hozzászólás azonosítóját [hozzászólás\=%s] vágólapra másoltad.
+copy.copied.posting=A következő hozzászólást\: %s vágólapra másoltad.
+copy.youthstatistics=Ifi statisztikák ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Támadás kontra védekezés
-foxtrick.matches.right=Jobb oldal
-foxtrick.matches.left=Bal oldal
-foxtrick.matches.center=Közép
-foxtrick.matches.defense=véd.
-foxtrick.matches.attack=tám.
-foxtrick.matches.indfreekick=Közv. pontrúgás
-foxtrick.matches.wronglang=FoxTrick\: a statisztikákat nem lehet megjeleníteni, mivel az általad használt nyelv nincs regisztrálva, vagy mert rossz nyelvet adtál meg a beállítások között. Ellenőrizd, hogy a FoxTrick nyelve megegyezik-e Hattricken használt nyelvvel.
+matches.attackdefensebars=Támadás kontra védekezés
+matches.right=Jobb oldal
+matches.left=Bal oldal
+matches.center=Közép
+matches.defense=véd.
+matches.attack=tám.
+matches.indfreekick=Közv. pontrúgás
+matches.wronglang=FoxTrick\: a statisztikákat nem lehet megjeleníteni, mivel az általad használt nyelv nincs regisztrálva, vagy mert rossz nyelvet adtál meg a beállítások között. Ellenőrizd, hogy a FoxTrick nyelve megegyezik-e Hattricken használt nyelvvel.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Támogatói statisztikák
+matches.suppstats=Támogatói statisztikák
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -822,14 +822,14 @@ TeamPopupLinks.OpenNewTab=Megnyitás új lapon
 total_stars=Összes csillag
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=A térkép megjelenítése
-foxtrick.FlagCollectionToMap.HideMap=A térkép elrejtése
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Ázsia
-foxtrick.FlagCollectionToMap.Europe=Európa
-foxtrick.FlagCollectionToMap.MEast=Közel-Kelet
-foxtrick.FlagCollectionToMap.SAmerica=Dél-Amerika
-foxtrick.FlagCollectionToMap.World=Világ
+flagCollectionToMap.ShowMap=A térkép megjelenítése
+flagCollectionToMap.HideMap=A térkép elrejtése
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Ázsia
+flagCollectionToMap.Europe=Európa
+flagCollectionToMap.MEast=Közel-Kelet
+flagCollectionToMap.SAmerica=Dél-Amerika
+flagCollectionToMap.World=Világ
 
 # SkillTable
 Skill_table=Képességtáblázat
@@ -874,13 +874,13 @@ minimum=Legalább
 maximum=Legfeljebb
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Megtekintés az azonosító alapján
-Senior=Felnőtt
-Youth=Ifi
+rapidId.viewById=Megtekintés az azonosító alapján
+rapidId.senior=Felnőtt
+rapidId.youth=Ifi
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=A táblázat nézetének felcserélése
-foxtrick.SkillTable.showTimeInClub_title=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
+skillTable.switchView=A táblázat nézetének felcserélése
+skillTable.showTimeInClub=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
 foxtrick.SkillTable.detach=Leválasztás
 
 # HTMSPrediction
@@ -952,19 +952,19 @@ LocalTime.local.title=Idő a helyi időzóna szerint. Kattins az órára a Hattr
 Links.feeds=Linklisták forrása (sortörésekkel elválasztva)
 
 #actions
-Copy=Másolás
-View=Megtekintés
+button.copy=Másolás
+rapidId.view=Megtekintés
 Switch_view=A nézet felcserélése
 Detach=Leválasztás
 showTimeInClub=Mutassa a klubban töltött időt
-sort.up=Fel
-sort.down=Le
-action.clearCache=A gyorsítótár ürítése
+button.up=Fel
+button.down=Le
+api.clearCache=A gyorsítótár ürítése
 
 # fennec ui
-pageAction.rightSidebar=Jobb hasáb megjelenítése
+pageAction.rightMenu=Jobb hasáb megjelenítése
 pageAction.mainContent=Fő tartalom megjelenítése
-pageAction.leftSidebar=Bal hasáb mutatása
+pageAction.leftMenu=Bal hasáb mutatása
 pageAction.all=Az összes megjelenítése
 
 # buttons
@@ -1077,9 +1077,9 @@ about.translators=Fordítók
 about.designers=Tervezők
 
 
-prefs.delete_foxtrick_branches_ask=Biztosan visszaállítod az alapértelmezett beállításokat?
-prefs.disable_all_foxtrick_modules_ask=Biztosan kikapcsolod az összes modult?
+prefs.restoreDefault.ask=Biztosan visszaállítod az alapértelmezett beállításokat?
+prefs.disableAllModules.ask=Biztosan kikapcsolod az összes modult?
 
-prefs.permissionsHint=A következőnek\: %s engedélyre van szüksége a működéshez. Engedélyezd a hozzáférést a következő dialógusban. Ha elutasítod, akkor ennek a modulnak a funkcionalitása le lesz tiltva.
+prefs.getPermissions.alert=A következőnek\: %s engedélyre van szüksége a működéshez. Engedélyezd a hozzáférést a következő dialógusban. Ha elutasítod, akkor ennek a modulnak a funkcionalitása le lesz tiltva.
 
 ###EOF
