--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -624,7 +624,7 @@ foxtrick.ntremoveconfirmation=Ertu viss að þú viljir bæta/fjarlægja leikman
 foxtrick.confirmstripserver=Viltu fjarlægja hattrick netþjónana frá þessum tengli til að gera notfæran á spjallborðunum?
 foxtrick.conferences.signaturetoggle=Undirskrift
 foxtrick.conferences.markunread=Merkja sem ólesið frá héðan
-foxtrick.tweaks.selectplayer=Velja leikmann
+copy.selectplayer=Velja leikmann
 foxtrick.linkscustom.selecticon=Velja tákn
 foxtrick.linkscustom.addpersonallink=Bæta við persónlegum tengli
 foxtrick.linkscustom.addlink=Bæta við tengli
@@ -637,11 +637,11 @@ foxtrick.linkscustom.tags=Merki
 foxtrick.linkscustom.help=Hjálp
 foxtrick.linkscustom.helptext=Í fyrsta lagi, þá er þetta bara ritilssnið. Með því að smella á síðuhausinn í þessum ramma þá skiptir þú á milli ritilssnið og venjulegs sniðs. Tenglarnir þínir virka eingöngu að fullu í venjulegu sniði. Utanaðkomandi fastir tenglar er auðvelt að bæta við, bættu bara við öllu veffanginu (url) (Dæmi\: http\: //alltid.org/league/427/). Fyrir innri fasta tengla skaltu sleppa netþjónahlutanum (Dæmi\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Þú þarft aðeins merkin fyrir fátíð kvika tengla. Með merkjum er tenglunum breytt kviklega með upplýsingunum af síðunni sem þú ert á. Sem dæmi http\://alltid.org/league/[leagueid] myndi alltaf leiða þig á Alltid síðuna á deildinni sem þú ert að skoða á Hattrick. Merkin sem eru tiltæk á hverri síðu er listuð í valglugganum. Þú getur aðeins notað þau sem eru á listanum á síðunni sem þú ert að bæta sérsniðna tengilinum þínum. Textinn í glugganum er eingöngu sýnishornarsniðmát. Þú getur skrifað þitt merki (með því að nota []).
 foxtrick.linkscustom.helptext2=Þú getur einnig flutt út tenglana þína og deilt þeim. Til að gera það þá þarftu að smella á 'Flytja út' hnappinn og velja skrá til að vista tengilinn. Tenglum er bætt við þá skrá, þess vegna getur þú vistað marga tengla í einni skrá. Til að flytja inn tengla farðu þá í stillingargluggann og farðu í 'flytja inn´ stillingar. Aðeins færslur í valdri skrá verða fluttar inn, sem í þessu tilviki eru þínir tenglar. Enginn af fyrri tenglum þínum verður eytt.
-foxtrick.matches.income=Tekjur\:
-foxtrick.tweaks.Birthdays=Afmælisdagar
-foxtrick.tweaks.BirthdayToday=Afmæli í dag
-foxtrick.tweaks.BirthdayLastWeek=Afmæli í síðustu viku
-foxtrick.tweaks.BirthdayNextWeek=Afmæli í næstu viku
+matches.income=Tekjur\:
+copy.Birthdays=Afmælisdagar
+copy.BirthdayToday=Afmæli í dag
+copy.BirthdayLastWeek=Afmæli í síðustu viku
+copy.BirthdayNextWeek=Afmæli í næstu viku
 foxtrick.copymatchid=Smelltu til að afrita leikjanúmer á klippiborð
 foxtrick.ExtendedPlayerDetails.perseason=/tímabil
 
@@ -663,10 +663,10 @@ Coach=Þjálfari
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Aðgerðir
-foxtrick.tweaks.writeinguestbook=Skrifa í Gestabók
-foxtrick.tweaks.copyplayerad=Afrita leikmannaauglýsingu á klippiborðið
-foxtrick.tweaks.copied=Leikmannaauglýsingin hefur verið afrituð á klippiborðið.
+sidebarBox.actions=Aðgerðir
+managerButtons.writeInGuestbook=Skrifa í Gestabók
+copy.copyplayerad=Afrita leikmannaauglýsingu á klippiborðið
+copy.copied=Leikmannaauglýsingin hefur verið afrituð á klippiborðið.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -683,27 +683,27 @@ CopyRatings.copied=Einkunnagjöfin hefur verið afrituð á klippiborðið.
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Afrita hæfnistöflu á klippiborðið (í HT-ML)
-foxtrick.tweaks.skilltablecopied=Hæfnistafla hefur verið afrituð á klippiborðið.
-foxtrick.tweaks.matchidcopied=Leikjanúmer hefur verið afritað á klippiborðið.
-foxtrick.tweaks.postidcopied=Svarnúmer [post\=%s] hefur verið afritað á klippiborðið.
-foxtrick.tweaks.postingcopied=Spjallpóstur %s hefur verið afritaður á klippiborðið.
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Afrita hæfnistöflu á klippiborðið (í HT-ML)
+copy.copied.skilltable=Hæfnistafla hefur verið afrituð á klippiborðið.
+copy.copied.matchid=Leikjanúmer hefur verið afritað á klippiborðið.
+copy.copied.postid=Svarnúmer [post\=%s] hefur verið afritað á klippiborðið.
+copy.copied.posting=Spjallpóstur %s hefur verið afritaður á klippiborðið.
 
 #matches
-foxtrick.matches.attackdefensebars=Sókn gegn Vörn
-foxtrick.matches.right=Hægri
-foxtrick.matches.left=Vinstri
-foxtrick.matches.center=Miðja
-foxtrick.matches.defense=vörn
-foxtrick.matches.attack=sókn
-foxtrick.matches.indfreekick=Óbein föst leikatriði
-foxtrick.matches.wronglang=FoxTrick\: Ekki er hægt að sýna tölfræðina vegna þess að tungumálið þitt er ekki skrásett eða vegna þess að þú hefur stillt á rangt tungumál í stillingunum. Vinsamlegast gangið úr skugga um að tungumálið í FoxTrick sé hið sama og þú notar í Hattrick.
+matches.attackdefensebars=Sókn gegn Vörn
+matches.right=Hægri
+matches.left=Vinstri
+matches.center=Miðja
+matches.defense=vörn
+matches.attack=sókn
+matches.indfreekick=Óbein föst leikatriði
+matches.wronglang=FoxTrick\: Ekki er hægt að sýna tölfræðina vegna þess að tungumálið þitt er ekki skrásett eða vegna þess að þú hefur stillt á rangt tungumál í stillingunum. Vinsamlegast gangið úr skugga um að tungumálið í FoxTrick sé hið sama og þú notar í Hattrick.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter tölfræði
+matches.suppstats=Supporter tölfræði
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -737,14 +737,14 @@ TeamPopupLinks.ShowOnMore=Sýna á fleiru
 total_stars=Samtals stjörnur
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Sýna kort
-foxtrick.FlagCollectionToMap.HideMap=Fela kort
-foxtrick.FlagCollectionToMap.Africa=Afríka
-foxtrick.FlagCollectionToMap.Asia=Asía
-foxtrick.FlagCollectionToMap.Europe=Evrópa
-foxtrick.FlagCollectionToMap.MEast=Austurlönd nær
-foxtrick.FlagCollectionToMap.SAmerica=Suður Ameríka
-foxtrick.FlagCollectionToMap.World=Heimurinn
+flagCollectionToMap.ShowMap=Sýna kort
+flagCollectionToMap.HideMap=Fela kort
+flagCollectionToMap.Africa=Afríka
+flagCollectionToMap.Asia=Asía
+flagCollectionToMap.Europe=Evrópa
+flagCollectionToMap.MEast=Austurlönd nær
+flagCollectionToMap.SAmerica=Suður Ameríka
+flagCollectionToMap.World=Heimurinn
 
 # SkillTable
 Skill_table=Hæfnistafla
@@ -786,12 +786,12 @@ minimum=Minnst
 maximum=Mest
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Skoða eftir ID
-Senior=Eldri
-Youth=Yngri
+rapidId.viewById=Skoða eftir ID
+rapidId.senior=Eldri
+rapidId.youth=Yngri
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Breyta um sýn á töflunni.
+skillTable.switchView=Breyta um sýn á töflunni.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Spáð úrslit
@@ -848,8 +848,8 @@ ticker.type.others=Annað
 # Links
 
 #actions
-Copy=Afrita
-View=Skoða
+button.copy=Afrita
+rapidId.view=Skoða
 Switch_view=Breyta sýn
 
 # fennec ui
@@ -964,8 +964,8 @@ about.translators=Þýðendur
 about.designers=Hönnuður
 
 
-prefs.delete_foxtrick_branches_ask=Ertu viss um að þú viljir endurheimta sjálfgefnar stillingar?
-prefs.disable_all_foxtrick_modules_ask=Ertu viss um að þú viljir aftengja allar einingar?
+prefs.restoreDefault.ask=Ertu viss um að þú viljir endurheimta sjálfgefnar stillingar?
+prefs.disableAllModules.ask=Ertu viss um að þú viljir aftengja allar einingar?
 
 
 ###EOF
