--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -380,7 +380,7 @@ foxtrick.bidconfirmation=Wëlls de wierklech eng Offer fir dëse Spiller maachen
 foxtrick.tlconfirmation=Wëlls de dëse Spiller wierklech op den Transfermaart setzen? De Mindestpräis ass %s.
 foxtrick.ntremoveconfirmation=Wëlls de dëse Spiller wierklech an däi Kader ophuelen/aus dengem Kader erausgeheien?
 foxtrick.conferences.signaturetoggle=Signatur
-foxtrick.tweaks.selectplayer=Spiller wielen
+copy.selectplayer=Spiller wielen
 foxtrick.linkscustom.selecticon=Ikon wielen
 foxtrick.linkscustom.addpersonallink=Perséinleche Link dobäisetzen
 foxtrick.linkscustom.addlink=Link dobäisetzen
@@ -393,10 +393,10 @@ foxtrick.linkscustom.tags=Tagen
 foxtrick.linkscustom.help=Hëllef
 foxtrick.linkscustom.helptext=Du bass just am Modus fir ze änneren. Klick op de Kapp vun dëser Këscht fir tëschent dem Ännerungsmodus an dem normale Modus hin- an hierzewiesselen. Deng eege Links fonctionnéieren nëmmen am normale Modus komplett. Extern statesch Links kënne ganz liicht dobäigesat ginn, setz einfach déi voll URL dobäi (Beispill\: http\: //alltid.org/league/427/). Looss deen Deel ewech, deen de Server concernéiert, wann s de intern statesch Links bastele wëlls (Beispill\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Tage brauchs de nëmme fir méi seelen dynamesch Links. Mat den Tage ginn d'Links automatesch geännert am Zesummenhang mat der Säit op där s de deen Ament bass. Zum Beispill géif dech http\://alltid.org/league/[leagueid] ëmmer op d'Alltid-Säit vun där Liga bréngen, déi s de grad bei Hattrick kucks. D'Tagen, séi op där Säit op där s de grad bass, disponibel sinn, stinn an der Këscht. Du kanns nëmmen déi Tage benotzen, déi op där Säit stinn, op där s de däi perséinleche Link wëlls hunn. Den Text an der Këscht ass just e Beispill. Du kanns selwer en Tag bastelen (mat der Hëllef vun []).
 foxtrick.linkscustom.helptext2=Du kanns deng Links och exportéiren a mat anere Leit deelen. Fir dat ze maachen, muss de op de Knäppchen 'Exportéieren' klicken an e Fichier auswielen, fir de Link ze späicheren. Links ginn a de Fichier dobäigesat, sou datt s de e puer Links an deem Fichier späichere kanns. Fir Links ze importéiere geess de an d'Astellungen an dono klicks de op de Knäppche fir ze Importéieren. Nëmmen déi Links, déi am Fichier stinn, dee gewielt gëtt, ginn importéiert. Dat sinn an dengem Fall deng Links. Kee vun deene Links, déi s de scho vu virdrun hues, gëtt geläscht.
-foxtrick.matches.income=Revenu\:
-foxtrick.tweaks.Birthdays=Gebuertsdeeg
-foxtrick.tweaks.BirthdayLastWeek=Gebuertsdeeg vun der leschter Woch
-foxtrick.tweaks.BirthdayNextWeek=Gebuertsdeeg vun der nächster Woch
+matches.income=Revenu\:
+copy.Birthdays=Gebuertsdeeg
+copy.BirthdayLastWeek=Gebuertsdeeg vun der leschter Woch
+copy.BirthdayNextWeek=Gebuertsdeeg vun der nächster Woch
 foxtrick.copymatchid=Klick, fir d'MatchID an d'Tëschepalette ze kopéieren
 foxtrick.ExtendedPlayerDetails.perseason=/ Saison
 
@@ -412,10 +412,10 @@ Coach=Trainer
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Aktiounen
-foxtrick.tweaks.writeinguestbook=An d'Gëllent Buch schreiwen
-foxtrick.tweaks.copyplayerad=Annonce fir de Spiller an d'Tëschepalette kopéieren.
-foxtrick.tweaks.copied=D'Annonce fir de Spiller gouf an d'Tëschepalette kopéiert.
+sidebarBox.actions=Aktiounen
+managerButtons.writeInGuestbook=An d'Gëllent Buch schreiwen
+copy.copyplayerad=Annonce fir de Spiller an d'Tëschepalette kopéieren.
+copy.copied=D'Annonce fir de Spiller gouf an d'Tëschepalette kopéiert.
 
 
 CopyRatings.copied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéiert.
@@ -423,25 +423,25 @@ CopyRatings.copied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéiert
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.matchidcopied=D'ID vum Match gouf an d'Tëschepalette kopéiert.
-foxtrick.tweaks.postidcopied=D'ID vum Message gouf an d'Tëschepalette kopéiert.
-foxtrick.tweaks.postingcopied=De Message gouf an d'Tëschepalette kopéiert.
+copy.youthclub=hattrick-youthclub.org
+copy.copied.matchid=D'ID vum Match gouf an d'Tëschepalette kopéiert.
+copy.copied.postid=D'ID vum Message gouf an d'Tëschepalette kopéiert.
+copy.copied.posting=De Message gouf an d'Tëschepalette kopéiert.
 
 #matches
-foxtrick.matches.attackdefensebars=Stuerm géint Verteidegung
-foxtrick.matches.right=Riets
-foxtrick.matches.left=Lénks
-foxtrick.matches.center=Zentral
-foxtrick.matches.defense=Vert
-foxtrick.matches.attack=Stuerm
-foxtrick.matches.indfreekick=Indir. Fräistéiss
-foxtrick.matches.wronglang=FoxTrick\: D'Statistike kënnen net gewise ginn, well deng Sprooch net registréiert ass oder well déi falsch Sprooch an den Astellunge gewielt gouf. D'FoxTrick-Sprooch muss déi selwecht Sprooch si wéi déi Sprooch, déi s de bei Hattrick benotz.
+matches.attackdefensebars=Stuerm géint Verteidegung
+matches.right=Riets
+matches.left=Lénks
+matches.center=Zentral
+matches.defense=Vert
+matches.attack=Stuerm
+matches.indfreekick=Indir. Fräistéiss
+matches.wronglang=FoxTrick\: D'Statistike kënnen net gewise ginn, well deng Sprooch net registréiert ass oder well déi falsch Sprooch an den Astellunge gewielt gouf. D'FoxTrick-Sprooch muss déi selwecht Sprooch si wéi déi Sprooch, déi s de bei Hattrick benotz.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter-Statistiken
+matches.suppstats=Supporter-Statistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -468,14 +468,14 @@ less=manner...
 total_stars=Zomm vun de Stären
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Kaart weisen
-foxtrick.FlagCollectionToMap.HideMap=Kaart verstoppen
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asien
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Mëttleren Osten
-foxtrick.FlagCollectionToMap.SAmerica=Südamerika
-foxtrick.FlagCollectionToMap.World=Welt
+flagCollectionToMap.ShowMap=Kaart weisen
+flagCollectionToMap.HideMap=Kaart verstoppen
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asien
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Mëttleren Osten
+flagCollectionToMap.SAmerica=Südamerika
+flagCollectionToMap.World=Welt
 
 # SkillTable
 
@@ -582,8 +582,8 @@ prefs.additional.title=Zousätzlech Optiounen
 
 
 
-prefs.delete_foxtrick_branches_ask=Bass de sécher, datt s de alles wëlls op déi normal Wäerter zrécksetzen?\nFirefox muss frësch opgemaach ginn, fir datt dës Ännerung gräift\!
-prefs.disable_all_foxtrick_modules_ask=Bass de sécher, datt s de all d'Moduler wëlls ofschalten?\n
+prefs.restoreDefault.ask=Bass de sécher, datt s de alles wëlls op déi normal Wäerter zrécksetzen?\nFirefox muss frësch opgemaach ginn, fir datt dës Ännerung gräift\!
+prefs.disableAllModules.ask=Bass de sécher, datt s de all d'Moduler wëlls ofschalten?\n
 
 
 ###EOF
