--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -772,7 +772,7 @@ foxtrick.ntremoveconfirmation=Ar tikrai norite priimti ar išmesti šį žaidėj
 foxtrick.confirmstripserver=Ar norite pašalinti nuorodos serverio pavadinimą, kad ja galėtų naudotis visi?
 foxtrick.conferences.signaturetoggle=Parašas
 foxtrick.conferences.markunread=Pažymėti neperskaitytomis nuo čia
-foxtrick.tweaks.selectplayer=Pasirinkti žaidėją
+copy.selectplayer=Pasirinkti žaidėją
 foxtrick.linkscustom.selecticon=Pasirinkti paveikslėlį
 foxtrick.linkscustom.addpersonallink=Pridėti asmeninę nuorodą
 foxtrick.linkscustom.addlink=Pridėti nuorodą
@@ -785,11 +785,11 @@ foxtrick.linkscustom.tags=Žymės
 foxtrick.linkscustom.help=Pagalba
 foxtrick.linkscustom.helptext=Tai yra redaktoriaus režimas. Normalų ir redaktoriaus režimą galima pakeisti paspaudus šios skilties antraštę. Jūsų nuorodos veikia tik normaliame režime. Pridėti pastovias išorines nuorodas yra labai paprasta. Jums reikia tik pridėti nuorodos adresą, pavyzdžiui, „http\://alltid.org/league/427/“. Pridėdami pastovias vidines nuorodas praleiskite serverio informaciją, pavyzdžiui, „/World/Series/Default.aspx?LeagueLevelUnitID\=427“. Žymės reikalingos tik kintančioms nuorodoms. Naudojant žymes nuorodos automatiškai pasikeičia, panaudodamos esamo puslapio informaciją. Pavyzdžiui, "http\://alltid.org/league/[leagueid]" Jus visada nukreips į tą Alltid puslapį, kuriame yra informacija apie lygą, kurios puslapį naršote (žymė „[leagueid]“). Kiekviename puslapyje veikiančios žymės yra surašytos iššokančiame sąraše. Galite naudoti tik tas žymes, kurios veikia puslapyje, kuriame yra nuoroda. Šiuo metu parašytas tekstas yra tik pavyzdys. Žymę galite įrašyti patys (reikia naudoti laužtinius skliaustelius []).
 foxtrick.linkscustom.helptext2=Jūs taip pat galite išsaugoti ir pasidalinti savo nuorodomis su kitais. Paspauskite mygtuką "Išsaugoti" ir pasirinkite rinkmeną, kurioje norite išsaugoti informaciją. Nuorodos įrašomos rinkmenos pabaigoje, todėl vienoje rinkmenoje galite išsaugoti daug nuorodų. Norėdami įkelti nuorodas iš failo, turite tai atlikti Foxtrick nustatymų skiltyje "Išsaugojimo/įkėlimo nustatymai". Bus įkelti tik tie nustatymai (šiuo atveju – Jūsų nuorodos), kurie yra išsaugoti rinkmenoje. Anksčiau sukurtos nuorodos neišnyks.
-foxtrick.matches.income=Pajamos\:
-foxtrick.tweaks.Birthdays=Gimtadieniai
-foxtrick.tweaks.BirthdayToday=Gimtadieniai šiandien
-foxtrick.tweaks.BirthdayLastWeek=Gimtadieniai praeitą sav.
-foxtrick.tweaks.BirthdayNextWeek=Gimtadieniai ateinančią sav.
+matches.income=Pajamos\:
+copy.Birthdays=Gimtadieniai
+copy.BirthdayToday=Gimtadieniai šiandien
+copy.BirthdayLastWeek=Gimtadieniai praeitą sav.
+copy.BirthdayNextWeek=Gimtadieniai ateinančią sav.
 foxtrick.copymatchid=Spauskite čia, jei norite nukopijuoti rungtynių ID
 foxtrick.ExtendedPlayerDetails.perseason=per sez.
 
@@ -812,10 +812,10 @@ CurrentSquad=Dabartinė sudėtis
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Veiksmai
-foxtrick.tweaks.writeinguestbook=Rašyti į svečių knygą
-foxtrick.tweaks.copyplayerad=Kopijuoti informaciją
-foxtrick.tweaks.copied=Žaidėjo informacija nukopijuota.
+sidebarBox.actions=Veiksmai
+managerButtons.writeInGuestbook=Rašyti į svečių knygą
+copy.copyplayerad=Kopijuoti informaciją
+copy.copied=Žaidėjo informacija nukopijuota.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -848,31 +848,31 @@ MatchReportFormat.extraTime=Pratęsimas
 MatchReportFormat.penaltyShootOut=Baudinių serija
 MatchReportFormat.result=Rezultatas
 
-CopySelected.desc=Nukopijuoti pažymėtą turinį paspaudus Ctrl + C.
-SpecialPaste.desc=Įterpti paspaudus Shift + Kairysis pelės mygtukas.
+copy.copySelected=Nukopijuoti pažymėtą turinį paspaudus Ctrl + C.
+copy.operaPaste=Įterpti paspaudus Shift + Kairysis pelės mygtukas.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Nukopijuoti įgūdžių lentelę (HT-ML formatu)
-foxtrick.tweaks.skilltablecopied=Įgūdžių lentelė nukopijuota.
-foxtrick.tweaks.matchidcopied=Rungtynių ID nukopijuotas.
-foxtrick.tweaks.postidcopied=Žinutės ID [post\=%s] nukopijuotas.
-foxtrick.tweaks.postingcopied=Žinutė %s nukopijuota.
-foxtrick.tweaks.youthstatistics=Jaunių statistika ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Nukopijuoti įgūdžių lentelę (HT-ML formatu)
+copy.copied.skilltable=Įgūdžių lentelė nukopijuota.
+copy.copied.matchid=Rungtynių ID nukopijuotas.
+copy.copied.postid=Žinutės ID [post\=%s] nukopijuotas.
+copy.copied.posting=Žinutė %s nukopijuota.
+copy.youthstatistics=Jaunių statistika ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Atakos ir Gynybos juostelės
-foxtrick.matches.right=Dešinė
-foxtrick.matches.left=Kairė
-foxtrick.matches.center=Centras
-foxtrick.matches.defense=Gynyba
-foxtrick.matches.attack=Ataka
-foxtrick.matches.indfreekick=Net. baudos smūgiai
-foxtrick.matches.wronglang=FoxTrick\: Statistika negali būti parodyta, nes nustatyta neteisinga kalba. Prašome Foxtrick nustatymuose pasirinkti tokią kalbą, kokia nustatyta Hattrick puslapyje.
+matches.attackdefensebars=Atakos ir Gynybos juostelės
+matches.right=Dešinė
+matches.left=Kairė
+matches.center=Centras
+matches.defense=Gynyba
+matches.attack=Ataka
+matches.indfreekick=Net. baudos smūgiai
+matches.wronglang=FoxTrick\: Statistika negali būti parodyta, nes nustatyta neteisinga kalba. Prašome Foxtrick nustatymuose pasirinkti tokią kalbą, kokia nustatyta Hattrick puslapyje.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Rėmėjo statistika
+matches.suppstats=Rėmėjo statistika
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -907,14 +907,14 @@ TeamPopupLinks.OpenNewTab=Atidaryti naujoje kortelėje
 total_stars=Žvaigždučių suma
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Rodyti žemėlapį
-foxtrick.FlagCollectionToMap.HideMap=Slėpti žemėlapį
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Azija
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Artimieji Rytai
-foxtrick.FlagCollectionToMap.SAmerica=Pietų Amerika
-foxtrick.FlagCollectionToMap.World=Pasaulis
+flagCollectionToMap.ShowMap=Rodyti žemėlapį
+flagCollectionToMap.HideMap=Slėpti žemėlapį
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Azija
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Artimieji Rytai
+flagCollectionToMap.SAmerica=Pietų Amerika
+flagCollectionToMap.World=Pasaulis
 
 # SkillTable
 Skill_table=Įgūdžių lentelė
@@ -959,16 +959,16 @@ minimum=Bent
 maximum=Daugiausiai
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Žiūrėti ID
-Senior=Pagrindas
-Youth=Jauniai
-Tournaments=Turnyrai
-Tournament=Turnyras
+rapidId.viewById=Žiūrėti ID
+rapidId.senior=Pagrindas
+rapidId.youth=Jauniai
+rapidId.tournaments=Turnyrai
+rapidId.tournament=Turnyras
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Pakeisti lentelės vaizdą.
-foxtrick.SkillTable.Add_homegrown_title=Pridėti visus užaugintus žaidėjus
-foxtrick.SkillTable.showTimeInClub_title=Rodyti komandoje išbūtą laiką
+skillTable.switchView=Pakeisti lentelės vaizdą.
+skillTable.addHomegrown=Pridėti visus užaugintus žaidėjus
+skillTable.showTimeInClub=Rodyti komandoje išbūtą laiką
 foxtrick.SkillTable.detach=Atkabinti
 
 # HTMSPrediction
@@ -1042,21 +1042,21 @@ LocalTime.local.title=Laikas vietos laiko juostoje. Spustelėjus rodomas Hattric
 Links.feeds=Nuorodų srautai (kiekvienas iš naujos eilutės)
 
 #actions
-Copy=Kopijuoti
-View=Žiūrėti
+button.copy=Kopijuoti
+rapidId.view=Žiūrėti
 Switch_view=Pakeisti vaizdą
 Detach=Atskirti
 AddHomegrown=Pridėti išaugintus žaidėjus
 showTimeInClub=Rodyti praleistą laiką komandoje
-sort.up=Aukštyn
-sort.down=Žemyn
-action.clearCache=Išvalyti podėlį
-action.clearCache.title=Išvalo FoxTrick CHPP podėlį. Esant reikalui „FoxTrick“ siunčia papildomą informaciją iš Hattrick serverių. Kol neišjungėte naršyklės, FoxTrick naudoja sukauptus duomenis. Retais atvejais tie duomenys gali būti pasenę. Išvalykite podėlį, jei norite atnaujinti duomenis.
+button.up=Aukštyn
+button.down=Žemyn
+api.clearCache=Išvalyti podėlį
+api.clearCache.title=Išvalo FoxTrick CHPP podėlį. Esant reikalui „FoxTrick“ siunčia papildomą informaciją iš Hattrick serverių. Kol neišjungėte naršyklės, FoxTrick naudoja sukauptus duomenis. Retais atvejais tie duomenys gali būti pasenę. Išvalykite podėlį, jei norite atnaujinti duomenis.
 
 # fennec ui
-pageAction.rightSidebar=Rodyti juostą dešinėje
+pageAction.rightMenu=Rodyti juostą dešinėje
 pageAction.mainContent=Rodyti pagrindinį turinį
-pageAction.leftSidebar=Rodyti juostą kairėje
+pageAction.leftMenu=Rodyti juostą kairėje
 pageAction.all=Rodyti viską
 
 # buttons
@@ -1190,11 +1190,11 @@ about.designers=Stilistai
 prefs.view.by.category=Rodyti funkcijų kategorijas
 prefs.view.by.page=Rodyti paskutinio HT puslapio funkcijas
 
-prefs.delete_foxtrick_branches_ask=Ar tikrai norite atstatyti pradinius nustatymus?
-prefs.delete_oauth_ask=Panaikinti CHPP prieigą (komandos ID\: %s)?
-prefs.disable_all_foxtrick_modules_ask=Ar tikrai norite išjungti visus patobulinimus?
-prefs.revoke_permissions_ask=Ar tikrai norite panaikinti visus papildomus leidimus?
+prefs.restoreDefault.ask=Ar tikrai norite atstatyti pradinius nustatymus?
+prefs.deleteToken.ask=Panaikinti CHPP prieigą (komandos ID\: %s)?
+prefs.disableAllModules.ask=Ar tikrai norite išjungti visus patobulinimus?
+prefs.revokePermissions.ask=Ar tikrai norite panaikinti visus papildomus leidimus?
 
-prefs.permissionsHint=%s darbui reikia papildomo leidimo. Suteikite leidimą pasirodysiančiame lange.
+prefs.getPermissions.alert=%s darbui reikia papildomo leidimo. Suteikite leidimą pasirodysiančiame lange.
 
 ###EOF
