--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -432,7 +432,7 @@ foxtrick.ntremoveconfirmation=Tiešām vēlies pievienot/atlaist šo spēlētāj
 foxtrick.confirmstripserver=Vai vēlies dzēst Hattrick serveri no saites, lai tā būtu lietojama diskusijās?
 foxtrick.conferences.signaturetoggle=Paraksts
 foxtrick.conferences.markunread=Atzīmēt kā nelasītu sākot no šejienes
-foxtrick.tweaks.selectplayer=Atlasīt spēlētāju
+copy.selectplayer=Atlasīt spēlētāju
 foxtrick.linkscustom.selecticon=Izvēlēties ikonu
 foxtrick.linkscustom.addpersonallink=Pievienot personisku saiti
 foxtrick.linkscustom.addlink=Pievienot saiti
@@ -443,11 +443,11 @@ foxtrick.linkscustom.confirmremove=Vai tiešām dzēst?
 foxtrick.linkscustom.addtag=Pievienot birku
 foxtrick.linkscustom.tags=Birkas
 foxtrick.linkscustom.help=Palīdzība
-foxtrick.matches.income=Ienākumi\:
-foxtrick.tweaks.Birthdays=Dzimšanas dienas
-foxtrick.tweaks.BirthdayToday=Dzimšanas dienas šodien
-foxtrick.tweaks.BirthdayLastWeek=Dzimšanas dienas pagājušajā nedēļā
-foxtrick.tweaks.BirthdayNextWeek=Dzimšanas dienas nākamajā nedēļā
+matches.income=Ienākumi\:
+copy.Birthdays=Dzimšanas dienas
+copy.BirthdayToday=Dzimšanas dienas šodien
+copy.BirthdayLastWeek=Dzimšanas dienas pagājušajā nedēļā
+copy.BirthdayNextWeek=Dzimšanas dienas nākamajā nedēļā
 foxtrick.copymatchid=Klikšķiniet, lai kopētu matchID starpliktuvē
 foxtrick.ExtendedPlayerDetails.perseason=/sezonā
 
@@ -468,10 +468,10 @@ CurrentSquad=Pašreizējā komanda
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Darbības
-foxtrick.tweaks.writeinguestbook=Rakstīt viesu grāmatā
-foxtrick.tweaks.copyplayerad=Kopēt spēlētāja reklāmu
-foxtrick.tweaks.copied=Spēlētāja reklāma ir nokopēta starpliktuvē.
+sidebarBox.actions=Darbības
+managerButtons.writeInGuestbook=Rakstīt viesu grāmatā
+copy.copyplayerad=Kopēt spēlētāja reklāmu
+copy.copied=Spēlētāja reklāma ir nokopēta starpliktuvē.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -504,30 +504,30 @@ MatchReportFormat.extraTime=Papildlaiks
 MatchReportFormat.penaltyShootOut=Pēcspēles sitieni
 MatchReportFormat.result=Rezultāts
 
-CopySelected.desc=Kopējiet iezīmēto ar Ctrl + C.
-SpecialPaste.desc=Ielīmējiet ar Shift + kreisais klikšķis.
+copy.copySelected=Kopējiet iezīmēto ar Ctrl + C.
+copy.operaPaste=Ielīmējiet ar Shift + kreisais klikšķis.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Kopēt prasmju tabulu starpliktuvē(HT-ML formātā)
-foxtrick.tweaks.skilltablecopied=Prasmju tabula ir iekopēta starpliktuvē.
-foxtrick.tweaks.matchidcopied=Spēles ID ir iekopēts starpliktuvē.
-foxtrick.tweaks.postidcopied=Ziņojuma ID [post\=%s] ir iekopēts starpliktuvē.
-foxtrick.tweaks.postingcopied=Ziņojums %s ir pievienots starpliktuvei.
-foxtrick.tweaks.youthstatistics=Jauniešu statistika ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Kopēt prasmju tabulu starpliktuvē(HT-ML formātā)
+copy.copied.skilltable=Prasmju tabula ir iekopēta starpliktuvē.
+copy.copied.matchid=Spēles ID ir iekopēts starpliktuvē.
+copy.copied.postid=Ziņojuma ID [post\=%s] ir iekopēts starpliktuvē.
+copy.copied.posting=Ziņojums %s ir pievienots starpliktuvei.
+copy.youthstatistics=Jauniešu statistika ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Uzbruk. pret Aizs.
-foxtrick.matches.right=Labais
-foxtrick.matches.left=Kreisais
-foxtrick.matches.center=Centra
-foxtrick.matches.defense=aiz
-foxtrick.matches.attack=uzbr
-foxtrick.matches.indfreekick=Net. brīvsitieni
+matches.attackdefensebars=Uzbruk. pret Aizs.
+matches.right=Labais
+matches.left=Kreisais
+matches.center=Centra
+matches.defense=aiz
+matches.attack=uzbr
+matches.indfreekick=Net. brīvsitieni
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter statistika
+matches.suppstats=Supporter statistika
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -562,14 +562,14 @@ TeamPopupLinks.OpenNewTab=Atvērt jaunā cilnē
 total_stars=Zvaigznes kopā
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Parādīt karti
-foxtrick.FlagCollectionToMap.HideMap=Slēpt karti
-foxtrick.FlagCollectionToMap.Africa=Āfrika
-foxtrick.FlagCollectionToMap.Asia=Āzija
-foxtrick.FlagCollectionToMap.Europe=Eiropa
-foxtrick.FlagCollectionToMap.MEast=Vidējie Austrumi
-foxtrick.FlagCollectionToMap.SAmerica=Dienvidamerika
-foxtrick.FlagCollectionToMap.World=Pasaule
+flagCollectionToMap.ShowMap=Parādīt karti
+flagCollectionToMap.HideMap=Slēpt karti
+flagCollectionToMap.Africa=Āfrika
+flagCollectionToMap.Asia=Āzija
+flagCollectionToMap.Europe=Eiropa
+flagCollectionToMap.MEast=Vidējie Austrumi
+flagCollectionToMap.SAmerica=Dienvidamerika
+flagCollectionToMap.World=Pasaule
 
 # SkillTable
 Skill_table=Prasmju tabula
@@ -611,13 +611,13 @@ minimum=Vismaz
 maximum=Maksimālais
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Atrast pēc ID
-Senior=Pieaugušo
-Youth=Jaunieši
+rapidId.viewById=Atrast pēc ID
+rapidId.senior=Pieaugušo
+rapidId.youth=Jaunieši
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Mainīt tabulas skatu.
-foxtrick.SkillTable.showTimeInClub_title=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
+skillTable.switchView=Mainīt tabulas skatu.
+skillTable.showTimeInClub=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
 foxtrick.SkillTable.detach=Atvienot
 
 # HTMSPrediction
@@ -687,21 +687,21 @@ LocalTime.local.title=Laiks pēc vietējās laika joslas. Klikšķiniet uz pulks
 # Links
 
 #actions
-Copy=Kopēt
-View=Apskatīt
+button.copy=Kopēt
+rapidId.view=Apskatīt
 Switch_view=Mainīt skatu
 Detach=Atvienot
 AddHomegrown=Pievienot klubā uzaugušos spēlētājus
 showTimeInClub=Parādīt klubā pavadīto laiku
-sort.up=Uz augšu
-sort.down=Uz leju
-action.clearCache=Iztīrīt kešatmiņu
-action.clearCache.title=Iztukšo FoxTrick XML kešatmiņu. FoxTrick pēc pieprasījuma ielādē papildus informāciju no Hattrick serveriem. Kamēr pārlūks netiek aizvērts, Foxtrick izmano šīs informācijas lokāli saglabātās kopijas. Retos gadījumos tā var būt novecojusi. Iztukšojiet kešatmiņu, ja vēlaties, lai FoxTrick ielādē papildus informāciju no jauna.
+button.up=Uz augšu
+button.down=Uz leju
+api.clearCache=Iztīrīt kešatmiņu
+api.clearCache.title=Iztukšo FoxTrick XML kešatmiņu. FoxTrick pēc pieprasījuma ielādē papildus informāciju no Hattrick serveriem. Kamēr pārlūks netiek aizvērts, Foxtrick izmano šīs informācijas lokāli saglabātās kopijas. Retos gadījumos tā var būt novecojusi. Iztukšojiet kešatmiņu, ja vēlaties, lai FoxTrick ielādē papildus informāciju no jauna.
 
 # fennec ui
-pageAction.rightSidebar=Parādīts labo sānjoslu
+pageAction.rightMenu=Parādīts labo sānjoslu
 pageAction.mainContent=Parādīt pamatsaturu
-pageAction.leftSidebar=Parādīt kreiso sānjoslu
+pageAction.leftMenu=Parādīt kreiso sānjoslu
 pageAction.all=Rādīt visus
 
 # buttons
