--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -489,7 +489,7 @@ foxtrick.ntremoveconfirmation=Ċert li trid iżżid/tneħħi lil dan il-plejer m
 foxtrick.confirmstripserver=Ċert li trid tiċċekkja s-server ta' hattrick għal links biex tkun tista' tużahom fil-forum?
 foxtrick.conferences.signaturetoggle=Firma
 foxtrick.conferences.markunread=Immarka li ma nqrawx minn hawn
-foxtrick.tweaks.selectplayer=Agħżel plejer
+copy.selectplayer=Agħżel plejer
 foxtrick.linkscustom.selecticon=Agħżel simbolu
 foxtrick.linkscustom.addpersonallink=Żid link personali
 foxtrick.linkscustom.addlink=Żid link
@@ -502,11 +502,11 @@ foxtrick.linkscustom.tags=Tikketti
 foxtrick.linkscustom.help=Għajnuna
 foxtrick.linkscustom.helptext=L-ewwel, dan huwa biss l-editur. Jekk tagħfas fuq il-header ta' din il-kaxxa int se tkun tista' taqleb mill-editur għall-mod normali. Il-links jaħdmu kompletament meta tkun qed taħdem fil-mod normali biss. Links statiċi esterni huma faċli biex iżżidhom, kemm iżżid il-url sħiħ (Eżempju\: http\: //alltid.org/league/427/). Għal links statiċi interni aqbeż il-parti tas-server (Eżempju\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Inti għandek bżonn it-tikketti għal links dinamiċi u li huma rari. Bit-tikketti l-links jiġu mibdula dinamikament billi jużaw l-informazzjoni fuq il-paġna li tkun fiha. Pereżempju http\://alltid.org/league/[leagueid] se jitfak dejjem fuq il-paġna t'Alltid tas-serje li inti qiegħed tara fuq Hattrick. It-tikketi li huma disponibbli fuq kull paġna qegħdin imniżżla fil-kaxxa fejn tagħżel. Inti tista' tuża biss dawk li qegħdin imniżżla fuq il-paġna fejn inti qed iżżid il-link personaliżżat tiegħek. Il-kliem fil-kaxxa huwa biss eżempju ta' template. Tista' tikteb tikketta inti stess (using []).
 foxtrick.linkscustom.helptext2=Inti tista' tesporta l-links tiegħek u taqsamhom mal-oħrajn. Biex tkun tista' tagħmel dan tista' tagħfas fuq il-buttuna biex tesporta u tagħżel il-file biex tissejvja dak il-link. Il-links jiġu miżjuda ma' dak il-file, b'hekk tista' tissejvja diversi links f'file wieħed. Biex timporta l-links mur fuq il-preferenzi u mur fuq importa l-preferenza. Dak li għandek imdaħħal biss fil-file magħżul se jiġi mportat, u li f'dan il-każ huma l-links tiegek. L-ebda links ta' qabel m'huma se jiġu mħassra.
-foxtrick.matches.income=Dħul\:
-foxtrick.tweaks.Birthdays=Egħluq żmienhom
-foxtrick.tweaks.BirthdayToday=Jagħlqu żmienhom illum
-foxtrick.tweaks.BirthdayLastWeek=Jagħlqu żmienhom din il-ġimgħa
-foxtrick.tweaks.BirthdayNextWeek=Jagħlqu żmienhom il-ġimgħa d-dieħla
+matches.income=Dħul\:
+copy.Birthdays=Egħluq żmienhom
+copy.BirthdayToday=Jagħlqu żmienhom illum
+copy.BirthdayLastWeek=Jagħlqu żmienhom din il-ġimgħa
+copy.BirthdayNextWeek=Jagħlqu żmienhom il-ġimgħa d-dieħla
 foxtrick.copymatchid=Agħfas biex tikkopja l-ID tal-logħba għal fuq il-clipboard
 foxtrick.ExtendedPlayerDetails.perseason=/staġun
 
@@ -525,10 +525,10 @@ Coach=Kowċ
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Azzjonijiet
-foxtrick.tweaks.writeinguestbook=Ikteb fil-Ktieb tal-mistednin
-foxtrick.tweaks.copyplayerad=Ikkopja l-avviż tal-plejer għal fuq il-clipboard
-foxtrick.tweaks.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
+sidebarBox.actions=Azzjonijiet
+managerButtons.writeInGuestbook=Ikteb fil-Ktieb tal-mistednin
+copy.copyplayerad=Ikkopja l-avviż tal-plejer għal fuq il-clipboard
+copy.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
 
 
 CopyRatings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
@@ -538,26 +538,26 @@ CopyRatings.copied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Ikkopja t-tabella tal-abbiltajiet għal fuq il-clipboard (f'HT-ML)
-foxtrick.tweaks.matchidcopied=L-Id tal-partita ġiet ikkopjata għal fuq il-clipboard.
-foxtrick.tweaks.postidcopied=L-ID tal-messaġġ ġie ikkopjat għal fuq il-clipboard
-foxtrick.tweaks.postingcopied=Il-messaġġ ġie ikkopjat għal fuq il-clipboard.
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Ikkopja t-tabella tal-abbiltajiet għal fuq il-clipboard (f'HT-ML)
+copy.copied.matchid=L-Id tal-partita ġiet ikkopjata għal fuq il-clipboard.
+copy.copied.postid=L-ID tal-messaġġ ġie ikkopjat għal fuq il-clipboard
+copy.copied.posting=Il-messaġġ ġie ikkopjat għal fuq il-clipboard.
 
 #matches
-foxtrick.matches.attackdefensebars=Attakk vs Difens
-foxtrick.matches.right=Lemin
-foxtrick.matches.left=Xellug
-foxtrick.matches.center=Ċentrali
-foxtrick.matches.defense=dif
-foxtrick.matches.attack=att
-foxtrick.matches.indfreekick=Set pieces ind.
-foxtrick.matches.wronglang=Foxtrick\: L-istatistika ma tistax tiġi murija minħabba li l-lingwa tiegħek m'hijiex irreġistrata jew inkella minħabba li int issettjajt il-lingwa l-ħażina fil-preferenzi. Jekk jogħġbok kun cert li l-lingwa ta' Foxtrick hija l-istess bħal-lingwa ta' HT.
+matches.attackdefensebars=Attakk vs Difens
+matches.right=Lemin
+matches.left=Xellug
+matches.center=Ċentrali
+matches.defense=dif
+matches.attack=att
+matches.indfreekick=Set pieces ind.
+matches.wronglang=Foxtrick\: L-istatistika ma tistax tiġi murija minħabba li l-lingwa tiegħek m'hijiex irreġistrata jew inkella minħabba li int issettjajt il-lingwa l-ħażina fil-preferenzi. Jekk jogħġbok kun cert li l-lingwa ta' Foxtrick hija l-istess bħal-lingwa ta' HT.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Statistika għas-Supporter
+matches.suppstats=Statistika għas-Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -584,14 +584,14 @@ less=anqas...
 total_stars=Stilel totali
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Uri l-mappa
-foxtrick.FlagCollectionToMap.HideMap=Aħbi l-mappa
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asja
-foxtrick.FlagCollectionToMap.Europe=Ewropa
-foxtrick.FlagCollectionToMap.MEast=Lvant Nofsani
-foxtrick.FlagCollectionToMap.SAmerica=Amerka t'Isfel
-foxtrick.FlagCollectionToMap.World=Dinja
+flagCollectionToMap.ShowMap=Uri l-mappa
+flagCollectionToMap.HideMap=Aħbi l-mappa
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asja
+flagCollectionToMap.Europe=Ewropa
+flagCollectionToMap.MEast=Lvant Nofsani
+flagCollectionToMap.SAmerica=Amerka t'Isfel
+flagCollectionToMap.World=Dinja
 
 # SkillTable
 
@@ -613,12 +613,12 @@ Series=Serje
 # refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Ara skond l-ID
-Senior=Il-Kbar
-Youth=Il-Minors
+rapidId.viewById=Ara skond l-ID
+rapidId.senior=Il-Kbar
+rapidId.youth=Il-Minors
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Aqleb id-dehra tat-tabella.
+skillTable.switchView=Aqleb id-dehra tat-tabella.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Riżultat imbassar
@@ -649,7 +649,7 @@ CrossTable.table=Klassifika tal-istaġun
 # Links
 
 #actions
-View=Ara
+rapidId.view=Ara
 Switch_view=Aqleb id-dehra
 
 # fennec ui
@@ -720,8 +720,8 @@ prefs.additional.HTMLDebugLog=Uri r-rapport addizzjonali debug fuq il-paġna ta'
 
 
 
-prefs.delete_foxtrick_branches_ask=Ċert li trid terġa' ittella' s-settings default?\nFirefox irid jingħalaq u jerġa' jinfetaħ biex dan isir\!
-prefs.disable_all_foxtrick_modules_ask=Ċert li trid titfi l-moduli kollha?\n
+prefs.restoreDefault.ask=Ċert li trid terġa' ittella' s-settings default?\nFirefox irid jingħalaq u jerġa' jinfetaħ biex dan isir\!
+prefs.disableAllModules.ask=Ċert li trid titfi l-moduli kollha?\n
 
 
 ###EOF
