--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -563,7 +563,7 @@ foxtrick.ntremoveconfirmation=Ynskjer du å leggje til/fjerne spelaren frå trop
 foxtrick.confirmstripserver=Ynskjer du å fjerne lenkene frå Hattrick serveren?
 foxtrick.conferences.signaturetoggle=Signatur
 foxtrick.conferences.markunread=Merk som ulest
-foxtrick.tweaks.selectplayer=Vel spelar
+copy.selectplayer=Vel spelar
 foxtrick.linkscustom.selecticon=Vel ikon
 foxtrick.linkscustom.addpersonallink=Legg til personleg lenke
 foxtrick.linkscustom.addlink=Legg til lenke
@@ -576,11 +576,11 @@ foxtrick.linkscustom.tags=Taggar
 foxtrick.linkscustom.help=Hjelp
 foxtrick.linkscustom.helptext=Dette er berre endre-modus. Å klikka på headeren til denne boksen vil byta mellom endremodus og normalmodus. Berre i normalmodus er lenkjene dine funksjonelle. Eksterne statistikklenkjer er lette å leggje til, berre skriv inn den fulle URL-adressa (Døme\: http\: //alltid.org/league/427/). For interne lenkjer må du droppa server-delen (Døme\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Du treng berre taggar for sjeldnare dynamiske lenkjer. Med taggar vert lenkja endra dynamisk med informasjonen frå sida du er på. Til dømes\: http\://alltid.org/league/[leagueid] vil alltid leia deg til Alltid-sida for serien du ser på i Hattrick. Kva for taggar som er tilgjengeleg ser du alltid i rullegardinmenyen på sida du er på. Du kan berre velja dei taggane som er tilgjengeleg på sida du skal leggje lenkja til på. Teksten i boksen er berre ein standard mal. Du kan skrive ein tag sjølv. (ved å bruka []).
 foxtrick.linkscustom.helptext2=Du kan og eksportere lenkjene dine, og dela dei. For å gjere det, berre trykkjer du på eksporter og veljer ein fil til å lagre lenka i. Lenkjene er vedlegg til fila, dermed kan du lagra fleire lenkjer i ei fil. For å importere ei lenkje går du til innstillingar og veljer importer innstilling. Berre infoen som ligg lagra i filen vil verte importert, i dette tilfellet berre lenkjene dine. Ingen tidlegare lenkjer vil verte sletta.
-foxtrick.matches.income=Tent\:
-foxtrick.tweaks.Birthdays=Bursdagar
-foxtrick.tweaks.BirthdayToday=Bursdagar i dag
-foxtrick.tweaks.BirthdayLastWeek=Bursdagar førre veke
-foxtrick.tweaks.BirthdayNextWeek=Bursdagar neste veke
+matches.income=Tent\:
+copy.Birthdays=Bursdagar
+copy.BirthdayToday=Bursdagar i dag
+copy.BirthdayLastWeek=Bursdagar førre veke
+copy.BirthdayNextWeek=Bursdagar neste veke
 foxtrick.copymatchid=Klikk for å kopiera kampID
 foxtrick.ExtendedPlayerDetails.perseason=/sesong
 
@@ -599,10 +599,10 @@ Coach=Trenar
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Handlingar
-foxtrick.tweaks.writeinguestbook=Skriv i gjesteboka
-foxtrick.tweaks.copyplayerad=Kopier spelarannonse
-foxtrick.tweaks.copied=Spelarannonsa har vorte kopiert.
+sidebarBox.actions=Handlingar
+managerButtons.writeInGuestbook=Skriv i gjesteboka
+copy.copyplayerad=Kopier spelarannonse
+copy.copied=Spelarannonsa har vorte kopiert.
 
 
 CopyRatings.both=Kopier ratingane (i HT-ML)
@@ -613,27 +613,27 @@ CopyRatings.copied=Ratingane har vorte kopiert.
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Kopier ferdigheitstabell (i HT-ML)
-foxtrick.tweaks.skilltablecopied=Ferdigheitstabellen har vorte kopiert
-foxtrick.tweaks.matchidcopied=Kamp-ID har vorte kopiert.
-foxtrick.tweaks.postidcopied=Post-ID [post\=%s] har vorte kopiert.
-foxtrick.tweaks.postingcopied=Innlegget %s har vorte kopiert.
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Kopier ferdigheitstabell (i HT-ML)
+copy.copied.skilltable=Ferdigheitstabellen har vorte kopiert
+copy.copied.matchid=Kamp-ID har vorte kopiert.
+copy.copied.postid=Post-ID [post\=%s] har vorte kopiert.
+copy.copied.posting=Innlegget %s har vorte kopiert.
 
 #matches
-foxtrick.matches.attackdefensebars=Angrep vs forsvar
-foxtrick.matches.right=Høgre
-foxtrick.matches.left=Venstre
-foxtrick.matches.center=Sentralt
-foxtrick.matches.defense=Forsvar
-foxtrick.matches.attack=Angrep
-foxtrick.matches.indfreekick=Indirekte daudball
-foxtrick.matches.wronglang=FoxTrick\: Ratinga kan ikkje verte vist, sidan språket ditt ikkje har vorte lagd til, eller sidan du har vald feil språk i innstillingar. Ver god sjekk at du har same språk i Foxtrick som på Hattrick.
+matches.attackdefensebars=Angrep vs forsvar
+matches.right=Høgre
+matches.left=Venstre
+matches.center=Sentralt
+matches.defense=Forsvar
+matches.attack=Angrep
+matches.indfreekick=Indirekte daudball
+matches.wronglang=FoxTrick\: Ratinga kan ikkje verte vist, sidan språket ditt ikkje har vorte lagd til, eller sidan du har vald feil språk i innstillingar. Ver god sjekk at du har same språk i Foxtrick som på Hattrick.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporterstatistikk
+matches.suppstats=Supporterstatistikk
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -664,14 +664,14 @@ less=mindre...
 total_stars=Totalt antal stjerner
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Syn kart
-foxtrick.FlagCollectionToMap.HideMap=Gøym kart
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Midt-Austen
-foxtrick.FlagCollectionToMap.SAmerica=Sør-Afrika
-foxtrick.FlagCollectionToMap.World=Verda
+flagCollectionToMap.ShowMap=Syn kart
+flagCollectionToMap.HideMap=Gøym kart
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Midt-Austen
+flagCollectionToMap.SAmerica=Sør-Afrika
+flagCollectionToMap.World=Verda
 
 # SkillTable
 Skill_table=Ferdigheitstabell
@@ -709,12 +709,12 @@ minimum=Minimum
 maximum=Maks
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Sorter av ID
-Senior=Senior
-Youth=Junior
+rapidId.viewById=Sorter av ID
+rapidId.senior=Senior
+rapidId.youth=Junior
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Endre visning av tabell.
+skillTable.switchView=Endre visning av tabell.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Forventa resultat
@@ -745,8 +745,8 @@ CrossTable.table=Sesongkrysstabell
 # Links
 
 #actions
-Copy=Kopier
-View=Syn
+button.copy=Kopier
+rapidId.view=Syn
 Switch_view=Endre visning
 
 # fennec ui
@@ -824,8 +824,8 @@ prefs.additional.HTMLDebugLog=Vis ein eigen debuggar-informasjon på Hattrick-si
 
 
 
-prefs.delete_foxtrick_branches_ask=Ynskjer du verkeleg å attendestille Foxtrick?\nFirefox må verte starta om att for at dette skal verke\!
-prefs.disable_all_foxtrick_modules_ask=Ynskjer du verkeleg å slå av alle modular?\n
+prefs.restoreDefault.ask=Ynskjer du verkeleg å attendestille Foxtrick?\nFirefox må verte starta om att for at dette skal verke\!
+prefs.disableAllModules.ask=Ynskjer du verkeleg å slå av alle modular?\n
 
 
 ###EOF
