--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -247,7 +247,7 @@ foxtrick.matchdetail.leftshort=V
 foxtrick.matchdetail.ifkshort=I
 foxtrick.bidconfirmation=Er du sikker på at du vil by på denne spilleren? Prisen er %s.
 foxtrick.tlconfirmation=Er du sikker på at du vil selge denne spilleren? Prisen er satt til %s.
-foxtrick.tweaks.selectplayer=Velg spiller
+copy.selectplayer=Velg spiller
 foxtrick.linkscustom.selecticon=Velg ikon
 foxtrick.linkscustom.addpersonallink=Legg til personlig link
 foxtrick.linkscustom.addlink=Legg til link
@@ -268,26 +268,26 @@ Coach=Trener
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Funksjoner
-foxtrick.tweaks.writeinguestbook=Skriv i gjestebok
-foxtrick.tweaks.copyplayerad=Kopier spillerannonse til utklippstavlen
-foxtrick.tweaks.copied=Spilleren har blitt kopiert til utklippstavlen.
+sidebarBox.actions=Funksjoner
+managerButtons.writeInGuestbook=Skriv i gjestebok
+copy.copyplayerad=Kopier spillerannonse til utklippstavlen
+copy.copied=Spilleren har blitt kopiert til utklippstavlen.
 
 
 
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
+copy.youthclub=hattrick-youthclub.org
 
 #matches
-foxtrick.matches.attackdefensebars=Angrep kontra forsvar barer
-foxtrick.matches.right=Høyre
-foxtrick.matches.left=Venstre
-foxtrick.matches.center=Midt
-foxtrick.matches.defense=forsvar
-foxtrick.matches.attack=angrep
-foxtrick.matches.indfreekick=Indirekte frispark
+matches.attackdefensebars=Angrep kontra forsvar barer
+matches.right=Høyre
+matches.left=Venstre
+matches.center=Midt
+matches.defense=forsvar
+matches.attack=angrep
+matches.indfreekick=Indirekte frispark
 
 
 # NOTE TO TRANSLATORS
@@ -313,14 +313,14 @@ less=mindre..
 total_stars=Totalt antall stjerner
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Vis kart
-foxtrick.FlagCollectionToMap.HideMap=Skjul kart
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Midt-Østen
-foxtrick.FlagCollectionToMap.SAmerica=Sør-Amerika
-foxtrick.FlagCollectionToMap.World=Verden
+flagCollectionToMap.ShowMap=Vis kart
+flagCollectionToMap.HideMap=Skjul kart
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Midt-Østen
+flagCollectionToMap.SAmerica=Sør-Amerika
+flagCollectionToMap.World=Verden
 
 # SkillTable
 
@@ -371,14 +371,14 @@ LocalTime.local.title=Tid i lokal tidssone. Klikk på klokken for å bytte til H
 # Links
 
 #actions
-Copy=Kopier
-View=Vis
+button.copy=Kopier
+rapidId.view=Vis
 Switch_view=Bytte visning
 Detach=Koble fra
 showTimeInClub=Vis tid i klubben
-sort.up=Opp
-sort.down=Ned
-action.clearCache=Tøm buffer
+button.up=Opp
+button.down=Ned
+api.clearCache=Tøm buffer
 
 # fennec ui
 pageAction.mainContent=Vis hovedinnhold
@@ -422,6 +422,6 @@ tab.links=Lenker
 
 
 
-prefs.permissionsHint=%s trenger tillatelse til å arbeide. Tillat tilgang i følgende dialogboks. Hvis du avslår vil denne funksjonen bli deaktivert.
+prefs.getPermissions.alert=%s trenger tillatelse til å arbeide. Tillat tilgang i følgende dialogboks. Hvis du avslår vil denne funksjonen bli deaktivert.
 
 ###EOF
