--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -549,7 +549,7 @@ foxtrick.ntremoveconfirmation=Czy na pewno chcesz dodać/usunąć tego zawodnika
 foxtrick.confirmstripserver=Czy na pewno chcesz usunąć numer serwera Hattricka z linka?
 foxtrick.conferences.signaturetoggle=Sygnaturka
 foxtrick.conferences.markunread=Zaznacz "nieczytane" od tego miejsca
-foxtrick.tweaks.selectplayer=Wybierz zawodnika
+copy.selectplayer=Wybierz zawodnika
 foxtrick.linkscustom.selecticon=Wybierz ikonę
 foxtrick.linkscustom.addpersonallink=Dodaj własny link
 foxtrick.linkscustom.addlink=Dodaj link
@@ -560,11 +560,11 @@ foxtrick.linkscustom.confirmremove=Na pewno usunąć?
 foxtrick.linkscustom.addtag=Dodaj tag
 foxtrick.linkscustom.tags=Tagi
 foxtrick.linkscustom.help=Pomoc
-foxtrick.matches.income=Dochód\:
-foxtrick.tweaks.Birthdays=Urodziny
-foxtrick.tweaks.BirthdayToday=Urodziny dziś
-foxtrick.tweaks.BirthdayLastWeek=Urodziny w tym tygodniu
-foxtrick.tweaks.BirthdayNextWeek=Urodziny w następnym tygodniu
+matches.income=Dochód\:
+copy.Birthdays=Urodziny
+copy.BirthdayToday=Urodziny dziś
+copy.BirthdayLastWeek=Urodziny w tym tygodniu
+copy.BirthdayNextWeek=Urodziny w następnym tygodniu
 foxtrick.copymatchid=Kliknij, aby skopiować matchID
 foxtrick.ExtendedPlayerDetails.perseason=/ sezon
 
@@ -583,10 +583,10 @@ Coach=Trener
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Akcje
-foxtrick.tweaks.writeinguestbook=Wpisz się do Księgi Gości
-foxtrick.tweaks.copyplayerad=Kopiuj reklamę zawodnika do schowka
-foxtrick.tweaks.copied=Reklama skopiowana\!
+sidebarBox.actions=Akcje
+managerButtons.writeInGuestbook=Wpisz się do Księgi Gości
+copy.copyplayerad=Kopiuj reklamę zawodnika do schowka
+copy.copied=Reklama skopiowana\!
 
 
 CopyRatings.home=Kopiuj oceny gospodarzy do schowka (HT-BBCode)
@@ -596,26 +596,26 @@ CopyRatings.copied=Zrobione\!
 
 
 
-foxtrick.tweaks.youthclub=Akcje
-foxtrick.tweaks.copyskilltable=Kopiuj umiejętności do schowka
-foxtrick.tweaks.matchidcopied=Zrobione\!
-foxtrick.tweaks.postidcopied=Post [post\=%s] został skopiowany do schowka\!
-foxtrick.tweaks.postingcopied=Postujący %s został skopiowany do schowka\!
+copy.youthclub=Akcje
+copy.copy.skilltable=Kopiuj umiejętności do schowka
+copy.copied.matchid=Zrobione\!
+copy.copied.postid=Post [post\=%s] został skopiowany do schowka\!
+copy.copied.posting=Postujący %s został skopiowany do schowka\!
 
 #matches
-foxtrick.matches.attackdefensebars=Atak vs Obrona
-foxtrick.matches.right=Prawy
-foxtrick.matches.left=Lewy
-foxtrick.matches.center=Środk.
-foxtrick.matches.defense=Obrona
-foxtrick.matches.attack=Atak
-foxtrick.matches.indfreekick=Wolne pośr.
-foxtrick.matches.wronglang=FoxTrick\: Statystyki nie mogą zostać pokazane, gdyż Twój język nie jest obsługiwany bądź wybrałeś zły język w opcjach FoxTricka
+matches.attackdefensebars=Atak vs Obrona
+matches.right=Prawy
+matches.left=Lewy
+matches.center=Środk.
+matches.defense=Obrona
+matches.attack=Atak
+matches.indfreekick=Wolne pośr.
+matches.wronglang=FoxTrick\: Statystyki nie mogą zostać pokazane, gdyż Twój język nie jest obsługiwany bądź wybrałeś zły język w opcjach FoxTricka
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Zestawienie
+matches.suppstats=Zestawienie
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -646,14 +646,14 @@ less=Mniej...
 total_stars=Łączna liczba gwiazdek
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Pokaż mapę
-foxtrick.FlagCollectionToMap.HideMap=Ukryj mapę
-foxtrick.FlagCollectionToMap.Africa=Afryka
-foxtrick.FlagCollectionToMap.Asia=Azja
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Bliski Wschód
-foxtrick.FlagCollectionToMap.SAmerica=Ameryka Południowa
-foxtrick.FlagCollectionToMap.World=Świat
+flagCollectionToMap.ShowMap=Pokaż mapę
+flagCollectionToMap.HideMap=Ukryj mapę
+flagCollectionToMap.Africa=Afryka
+flagCollectionToMap.Asia=Azja
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Bliski Wschód
+flagCollectionToMap.SAmerica=Ameryka Południowa
+flagCollectionToMap.World=Świat
 
 # SkillTable
 Skill_table=Tabela umiejętności
@@ -691,12 +691,12 @@ minimum=Co najmniej
 maximum=Co najwyżej
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Szukaj wg ID
-Senior=Seniorzy
-Youth=Juniorzy
+rapidId.viewById=Szukaj wg ID
+rapidId.senior=Seniorzy
+rapidId.youth=Juniorzy
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Zmienia widok tabeli
+skillTable.switchView=Zmienia widok tabeli
 
 # HTMSPrediction
 HTMSPrediction.prediction=Prognoza wyniku
@@ -727,8 +727,8 @@ CrossTable.table=Tabela meczów
 # Links
 
 #actions
-Copy=Kopiuj
-View=Zobacz
+button.copy=Kopiuj
+rapidId.view=Zobacz
 Switch_view=Zmień widok
 
 # fennec ui
@@ -806,8 +806,8 @@ prefs.additional.HTMLDebugLog=Pokazuj debug na stronie Hattricka (dla twórców)
 
 
 
-prefs.delete_foxtrick_branches_ask=Czy na pewno chcesz przywrócić domyślne ustawienia FoxTricka?\nJeśli tak, zrestartuj później Firefoxa\!
-prefs.disable_all_foxtrick_modules_ask=Czy na pewno chcesz wyłączyć wszystkie moduły?\n
+prefs.restoreDefault.ask=Czy na pewno chcesz przywrócić domyślne ustawienia FoxTricka?\nJeśli tak, zrestartuj później Firefoxa\!
+prefs.disableAllModules.ask=Czy na pewno chcesz wyłączyć wszystkie moduły?\n
 
 
 ###EOF
