--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -488,7 +488,7 @@ foxtrick.ntremoveconfirmation=Voce realmente quer adicionar/remover este jogador
 foxtrick.confirmstripserver=Você quer tirar o servidor hattrick dos links para deixá-lo utilizável no fórum?
 foxtrick.conferences.signaturetoggle=Assinatura
 foxtrick.conferences.markunread=Marcar como não lido a partir daqui
-foxtrick.tweaks.selectplayer=Selecionar jogador
+copy.selectplayer=Selecionar jogador
 foxtrick.linkscustom.selecticon=Selecionar icone
 foxtrick.linkscustom.addpersonallink=Adicionar link pessoal
 foxtrick.linkscustom.addlink=Adicionar link
@@ -499,11 +499,11 @@ foxtrick.linkscustom.confirmremove=Deseja realmente remover?
 foxtrick.linkscustom.addtag=Adicionar uma tag
 foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Ajuda
-foxtrick.matches.income=Income\:
-foxtrick.tweaks.Birthdays=Aniversarios
-foxtrick.tweaks.BirthdayToday=Aniversários hoje
-foxtrick.tweaks.BirthdayLastWeek=Aniversarios ultima semana
-foxtrick.tweaks.BirthdayNextWeek=Aniversarios proxima semana
+matches.income=Income\:
+copy.Birthdays=Aniversarios
+copy.BirthdayToday=Aniversários hoje
+copy.BirthdayLastWeek=Aniversarios ultima semana
+copy.BirthdayNextWeek=Aniversarios proxima semana
 foxtrick.copymatchid=Click para copiar o ID do jogo para a area de tranferencia
 foxtrick.ExtendedPlayerDetails.perseason=/ season
 
@@ -524,10 +524,10 @@ CurrentSquad=Elenco atual
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Ações
-foxtrick.tweaks.writeinguestbook=Escrever no Livro de Visitas
-foxtrick.tweaks.copyplayerad=Copiar anuncio de jogador para a area de transferencia
-foxtrick.tweaks.copied=O Jogador anunciado foi copiado para o Area de tranferencia
+sidebarBox.actions=Ações
+managerButtons.writeInGuestbook=Escrever no Livro de Visitas
+copy.copyplayerad=Copiar anuncio de jogador para a area de transferencia
+copy.copied=O Jogador anunciado foi copiado para o Area de tranferencia
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -557,28 +557,28 @@ MatchReportFormat.fullTime=Tempo integral
 MatchReportFormat.extraTime=Prorrogação
 MatchReportFormat.result=Resultado
 
-CopySelected.desc=Copiar seleção com Ctrl + C.
-SpecialPaste.desc=Colar com Shift + clique esquerdo.
+copy.copySelected=Copiar seleção com Ctrl + C.
+copy.operaPaste=Colar com Shift + clique esquerdo.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Copiar tabela de habilidades para a área de transferência (em HT-ML)
-foxtrick.tweaks.skilltablecopied=A tabela de habilidades foi copiada para a área de transferência.
-foxtrick.tweaks.youthstatistics=Estatísticas juniores ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Copiar tabela de habilidades para a área de transferência (em HT-ML)
+copy.copied.skilltable=A tabela de habilidades foi copiada para a área de transferência.
+copy.youthstatistics=Estatísticas juniores ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Barras Ataque vs Defesa
-foxtrick.matches.right=Direita
-foxtrick.matches.left=Esquerda
-foxtrick.matches.center=Centro
-foxtrick.matches.defense=def
-foxtrick.matches.attack=ata
-foxtrick.matches.indfreekick=Falta Indireta
-foxtrick.matches.wronglang=Foxtrick\: As Estatisticas não podem ser exibidas porque seu idioma não esta registrado ou porque voce escolheu um idioma diferente nas preferencias. Por favor mude seu idioma no Foxtrick para o mesmo idioma do seu Hattrick.
+matches.attackdefensebars=Barras Ataque vs Defesa
+matches.right=Direita
+matches.left=Esquerda
+matches.center=Centro
+matches.defense=def
+matches.attack=ata
+matches.indfreekick=Falta Indireta
+matches.wronglang=Foxtrick\: As Estatisticas não podem ser exibidas porque seu idioma não esta registrado ou porque voce escolheu um idioma diferente nas preferencias. Por favor mude seu idioma no Foxtrick para o mesmo idioma do seu Hattrick.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Estatiticas Exclusivas
+matches.suppstats=Estatiticas Exclusivas
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -613,14 +613,14 @@ TeamPopupLinks.OpenNewTab=Abrir em nova aba
 total_stars=Total de estrelas
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Mostrar mapa
-foxtrick.FlagCollectionToMap.HideMap=Ocultar mapa
-foxtrick.FlagCollectionToMap.Africa=Africa
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Oriente Medio
-foxtrick.FlagCollectionToMap.SAmerica=America do Sul
-foxtrick.FlagCollectionToMap.World=Mundo
+flagCollectionToMap.ShowMap=Mostrar mapa
+flagCollectionToMap.HideMap=Ocultar mapa
+flagCollectionToMap.Africa=Africa
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Oriente Medio
+flagCollectionToMap.SAmerica=America do Sul
+flagCollectionToMap.World=Mundo
 
 # SkillTable
 Skill_table=Tabela de habilidade
@@ -661,14 +661,14 @@ minimum=Pelo menos
 maximum=Máximo
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Modo de exibição por ID
-Senior=Senior
-Youth=Junior
+rapidId.viewById=Modo de exibição por ID
+rapidId.senior=Senior
+rapidId.youth=Junior
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Alternar a exibição da tabela.
-foxtrick.SkillTable.Add_homegrown_title=Adicionar todos os jogadores vindos dos juniores da casa do time atual
-foxtrick.SkillTable.showTimeInClub_title=Mostrar o tempo desde que o jogador se juntou à equipe principal do clube
+skillTable.switchView=Alternar a exibição da tabela.
+skillTable.addHomegrown=Adicionar todos os jogadores vindos dos juniores da casa do time atual
+skillTable.showTimeInClub=Mostrar o tempo desde que o jogador se juntou à equipe principal do clube
 
 # HTMSPrediction
 HTMSPrediction.prediction=Resultado previsto
@@ -732,20 +732,20 @@ LocalTime.local.title=Horário no fuso horário local. Clique no relógio para a
 Links.feeds=Feeds de listas de links (separadas por quebras de linha)
 
 #actions
-Copy=Copiar
-View=Modo de exibição
+button.copy=Copiar
+rapidId.view=Modo de exibição
 Switch_view=Alternar o modo de exibição
 Detach=Separar
 AddHomegrown=Adicionar jogadores da casa
 showTimeInClub=Mostrar hora no clube
-sort.up=Acima
-sort.down=Para baixo
-action.clearCache=Limpar cache
+button.up=Acima
+button.down=Para baixo
+api.clearCache=Limpar cache
 
 # fennec ui
-pageAction.rightSidebar=Mostrar barra direita
+pageAction.rightMenu=Mostrar barra direita
 pageAction.mainContent=Mostrar conteúdo principal
-pageAction.leftSidebar=Mostrar barra esquerda
+pageAction.leftMenu=Mostrar barra esquerda
 pageAction.all=Mostrar tudo
 
 # buttons
@@ -852,10 +852,10 @@ about.designers=Designers
 prefs.view.by.category=Exibir por categoria
 prefs.view.by.page=Exibir pela última página HT
 
-prefs.delete_foxtrick_branches_ask=Voce tem certeza que quer apagar todas as configurações?\nFirefox precisa ser reiniciado antes\!
-prefs.delete_oauth_ask=Excluir OAuth token/segredo para teamid %s? 
-prefs.disable_all_foxtrick_modules_ask=Tem certeza de que deseja desativar todos os módulos?
-prefs.revoke_permissions_ask=Tem a certeza de que deseja revogar todas as permissões opcionais?
+prefs.restoreDefault.ask=Voce tem certeza que quer apagar todas as configurações?\nFirefox precisa ser reiniciado antes\!
+prefs.deleteToken.ask=Excluir OAuth token/segredo para teamid %s? 
+prefs.disableAllModules.ask=Tem certeza de que deseja desativar todos os módulos?
+prefs.revokePermissions.ask=Tem a certeza de que deseja revogar todas as permissões opcionais?
 
 
 ###EOF
