--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -550,7 +550,7 @@ foxtrick.staffconfirmationsack=Você deseja demitir % num % tipo?
 foxtrick.ntremoveconfirmation=Deseja realmente adicionar/remover este jogador da sua equipa?
 foxtrick.conferences.signaturetoggle=Assinatura
 foxtrick.conferences.markunread=Marcar como não lido a partir daqui
-foxtrick.tweaks.selectplayer=Seleccionar jogador
+copy.selectplayer=Seleccionar jogador
 foxtrick.linkscustom.selecticon=Seleccionar ícone
 foxtrick.linkscustom.addpersonallink=Adicionar link pessoal
 foxtrick.linkscustom.addlink=Adicionar link
@@ -563,11 +563,11 @@ foxtrick.linkscustom.tags=Etiquetas
 foxtrick.linkscustom.help=Ajuda
 foxtrick.linkscustom.helptext=Primeiro, isto é só o modo de edição. Ao clicar no cabeçalho desta caixa alterna entre modo editor e modo normal. Apenas em modo normal os teus próprios links estão completamente funcionais. Links estáticos externos são fáceis de adicionar, apenas adiciona o url completo (Examplo\: http\: //alltid.org/league/427/) . Para links estáticos internos não colocar a parte do servidor (Examplo\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). As etiquetas apenas precisas para links dinâmicos raros. Com etiquestas os links são dinâmicamente mudados usando a informação do lado em que tu estás. Por exemplo http\://alltid.org/league/[leagueid] Iria sempre para o link Alltid da série que estás a ver. As etiquetas que estão disponíveis em cada site estão listadas na caixa de selecção. Apenas podes usar aqueles que estão listados no site onde tu estás a adicionar o link personalizado. Os texto produzido é apenas um template de amostra. Podes escrever a tua própria etiqueta. (com []).
 foxtrick.linkscustom.helptext2=Tua também exportas os teus links e os partilhas. Para isto podes clicar no botão exportar e seleccionar um ficheiro para guardar o link. Os links são anexados aquele ficheiro, para que possas guardar vários links num único ficheiro. Para importar links vai à janela de preferências e dirige-te a Importar Preferências. Apenas as preferências que se encontrem naquele ficheiro serão importadas, que neste caso, são os links. Nenhum dos teus links anteriores serão apagados.
-foxtrick.matches.income=Receita\:
-foxtrick.tweaks.Birthdays=Aniversários
-foxtrick.tweaks.BirthdayToday=Aniversários de hoje
-foxtrick.tweaks.BirthdayLastWeek=Aniversários na semana passada
-foxtrick.tweaks.BirthdayNextWeek=Aniversários na próxima semana
+matches.income=Receita\:
+copy.Birthdays=Aniversários
+copy.BirthdayToday=Aniversários de hoje
+copy.BirthdayLastWeek=Aniversários na semana passada
+copy.BirthdayNextWeek=Aniversários na próxima semana
 foxtrick.copymatchid=Clica para copiar o matchID para a caixa de texto
 
 
@@ -583,10 +583,10 @@ CurrentSquad=Equipa Atual
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Acções
-foxtrick.tweaks.writeinguestbook=Escrever no livro de visitas
-foxtrick.tweaks.copyplayerad=Copiar anúncio do jogador para a área de transferências.
-foxtrick.tweaks.copied=O anúncio do jogador foi colocado na área de transferências.
+sidebarBox.actions=Acções
+managerButtons.writeInGuestbook=Escrever no livro de visitas
+copy.copyplayerad=Copiar anúncio do jogador para a área de transferências.
+copy.copied=O anúncio do jogador foi colocado na área de transferências.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -619,31 +619,31 @@ MatchReportFormat.extraTime=Prolongamento
 MatchReportFormat.penaltyShootOut=Penáltis
 MatchReportFormat.result=Resultado
 
-CopySelected.desc=Copiar a seleção com Ctrl + c.
-SpecialPaste.desc=Colar com Shift + Click esquerdo.
+copy.copySelected=Copiar a seleção com Ctrl + c.
+copy.operaPaste=Colar com Shift + Click esquerdo.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Tabela de habilidades foi copiada para área de transferência (em HT-ML)
-foxtrick.tweaks.skilltablecopied=A tabela a habilidades foi copiada para a área de transferência.
-foxtrick.tweaks.matchidcopied=O ID do jogo foi copiada para a área de transferência.
-foxtrick.tweaks.postidcopied=Post ID [post \= % s] foi copiada para a área de transferência.
-foxtrick.tweaks.postingcopied=O Post% s foi copiado para o clipboard.
-foxtrick.tweaks.youthstatistics=Estatísticas dos Jovens ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Tabela de habilidades foi copiada para área de transferência (em HT-ML)
+copy.copied.skilltable=A tabela a habilidades foi copiada para a área de transferência.
+copy.copied.matchid=O ID do jogo foi copiada para a área de transferência.
+copy.copied.postid=Post ID [post \= % s] foi copiada para a área de transferência.
+copy.copied.posting=O Post% s foi copiado para o clipboard.
+copy.youthstatistics=Estatísticas dos Jovens ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Barras Ataque vs Defesa
-foxtrick.matches.right=Direita
-foxtrick.matches.left=Esquerda
-foxtrick.matches.center=Centro
-foxtrick.matches.defense=Defesa
-foxtrick.matches.attack=Ataque
-foxtrick.matches.indfreekick=Livre Ind.
-foxtrick.matches.wronglang=Foxtrick\: As estatísticas não podem ser mostradas porque a tua língua não está registada ou escolheste a língua errada nas preferências. Por favor tem a certeza que a tua língua do Hattrick e do Foxtrick são a mesma.
+matches.attackdefensebars=Barras Ataque vs Defesa
+matches.right=Direita
+matches.left=Esquerda
+matches.center=Centro
+matches.defense=Defesa
+matches.attack=Ataque
+matches.indfreekick=Livre Ind.
+matches.wronglang=Foxtrick\: As estatísticas não podem ser mostradas porque a tua língua não está registada ou escolheste a língua errada nas preferências. Por favor tem a certeza que a tua língua do Hattrick e do Foxtrick são a mesma.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Estatísticas Sócio HT
+matches.suppstats=Estatísticas Sócio HT
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -678,14 +678,14 @@ TeamPopupLinks.OpenNewTab=Abrir num novo separador
 total_stars=Contagem do número total de estrelas
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Mostrar mapa
-foxtrick.FlagCollectionToMap.HideMap=Esconder Mapa
-foxtrick.FlagCollectionToMap.Africa=África
-foxtrick.FlagCollectionToMap.Asia=Ásia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Médio Oriente
-foxtrick.FlagCollectionToMap.SAmerica=América do Sul
-foxtrick.FlagCollectionToMap.World=Mundo
+flagCollectionToMap.ShowMap=Mostrar mapa
+flagCollectionToMap.HideMap=Esconder Mapa
+flagCollectionToMap.Africa=África
+flagCollectionToMap.Asia=Ásia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Médio Oriente
+flagCollectionToMap.SAmerica=América do Sul
+flagCollectionToMap.World=Mundo
 
 # SkillTable
 Skill_table=Tabela de habilidades
@@ -720,8 +720,8 @@ TransferSearchResultFilters.days=Dias\:
 minimum=Pelo menos
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-Senior=Sénior
-Youth=Jovens
+rapidId.senior=Sénior
+rapidId.youth=Jovens
 
 # SkillTable
 
@@ -783,21 +783,21 @@ LocalTime.local.title=Hora no fuso horário local. Clique em relógio para alter
 Links.feeds=Feeds de listas de ligações (separadas por quebras)
 
 #actions
-Copy=copiar
-View=Exibir
+button.copy=copiar
+rapidId.view=Exibir
 Switch_view=Alterar modo de exibição
 Detach=Desanexar
 AddHomegrown=Adicionar jogadores caseiros
 showTimeInClub=Mostrar Tempo no Clube
-sort.up=Para Cima
-sort.down=Para baixo
-action.clearCache=Limpar a 'Cache'
-action.clearCache.title=Limpa o cache de Xml do FoxTrick. FoxTrick baixa informações extras de servidores do Hattrick sob ordem. Até que você feche seu navegador, FoxTrick usará localmente armazenadas cópias daqueles depois. Em raras ocasiões eles podem obter desatualizados. Limpe o cache, se você quiser FoxTrick fazer novamente o download dessas informações suplementares.
+button.up=Para Cima
+button.down=Para baixo
+api.clearCache=Limpar a 'Cache'
+api.clearCache.title=Limpa o cache de Xml do FoxTrick. FoxTrick baixa informações extras de servidores do Hattrick sob ordem. Até que você feche seu navegador, FoxTrick usará localmente armazenadas cópias daqueles depois. Em raras ocasiões eles podem obter desatualizados. Limpe o cache, se você quiser FoxTrick fazer novamente o download dessas informações suplementares.
 
 # fennec ui
-pageAction.rightSidebar=Mostrar a barra da direita
+pageAction.rightMenu=Mostrar a barra da direita
 pageAction.mainContent=Mostrar o conteúdo principal
-pageAction.leftSidebar=Mostrar barra à esquerda
+pageAction.leftMenu=Mostrar barra à esquerda
 pageAction.all=Mostrar tudo
 
 # buttons
@@ -904,8 +904,8 @@ about.translators=Tradutores
 
 prefs.view.by.page=Exibir última página HT
 
-prefs.delete_foxtrick_branches_ask=Tens a certeza que queres restaurar as opções padrão?\nO Firefox deve ser reiniciado para esta acção ter efeito\!
-prefs.disable_all_foxtrick_modules_ask=Tens a certeza que queres desactivar todos os módulos?\n
+prefs.restoreDefault.ask=Tens a certeza que queres restaurar as opções padrão?\nO Firefox deve ser reiniciado para esta acção ter efeito\!
+prefs.disableAllModules.ask=Tens a certeza que queres desactivar todos os módulos?\n
 
 
 ###EOF
