--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -778,7 +778,7 @@ foxtrick.ntremoveconfirmation=Esti sigur ca vrei sa adaugi/scoti acest jucator i
 foxtrick.confirmstripserver=Doresti sa formezi linkuri din serverul hattrick pentru a le utiliza?
 foxtrick.conferences.signaturetoggle=Semnatura
 foxtrick.conferences.markunread=Marcheaza necitite de aici incolo
-foxtrick.tweaks.selectplayer=Alege jucator
+copy.selectplayer=Alege jucator
 foxtrick.linkscustom.selecticon=Alege pictograma
 foxtrick.linkscustom.addpersonallink=Adauga link personal
 foxtrick.linkscustom.addlink=Adauga link
@@ -791,11 +791,11 @@ foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Ajutor
 foxtrick.linkscustom.helptext=In primul rand, acesta este doar modul de editor. Daca faceti click pe antetul acestei casute se va comuta intre editor si modul normal. Doar in modul normal linkurile proprii sunt pe deplin functionale. Linkurile externe statice sunt usor de adaugat, este suficient sa adaugati url-ul complet (Exemplu\: http\:  /  / example.org  / liga  / 427  /). Pentru linkuri interne statice sariti partea cu serverul (exemplu\:  / World  / Seria  / Default.aspx? LeagueLevelUnitID \= 427). Cu ajutorul etichetelor linkurile sunt schimbate dinamic. De exemplu http\:  /  / example.org  / Liga  / [leagueid] va va conduce intotdeauna pe pagina ligii cu ID-ul pe care o vizualizati in hattrick. Etichetele care sunt la indemana pe fiecare site sunt listate in casuta de selectare. Poti utiliza doar acele etichete care sunt listate pe situl unde adaugi linkul. Textul produs este doar un exemplu de sablon. Poti scrie la tag-ul dvs. (cu []).
 foxtrick.linkscustom.helptext2=De asemenea puteti exporta linkurile. Pentru a face acest lucru puteti da click pe butonul Export si selectati un fisier pentru a salva acel link. Linkurile sunt adaugate in acest fisier, puteti salva mai multe linkuri intr-un singur fisier. Pentru a importa linkuri mergeti la casuta preferinta de dialog si apoi import preferinte. Doar preferintele prezente in fisierul selectat vor fi importate, care in acest caz sunt linkurile proprii. Nici unul din linkurile precedente nu vor fi sterse.
-foxtrick.matches.income=Venituri\:
-foxtrick.tweaks.Birthdays=Zile de nastere
-foxtrick.tweaks.BirthdayToday=Zile de nastere astazi
-foxtrick.tweaks.BirthdayLastWeek=Zile de nastere saptamana trecuta
-foxtrick.tweaks.BirthdayNextWeek=Zile de nastere saptamana viitoare
+matches.income=Venituri\:
+copy.Birthdays=Zile de nastere
+copy.BirthdayToday=Zile de nastere astazi
+copy.BirthdayLastWeek=Zile de nastere saptamana trecuta
+copy.BirthdayNextWeek=Zile de nastere saptamana viitoare
 foxtrick.copymatchid=Click pentru a copia ID-ul meciului in clipboard
 foxtrick.ExtendedPlayerDetails.perseason=/ sezon
 
@@ -818,10 +818,10 @@ CurrentSquad=Echipa actuala
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Actiuni
-foxtrick.tweaks.writeinguestbook=Scrie in Cartea de Oaspeti
-foxtrick.tweaks.copyplayerad=Copiaza jucatorul
-foxtrick.tweaks.copied=Jucatorul a fost copiat in clipboard
+sidebarBox.actions=Actiuni
+managerButtons.writeInGuestbook=Scrie in Cartea de Oaspeti
+copy.copyplayerad=Copiaza jucatorul
+copy.copied=Jucatorul a fost copiat in clipboard
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -854,31 +854,31 @@ MatchReportFormat.extraTime=Prelungiri
 MatchReportFormat.penaltyShootOut=Penaltiuri
 MatchReportFormat.result=Rezultat
 
-CopySelected.desc=Copiati selectia cu Ctrl + C.
-SpecialPaste.desc=Lipire selectia cu Shift + Click Stanga.
+copy.copySelected=Copiati selectia cu Ctrl + C.
+copy.operaPaste=Lipire selectia cu Shift + Click Stanga.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Copiaza tabelul cu calitatile juniorilor in clipboard (HT-ML).
-foxtrick.tweaks.skilltablecopied=Tabelul cu calitatile jucatorilor a fost copiat in clipboard.
-foxtrick.tweaks.matchidcopied=Id-ul meciului a fost copiat in clipboard.
-foxtrick.tweaks.postidcopied=Id-ul [post\=%s] a fost copiat in clipboard.
-foxtrick.tweaks.postingcopied=Mesajul %s a fost copiat in clipboard.
-foxtrick.tweaks.youthstatistics=Statistici juniori ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Copiaza tabelul cu calitatile juniorilor in clipboard (HT-ML).
+copy.copied.skilltable=Tabelul cu calitatile jucatorilor a fost copiat in clipboard.
+copy.copied.matchid=Id-ul meciului a fost copiat in clipboard.
+copy.copied.postid=Id-ul [post\=%s] a fost copiat in clipboard.
+copy.copied.posting=Mesajul %s a fost copiat in clipboard.
+copy.youthstatistics=Statistici juniori ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Atac vs Aparare
-foxtrick.matches.right=Dreapta
-foxtrick.matches.left=Stanga
-foxtrick.matches.center=Centru
-foxtrick.matches.defense=apar
-foxtrick.matches.attack=atac
-foxtrick.matches.indfreekick=Faze fixe indirecte
-foxtrick.matches.wronglang=Foxtrick\: Datele nu pot fi afisate pentru ca limba dumneavoastra nu este inregistrata sau pentru ca ati setat limba gresita la preferinte. Fiti sigur ca limba din Foxtrick este aceeasi ca si limba din Hattrick.
+matches.attackdefensebars=Atac vs Aparare
+matches.right=Dreapta
+matches.left=Stanga
+matches.center=Centru
+matches.defense=apar
+matches.attack=atac
+matches.indfreekick=Faze fixe indirecte
+matches.wronglang=Foxtrick\: Datele nu pot fi afisate pentru ca limba dumneavoastra nu este inregistrata sau pentru ca ati setat limba gresita la preferinte. Fiti sigur ca limba din Foxtrick este aceeasi ca si limba din Hattrick.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Statistici Supporter
+matches.suppstats=Statistici Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -913,14 +913,14 @@ TeamPopupLinks.OpenNewTab=Deschide in fila noua
 total_stars=Numar total stele
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Arata harta
-foxtrick.FlagCollectionToMap.HideMap=Ascunde harta
-foxtrick.FlagCollectionToMap.Africa=Africa
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Orientul Mijlociu
-foxtrick.FlagCollectionToMap.SAmerica=America de Sud
-foxtrick.FlagCollectionToMap.World=Lume
+flagCollectionToMap.ShowMap=Arata harta
+flagCollectionToMap.HideMap=Ascunde harta
+flagCollectionToMap.Africa=Africa
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Orientul Mijlociu
+flagCollectionToMap.SAmerica=America de Sud
+flagCollectionToMap.World=Lume
 
 # SkillTable
 Skill_table=Tabel calitati
@@ -965,16 +965,16 @@ minimum=Cel putin
 maximum=Maxim
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Vizualizeaza dupa ID
-Senior=Seniori
-Youth=Juniori
-Tournaments=Turnee
-Tournament=Turneu
+rapidId.viewById=Vizualizeaza dupa ID
+rapidId.senior=Seniori
+rapidId.youth=Juniori
+rapidId.tournaments=Turnee
+rapidId.tournament=Turneu
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Schimba modul de vizualizare al tabelului.
-foxtrick.SkillTable.Add_homegrown_title=Adauga toti jucatorii crescuti la club din actualul
-foxtrick.SkillTable.showTimeInClub_title=Arata timpul de cand jucatorul a sosit la echipa de seniori
+skillTable.switchView=Schimba modul de vizualizare al tabelului.
+skillTable.addHomegrown=Adauga toti jucatorii crescuti la club din actualul
+skillTable.showTimeInClub=Arata timpul de cand jucatorul a sosit la echipa de seniori
 foxtrick.SkillTable.detach=Detach
 
 # HTMSPrediction
@@ -1048,21 +1048,21 @@ LocalTime.local.title=Ora este afisata in ora locala.Clic pe ceas pentru a schim
 Links.feeds=Fluxuri ale listei de linkuri (separata de linii)
 
 #actions
-Copy=Copiaza
-View=Vizualizeaza
+button.copy=Copiaza
+rapidId.view=Vizualizeaza
 Switch_view=Schimba modul de vizualizare
 Detach=Detasare
 AddHomegrown=Adauga jucatorii crescuti la club
 showTimeInClub=Arata timpul de cand sunt la club
-sort.up=Up
-sort.down=Down
-action.clearCache=Curata cache-ul
-action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
+button.up=Up
+button.down=Down
+api.clearCache=Curata cache-ul
+api.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
 
 # fennec ui
-pageAction.rightSidebar=Arata bara dreapta
+pageAction.rightMenu=Arata bara dreapta
 pageAction.mainContent=Arata continutul principal
-pageAction.leftSidebar=Afisati bara stanga
+pageAction.leftMenu=Afisati bara stanga
 pageAction.all=Afisati totul
 
 # buttons
@@ -1204,11 +1204,11 @@ about.designers=Designeri
 prefs.view.by.category=Dupa categorii
 prefs.view.by.page=Dupa ultima pagina HT
 
-prefs.delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite?
-prefs.delete_oauth_ask=Stergere OAuth jeton / secret pentru teamid %s?
-prefs.disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?
-prefs.revoke_permissions_ask=Esti sigur ca vrei sa revoci toate permisiunile optionale?
+prefs.restoreDefault.ask=Esti sigur ca vrei sa restaurezi setarile implicite?
+prefs.deleteToken.ask=Stergere OAuth jeton / secret pentru teamid %s?
+prefs.disableAllModules.ask=Esti sigur ca vrei sa dezactivezi toate modulele?
+prefs.revokePermissions.ask=Esti sigur ca vrei sa revoci toate permisiunile optionale?
 
-prefs.permissionsHint=%s are nevoie de permisiunea de a lucra. Se permite accesul in urmatorul dialog.
+prefs.getPermissions.alert=%s are nevoie de permisiunea de a lucra. Se permite accesul in urmatorul dialog.
 
 ###EOF
