--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -490,7 +490,7 @@ foxtrick.staffconfirmationsack=Určite chceš vyhodiť %num %kind?
 foxtrick.ntremoveconfirmation=Skutočne chceš pridať/odstrániť tohto hráča?
 foxtrick.confirmstripserver=Skutočne chceš odstrániť server z odkazov na fóre?
 foxtrick.conferences.signaturetoggle=Podpis
-foxtrick.tweaks.selectplayer=Výber hráča
+copy.selectplayer=Výber hráča
 foxtrick.linkscustom.selecticon=Vybrať ikonu
 foxtrick.linkscustom.addpersonallink=Pridať vlastný odkaz
 foxtrick.linkscustom.addlink=Pridať odkaz
@@ -503,11 +503,11 @@ foxtrick.linkscustom.tags=Parametre
 foxtrick.linkscustom.help=Nápoveda
 foxtrick.linkscustom.helptext=Najskôr je treba povedať, že toto je iba editor. Kliknutím na hlavičku tohto okna môžete prepínať medzi módom editácie a normálnym zobrazením. Vaše vlastné odkazy sú funkčné len v normálnom zobrazení. Statické externé stránky pridáte jednoducho, stačí napísať celú URL adresu (príklad\: http\://alltid.org/league/427/). Pre odkaz na interné štatistické stránky vynechajte čast týkajúcu sa servera (príklad\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Stránky, na ktoré odkazujete s parametrami sa môžu meniť dynamicky na základe informácií, ktoré pomocou parametra poskytnete. Napríklad http\://alltid.org/league/[leagueid] vás vždy zavedie na stránku alltid.org s ligou, ktorú si teraz prehliadate. Parametre, ktoré sú na danej stránke k dispozícii sú uvedené vo výberovom poli. Môžete využiť len tie parametre, ktoré sú k dispozícii na stránke, na ktorej chcete vlastný odkaz vytvoriť. Text, ktorý sa potom objaví je len ukážkový. Parametre môžete písať aj ručne pomocou hranatých zátvoriek – [].
 foxtrick.linkscustom.helptext2=Môžete exportovať odkazy a zdielať ich. Aby ste to urobili, musíte kliknúť na tlačítko 'export' a vybrať súbor, do ktorého sa odkazy uložia. Odkazy sú do toho súboru pridávané, takže môžete uložiť mnoho odkazov v jednom súbore. Aby ste importovali odkazy importovali, choďte do nastavení, konkrétne nastavenia importu. Iba nastavenia prítomné vo vybranom súbore budú importované, čo v tomto prípade sú odkazy. Žiadny z predošlých odkazov nebude vymazaný.
-foxtrick.matches.income=Príjem\:
-foxtrick.tweaks.Birthdays=Narodeniny
-foxtrick.tweaks.BirthdayToday=Narodeniny dnes
-foxtrick.tweaks.BirthdayLastWeek=Narodeniny minulý týždeň
-foxtrick.tweaks.BirthdayNextWeek=Narodeniny budúci týždeň
+matches.income=Príjem\:
+copy.Birthdays=Narodeniny
+copy.BirthdayToday=Narodeniny dnes
+copy.BirthdayLastWeek=Narodeniny minulý týždeň
+copy.BirthdayNextWeek=Narodeniny budúci týždeň
 foxtrick.copymatchid=Klikni pre skopírovanie ID zápasu do schránky
 foxtrick.ExtendedPlayerDetails.perseason=/za sezónu
 
@@ -526,10 +526,10 @@ Coach=Tréner
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Majiteľove kroky
-foxtrick.tweaks.writeinguestbook=Zobraz knihu návštev
-foxtrick.tweaks.copyplayerad=Kopírovať vlastnosti hráča do schránky
-foxtrick.tweaks.copied=Informácie o hráčovi boli vložené do schránky.
+sidebarBox.actions=Majiteľove kroky
+managerButtons.writeInGuestbook=Zobraz knihu návštev
+copy.copyplayerad=Kopírovať vlastnosti hráča do schránky
+copy.copied=Informácie o hráčovi boli vložené do schránky.
 
 
 CopyRatings.home=Skopírovať ratingy domáceho tímu (v HT-ML formáte)
@@ -539,27 +539,27 @@ CopyRatings.copied=Ratingy boli skopírované do schránky.
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Skopírovať tabuľku so skillmi do schránky (v HT-ML formáte)
-foxtrick.tweaks.skilltablecopied=Kód tabuľky so skillmi bol skopírovaný do schránky.
-foxtrick.tweaks.matchidcopied=ID zápasu bolo skopírované do schránky.
-foxtrick.tweaks.postidcopied=ID príspevku bolo skopírované do schránky.
-foxtrick.tweaks.postingcopied=Príspevok bol skopírovaný do schránky.
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Skopírovať tabuľku so skillmi do schránky (v HT-ML formáte)
+copy.copied.skilltable=Kód tabuľky so skillmi bol skopírovaný do schránky.
+copy.copied.matchid=ID zápasu bolo skopírované do schránky.
+copy.copied.postid=ID príspevku bolo skopírované do schránky.
+copy.copied.posting=Príspevok bol skopírovaný do schránky.
 
 #matches
-foxtrick.matches.attackdefensebars=Grafy útokov a obran
-foxtrick.matches.right=P
-foxtrick.matches.left=L
-foxtrick.matches.center=S
-foxtrick.matches.defense=obrana
-foxtrick.matches.attack=útok
-foxtrick.matches.indfreekick=Nepriame kopy
-foxtrick.matches.wronglang=FoxTrick\: Štatistiky nemôžu byť zobrazené, lebo Váš jazyk nie je registrovaný, prípadne v nastaveniach je zvolený nesprávny jazyk. Uistite sa, že jazyk nastavený vo foxtricku je rovnaký ako Váš jazyk na HT.
+matches.attackdefensebars=Grafy útokov a obran
+matches.right=P
+matches.left=L
+matches.center=S
+matches.defense=obrana
+matches.attack=útok
+matches.indfreekick=Nepriame kopy
+matches.wronglang=FoxTrick\: Štatistiky nemôžu byť zobrazené, lebo Váš jazyk nie je registrovaný, prípadne v nastaveniach je zvolený nesprávny jazyk. Uistite sa, že jazyk nastavený vo foxtricku je rovnaký ako Váš jazyk na HT.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Štatistiky supportera
+matches.suppstats=Štatistiky supportera
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -586,14 +586,14 @@ less=menej...
 total_stars=Celkový počet hviezdičiek
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Zobraziť mapu
-foxtrick.FlagCollectionToMap.HideMap=Skryť mapu
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Ázia
-foxtrick.FlagCollectionToMap.Europe=Európa
-foxtrick.FlagCollectionToMap.MEast=Stredný Východ
-foxtrick.FlagCollectionToMap.SAmerica=Južná Amerika
-foxtrick.FlagCollectionToMap.World=Svet
+flagCollectionToMap.ShowMap=Zobraziť mapu
+flagCollectionToMap.HideMap=Skryť mapu
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Ázia
+flagCollectionToMap.Europe=Európa
+flagCollectionToMap.MEast=Stredný Východ
+flagCollectionToMap.SAmerica=Južná Amerika
+flagCollectionToMap.World=Svet
 
 # SkillTable
 Skill_table=Tabuľka skillov
@@ -618,12 +618,12 @@ Series=Liga
 # refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Zobraziť podľa ID
-Senior=Seniorský
-Youth=dorastenecký
+rapidId.viewById=Zobraziť podľa ID
+rapidId.senior=Seniorský
+rapidId.youth=dorastenecký
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Prehodiť zobrazenie tabuľky.
+skillTable.switchView=Prehodiť zobrazenie tabuľky.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predpovedaný výsledok
@@ -654,8 +654,8 @@ CrossTable.table=Sezónna cross tabuľka
 # Links
 
 #actions
-Copy=Kopírovať
-View=Pozrieť
+button.copy=Kopírovať
+rapidId.view=Pozrieť
 Switch_view=Zmeniť pohľad
 
 # fennec ui
@@ -726,8 +726,8 @@ prefs.additional.HTMLDebugLog=Zobraziť dodatočné ladiace výstupy v pätičke
 
 
 
-prefs.delete_foxtrick_branches_ask=Určite chceš obnoviť pôvodné nastavenia Foxtricku?\nPre obnovenie musíš reštartovať Firefox\!
-prefs.disable_all_foxtrick_modules_ask=Si si istý, že chceš zablokovať všetky moduly?\n
+prefs.restoreDefault.ask=Určite chceš obnoviť pôvodné nastavenia Foxtricku?\nPre obnovenie musíš reštartovať Firefox\!
+prefs.disableAllModules.ask=Si si istý, že chceš zablokovať všetky moduly?\n
 
 
 ###EOF
