--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -384,7 +384,7 @@ foxtrick.bidconfirmation=Doni të dërgoni ofertë për këtë lojtar? Çmimi ë
 foxtrick.tlconfirmation=Doni të shisni këtë lojtar? Çmimi kërkues është %s.
 foxtrick.ntremoveconfirmation=Doni të shtoni/hiqni këtë lojtar nga skuadra juaj?
 foxtrick.conferences.signaturetoggle=Firma
-foxtrick.tweaks.selectplayer=Zgjidh lojtarin
+copy.selectplayer=Zgjidh lojtarin
 foxtrick.linkscustom.selecticon=Zgjidh ikonën
 foxtrick.linkscustom.addpersonallink=Shtoni link personal
 foxtrick.linkscustom.addlink=Shtoni link
@@ -397,10 +397,10 @@ foxtrick.linkscustom.tags=Tag
 foxtrick.linkscustom.help=Ndihmë
 foxtrick.linkscustom.helptext=Si për fillim kjo është në fazën editor. Duke klikuar te titulli i kësaj kutije bën ndryshimin midis pozicionit editor dhe normal. Vetëm në pozicionin normal, link tuaj do jenë funksional. Link të jashtëm janë të lehtë për tu shtuar, thjesht shtoni url të plotë (p.sh.\: http\: //alltid.org/league/427/). Për link të brëndshëm mos e shtoni pjesën e serverit (p.sh.\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Ju duhen tags vetëm për link dinamik. Me tags link ndryshohen duke përdorur informacionin e faqes ku jeni. P.SH. http\://alltid.org/league/[leagueid] do ju çojë te faqa e Alltid për serinë që ju po shikoni në Hattrick. Tags e mundëshme për çdo faqe janë te kutia. Ju mund të përdorni vetëm ato që janë te faqa ku ju po shtoni linkun e personalizuar. Teksti te kutia është një shëmbull. Ju mund të shkruani një tag (duke përdorur[]).
 foxtrick.linkscustom.helptext2=Gjithashtu mund të eksportoni link. Klikoni te butoni eksporto dhe zgjidhini dosjen për ta ruajtur këtë link. Link ruhen te kjo dosje dhe ju mund të shtoni disa prej tyre. Për të importuar link shkoni te preferencat dhe te preferencat e importit. Vetëm ato që janë te dosja përkatëse do importohen, të cilat në këtë rast janë link tuaj. Asnjë nga link tuaj të mëparshëm do fshihet.
-foxtrick.matches.income=Të ardhura\:
-foxtrick.tweaks.Birthdays=Ditëlindje
-foxtrick.tweaks.BirthdayLastWeek=Ditëlindje javës që shkoi
-foxtrick.tweaks.BirthdayNextWeek=Ditëlindje javës që vjen
+matches.income=Të ardhura\:
+copy.Birthdays=Ditëlindje
+copy.BirthdayLastWeek=Ditëlindje javës që shkoi
+copy.BirthdayNextWeek=Ditëlindje javës që vjen
 foxtrick.copymatchid=Kliko për të kopjuar ndeshjeID te tabela
 foxtrick.ExtendedPlayerDetails.perseason=/ sezon
 
@@ -416,10 +416,10 @@ Coach=Trainer
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Veprime
-foxtrick.tweaks.writeinguestbook=Shkruani te Libri i Vizituesve
-foxtrick.tweaks.copyplayerad=Kopjoni reklamën e lojtarit te tabela
-foxtrick.tweaks.copied=Reklama e lojtarit është shtuar te tabela.
+sidebarBox.actions=Veprime
+managerButtons.writeInGuestbook=Shkruani te Libri i Vizituesve
+copy.copyplayerad=Kopjoni reklamën e lojtarit te tabela
+copy.copied=Reklama e lojtarit është shtuar te tabela.
 
 
 CopyRatings.copied=Vlerësimet janë shtuar te tabela.
@@ -427,25 +427,25 @@ CopyRatings.copied=Vlerësimet janë shtuar te tabela.
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.matchidcopied=ID e ndeshjes është kopjuar te tabela.
-foxtrick.tweaks.postidcopied=ID e postimit është kopjuar te tabela.
-foxtrick.tweaks.postingcopied=Postimi është kopjuar te tabela.
+copy.youthclub=hattrick-youthclub.org
+copy.copied.matchid=ID e ndeshjes është kopjuar te tabela.
+copy.copied.postid=ID e postimit është kopjuar te tabela.
+copy.copied.posting=Postimi është kopjuar te tabela.
 
 #matches
-foxtrick.matches.attackdefensebars=Kollonat Sulm vs Mbrojtje
-foxtrick.matches.right=Djathtas
-foxtrick.matches.left=Majtas
-foxtrick.matches.center=Qëndër
-foxtrick.matches.defense=mbro
-foxtrick.matches.attack=sul
-foxtrick.matches.indfreekick=Godi. st. indi.
-foxtrick.matches.wronglang=FoxTrick\: Statistikat nuk mund të shfaqen sepse gjuha juaj nuk është e rregjistruar ose sepse keni zgjedhur gjuhën e gabuar te preferencat. Ju lutemi sigurohuni që gjuha juaj e Foxtrick është njësoj si ajo në Hattrick.
+matches.attackdefensebars=Kollonat Sulm vs Mbrojtje
+matches.right=Djathtas
+matches.left=Majtas
+matches.center=Qëndër
+matches.defense=mbro
+matches.attack=sul
+matches.indfreekick=Godi. st. indi.
+matches.wronglang=FoxTrick\: Statistikat nuk mund të shfaqen sepse gjuha juaj nuk është e rregjistruar ose sepse keni zgjedhur gjuhën e gabuar te preferencat. Ju lutemi sigurohuni që gjuha juaj e Foxtrick është njësoj si ajo në Hattrick.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Statistikat e Supporter
+matches.suppstats=Statistikat e Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -472,14 +472,14 @@ less=më pak...
 total_stars=Numri total i yjeve
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Trego hartën
-foxtrick.FlagCollectionToMap.HideMap=Fsheh hartën
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Azia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Lindja e Mesme
-foxtrick.FlagCollectionToMap.SAmerica=Afrika Jugore
-foxtrick.FlagCollectionToMap.World=Bota
+flagCollectionToMap.ShowMap=Trego hartën
+flagCollectionToMap.HideMap=Fsheh hartën
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Azia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Lindja e Mesme
+flagCollectionToMap.SAmerica=Afrika Jugore
+flagCollectionToMap.World=Bota
 
 # SkillTable
 
@@ -588,8 +588,8 @@ prefs.additional.title=Opcionet të tjera
 
 
 
-prefs.delete_foxtrick_branches_ask=Jeni i sigurt që doni të aktivizoni zgjedhjet standarte?\nFirefox duhet të fiket dhe të ndizet që ky ndryshim të aplikohet\!
-prefs.disable_all_foxtrick_modules_ask=Jeni i sigurt që doni të fikni të gjitha modulet?\n
+prefs.restoreDefault.ask=Jeni i sigurt që doni të aktivizoni zgjedhjet standarte?\nFirefox duhet të fiket dhe të ndizet që ky ndryshim të aplikohet\!
+prefs.disableAllModules.ask=Jeni i sigurt që doni të fikni të gjitha modulet?\n
 
 
 ###EOF
