--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -778,7 +778,7 @@ foxtrick.ntremoveconfirmation=Да ли заиста желиш да додаш/
 foxtrick.confirmstripserver=Да ли желите да уклоните адресу Хеттрик сервера са линкова како би били употребљиви на Форуму?
 foxtrick.conferences.signaturetoggle=Потпис
 foxtrick.conferences.markunread=Наредни=>непрочитани
-foxtrick.tweaks.selectplayer=Изабери играча
+copy.selectplayer=Изабери играча
 foxtrick.linkscustom.selecticon=Изабери иконицу
 foxtrick.linkscustom.addpersonallink=Моји линкови
 foxtrick.linkscustom.addlink=Додај линк
@@ -791,11 +791,11 @@ foxtrick.linkscustom.tags=Ознаке
 foxtrick.linkscustom.help=Помоћ
 foxtrick.linkscustom.helptext=Ако кликнете на заглавље оквира за линкове прећи ћете из уређивачког у нормални режим рада. Имајте на уму да су ваши линкови потпуно у функцији само када сте у нормалном режиму рада. Спољашње линкове је лако додати, само убаците пуну адресу (нпр.\: http\://example.org/league/427/). За интерни статички линк прескочите део који се тиче сервера (нпр.\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Ознаке су вам потребне само за динамичке линкове. Уз помоћ ознака линкови се динамички мењају користећи информацију са странице на којој се тренутно налазите  на пример: http:\/\/example.org\/league\/427\/[leagueid] ће вас увек одвести на Аллтид страницу лиге коју тренутно прегледате на Хеттрику. Ознаке које су вам доступне за сваки сајт су приказане у падајућем менију. Можете користити и ознаке које су наведене на сајту за који додајете ваш персонализовани линк. Текст који је наведен је само пример, а ваше ознаке можете направити сами уз помоћ угличастих заграда [ ]).
 foxtrick.linkscustom.helptext2=Своје линкове можете такође и да извезете и да их на тај начин ставите на располагање и другима. Да би сте то урадили можете кликнути на дугме ‘Извези’ и потом изаберите фајл у коме ћете сачувати линкове. Линкови ће бити само додати том фајлу, и као последица тога, можете сачувати  више линкова у исти фајл. Да бисте увезли линкове идите у таб ‘Главне опције’ подешавања за Фокстрик и у подмени ‘Увези или Извези подешавања’. Само подешавања које се налазе у фајлу ће бити увежена, а у вашем случају ће то бити само линкови. Ниједан од ваших претходно сачуваних линкова неће бити обрисан.
-foxtrick.matches.income=Приход:
-foxtrick.tweaks.Birthdays=Рођендани
-foxtrick.tweaks.BirthdayToday=Рођендани данас
-foxtrick.tweaks.BirthdayLastWeek=Рођендани прошле недеље
-foxtrick.tweaks.BirthdayNextWeek=Рођендани идуће недеље
+matches.income=Приход:
+copy.Birthdays=Рођендани
+copy.BirthdayToday=Рођендани данас
+copy.BirthdayLastWeek=Рођендани прошле недеље
+copy.BirthdayNextWeek=Рођендани идуће недеље
 foxtrick.copymatchid=Кликни да ископираш ИД меча у меморију
 foxtrick.ExtendedPlayerDetails.perseason=/ по сезони
 
@@ -818,10 +818,10 @@ CurrentSquad=Још увек у клубу
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Могућности
-foxtrick.tweaks.writeinguestbook=Упиши се у књигу гостију
-foxtrick.tweaks.copyplayerad=Ископирај податке о играчу у меморију
-foxtrick.tweaks.copied=Подаци о играчу су ископирани y меморију.
+sidebarBox.actions=Могућности
+managerButtons.writeInGuestbook=Упиши се у књигу гостију
+copy.copyplayerad=Ископирај податке о играчу у меморију
+copy.copied=Подаци о играчу су ископирани y меморију.
 
 ratings.HatStats=Хатстатс
 ratings.LoddarStats=Лоддар-статс
@@ -854,31 +854,31 @@ MatchReportFormat.extraTime=Продужеци
 MatchReportFormat.penaltyShootOut=Пенали
 MatchReportFormat.result=Резултат
 
-CopySelected.desc=Копирај селектовано са 'Ctrl+C'
-SpecialPaste.desc='Paste' са 'Shift + леви клик мишем'.
+copy.copySelected=Копирај селектовано са 'Ctrl+C'
+copy.operaPaste='Paste' са 'Shift + леви клик мишем'.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Копирај табелу са вештинама у меморију (у ХТ форум стилу)
-foxtrick.tweaks.skilltablecopied=Изворни код табелe са вештинама је ископиран у меморију.
-foxtrick.tweaks.matchidcopied=Меч ИД је ископиран у меморију.
-foxtrick.tweaks.postidcopied=Пост ИД [post=%s] је ископиран у меморију.
-foxtrick.tweaks.postingcopied=Пост %s и референце су ископиране у меморију.
-foxtrick.tweaks.youthstatistics=Омладинска статистика www.ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Копирај табелу са вештинама у меморију (у ХТ форум стилу)
+copy.copied.skilltable=Изворни код табелe са вештинама је ископиран у меморију.
+copy.copied.matchid=Меч ИД је ископиран у меморију.
+copy.copied.postid=Пост ИД [post=%s] је ископиран у меморију.
+copy.copied.posting=Пост %s и референце су ископиране у меморију.
+copy.youthstatistics=Омладинска статистика www.ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Графички приказ одбрана/напад
-foxtrick.matches.right=Десно
-foxtrick.matches.left=Лево
-foxtrick.matches.center=Центар
-foxtrick.matches.defense=одб
-foxtrick.matches.attack=нап
-foxtrick.matches.indfreekick=Индиректни ударци
-foxtrick.matches.wronglang=Фокстрик\: Статистика не може бити приказана јер ваш језик није регистрован или сте подесили погрешан језик у подешавањима. Проверите да ли је језик у Фокстрику исти као и језик који сте подесили на Хеттрику.
+matches.attackdefensebars=Графички приказ одбрана/напад
+matches.right=Десно
+matches.left=Лево
+matches.center=Центар
+matches.defense=одб
+matches.attack=нап
+matches.indfreekick=Индиректни ударци
+matches.wronglang=Фокстрик\: Статистика не може бити приказана јер ваш језик није регистрован или сте подесили погрешан језик у подешавањима. Проверите да ли је језик у Фокстрику исти као и језик који сте подесили на Хеттрику.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter статистика
+matches.suppstats=Supporter статистика
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -913,14 +913,14 @@ TeamPopupLinks.OpenNewTab=Отвори линкове у новом табу
 total_stars=Укупан број звездица
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Прикажи мапу
-foxtrick.FlagCollectionToMap.HideMap=Сакриј мапу
-foxtrick.FlagCollectionToMap.Africa=Африка
-foxtrick.FlagCollectionToMap.Asia=Азија
-foxtrick.FlagCollectionToMap.Europe=Европа
-foxtrick.FlagCollectionToMap.MEast=Блиски исток
-foxtrick.FlagCollectionToMap.SAmerica=Јужна Америка
-foxtrick.FlagCollectionToMap.World=Свет
+flagCollectionToMap.ShowMap=Прикажи мапу
+flagCollectionToMap.HideMap=Сакриј мапу
+flagCollectionToMap.Africa=Африка
+flagCollectionToMap.Asia=Азија
+flagCollectionToMap.Europe=Европа
+flagCollectionToMap.MEast=Блиски исток
+flagCollectionToMap.SAmerica=Јужна Америка
+flagCollectionToMap.World=Свет
 
 # SkillTable
 Skill_table=Табела вештина
@@ -965,16 +965,16 @@ minimum=Минимум
 maximum=Максимум
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Претрага по ИД
-Senior=Сениори
-Youth=Омладинци
-Tournaments=Турнири
-Tournament=Турнир
+rapidId.viewById=Претрага по ИД
+rapidId.senior=Сениори
+rapidId.youth=Омладинци
+rapidId.tournaments=Турнири
+rapidId.tournament=Турнир
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Приказује целу табелу у посебном прозору.
-foxtrick.SkillTable.Add_homegrown_title=Додаје и поникле играче који су још увек у клубу
-foxtrick.SkillTable.showTimeInClub_title=Приказује време протекло од играчеве промоције у сениорски тим
+skillTable.switchView=Приказује целу табелу у посебном прозору.
+skillTable.addHomegrown=Додаје и поникле играче који су још увек у клубу
+skillTable.showTimeInClub=Приказује време протекло од играчеве промоције у сениорски тим
 foxtrick.SkillTable.detach=Издвоји
 
 # HTMSPrediction
@@ -1048,21 +1048,21 @@ LocalTime.local.title=Време у локалној зони. Кликните 
 Links.feeds=Линкови до изворних фајлова са листама линкова(сваки линк до фајла у посебном реду)
 
 #actions
-Copy=Копирај
-View=Погледај
+button.copy=Копирај
+rapidId.view=Погледај
 Switch_view=Отвори/Затвори
 Detach=Издвоји
 AddHomegrown=Додај и поникле играче који су и даље у клубу
 showTimeInClub=Прикажи време проведено у клубу
-sort.up=Растуће
-sort.down=Опадајуће
-action.clearCache=Обриши кеш
-action.clearCache.title=Брише Фокстрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити застарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
+button.up=Растуће
+button.down=Опадајуће
+api.clearCache=Обриши кеш
+api.clearCache.title=Брише Фокстрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити застарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
 
 # fennec ui
-pageAction.rightSidebar=Прикажи десни бар
+pageAction.rightMenu=Прикажи десни бар
 pageAction.mainContent=Прикажи главни садржај
-pageAction.leftSidebar=Прикажи леви бар
+pageAction.leftMenu=Прикажи леви бар
 pageAction.all=Прикажи све
 
 # buttons
@@ -1204,11 +1204,11 @@ about.designers=Дизајнери
 prefs.view.by.category=Сви модули
 prefs.view.by.page=Само модули на страници
 
-prefs.delete_foxtrick_branches_ask=Да ли сте сигурни да желите да обришете сва подешавања?
-prefs.delete_oauth_ask=Да ли желите да обришете 'OAuth' токен? 
-prefs.disable_all_foxtrick_modules_ask=Заиста желите да искључите све Фокстрик модуле?
-prefs.revoke_permissions_ask=Да ли сте сигурни да желите да уклоните све опционе дозволе?
+prefs.restoreDefault.ask=Да ли сте сигурни да желите да обришете сва подешавања?
+prefs.deleteToken.ask=Да ли желите да обришете 'OAuth' токен? 
+prefs.disableAllModules.ask=Заиста желите да искључите све Фокстрик модуле?
+prefs.revokePermissions.ask=Да ли сте сигурни да желите да уклоните све опционе дозволе?
 
-prefs.permissionsHint=За %s је потребна дозвола да би радио. Дозволите приступ у наредном прозору. Уколико не дозволите приступ, модул ће остати искључен.
+prefs.getPermissions.alert=За %s је потребна дозвола да би радио. Дозволите приступ у наредном прозору. Уколико не дозволите приступ, модул ће остати искључен.
 
 ###EOF
