--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -743,7 +743,7 @@ foxtrick.ntremoveconfirmation=Vill du verkligen lägga till/ta bort spelaren i/f
 foxtrick.confirmstripserver=Vill du stippa/fixa länkarna från serverinformation för att göra dem användbara i forumet?
 foxtrick.conferences.signaturetoggle=Signatur
 foxtrick.conferences.markunread=Markera som oläst härifrån
-foxtrick.tweaks.selectplayer=Välj spelare
+copy.selectplayer=Välj spelare
 foxtrick.linkscustom.selecticon=Välj ikon
 foxtrick.linkscustom.addpersonallink=Lägg till egen länk
 foxtrick.linkscustom.addlink=Lägg till länk
@@ -756,11 +756,11 @@ foxtrick.linkscustom.tags=Etiketter
 foxtrick.linkscustom.help=Hjälp
 foxtrick.linkscustom.helptext=Till att börja med, det här är bara redigeringsläget. Byt mellan redigerings- och normalläge genom att klicka på den här rutans rubrik. Dina egna länkar fungerar endast i normalläge. Externa, statiska länkar är lätta att lägga till, lägg bara till hela adressen (Exempel\: http\: //alltid.org/league/427/) . För interna statiska länkar hoppar du över server-biten (Exempel\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Taggarna behöver du bara för ovanliga dynamiska länkar. Med taggar ändras länkarna dynamisk genom att använda information från sidan du är på, till exempel\: http\://alltid.org/league/[leagueid] leder alltid till Alltid-sidan för ligan du för närvarande tittar på. Taggarna som finns tillgängliga på varje sida är listade i valrutan. Du kan använda de som är listade på sidan där du lägger till din egna länk. Texten som produceras är bara en förlsagsmal. Du kan skriva taggen själv (med []). När du klickar på en länk så kommer taggen och dess hakparenteser att bytas ut mot den motsvarande texten.
 foxtrick.linkscustom.helptext2=Du kan också exportera dina länkar och dela med dig av dem genom att klicka på 'Export'-knappen och välja en fil att spara till. Länkarna läggs till i den filen, dvs du kan ha flera länkar i en fil. För att importera länkarna går du till inställningsdialogen och går till importera inställningar. Endast inställningar som finns i den valda filen kommer importeras (i det här fallet dina länkar). Inga av dina tidigare länkar kommer att tas bort.
-foxtrick.matches.income=Intäkt\:
-foxtrick.tweaks.Birthdays=Födelsedagar
-foxtrick.tweaks.BirthdayToday=Idag
-foxtrick.tweaks.BirthdayLastWeek=Tidigare
-foxtrick.tweaks.BirthdayNextWeek=Kommande
+matches.income=Intäkt\:
+copy.Birthdays=Födelsedagar
+copy.BirthdayToday=Idag
+copy.BirthdayLastWeek=Tidigare
+copy.BirthdayNextWeek=Kommande
 foxtrick.copymatchid=Klicka för att kopiera matchID till urklipp
 foxtrick.ExtendedPlayerDetails.perseason=/säsong
 
@@ -783,10 +783,10 @@ CurrentSquad=Aktuell
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Handlingar
-foxtrick.tweaks.writeinguestbook=Skriv i gästbok
-foxtrick.tweaks.copyplayerad=Kopiera som spelarannons till urklipp.
-foxtrick.tweaks.copied=Spelarannons har kopierats till urklipp.
+sidebarBox.actions=Handlingar
+managerButtons.writeInGuestbook=Skriv i gästbok
+copy.copyplayerad=Kopiera som spelarannons till urklipp.
+copy.copied=Spelarannons har kopierats till urklipp.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -819,31 +819,31 @@ MatchReportFormat.extraTime=Förlängning
 MatchReportFormat.penaltyShootOut=Straffläggning
 MatchReportFormat.result=Resultat
 
-CopySelected.desc=Kopiera markering med Ctrl + C.
-SpecialPaste.desc=Klistra in med Shift + vänsterklick.
+copy.copySelected=Kopiera markering med Ctrl + C.
+copy.operaPaste=Klistra in med Shift + vänsterklick.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Kopiera förmågetabell(SkillTable) till urklipp (HT-ML).
-foxtrick.tweaks.skilltablecopied=Tabellen har kopierats till urklipp.
-foxtrick.tweaks.matchidcopied=MatchID har kopierats till urklipp.
-foxtrick.tweaks.postidcopied=PostD [post\=%s] har kopierats till urklipp.
-foxtrick.tweaks.postingcopied=Post %s har kopierats till urklipp.
-foxtrick.tweaks.youthstatistics=Juniorstatistik ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Kopiera förmågetabell(SkillTable) till urklipp (HT-ML).
+copy.copied.skilltable=Tabellen har kopierats till urklipp.
+copy.copied.matchid=MatchID har kopierats till urklipp.
+copy.copied.postid=PostD [post\=%s] har kopierats till urklipp.
+copy.copied.posting=Post %s har kopierats till urklipp.
+copy.youthstatistics=Juniorstatistik ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Anfall vs Försvar staplar
-foxtrick.matches.right=Höger
-foxtrick.matches.left=Vänster
-foxtrick.matches.center=Mitten
-foxtrick.matches.defense=för
-foxtrick.matches.attack=anf
-foxtrick.matches.indfreekick=Ind. frisparkar
-foxtrick.matches.wronglang=Foxtrick\: Statistiken kan inte visas därför att ditt språk inte är registrerat eller för att du har satt fel språk i inställningarna. Säkerställ att ditt språk i Foxtrick och Hattrick är samma.
+matches.attackdefensebars=Anfall vs Försvar staplar
+matches.right=Höger
+matches.left=Vänster
+matches.center=Mitten
+matches.defense=för
+matches.attack=anf
+matches.indfreekick=Ind. frisparkar
+matches.wronglang=Foxtrick\: Statistiken kan inte visas därför att ditt språk inte är registrerat eller för att du har satt fel språk i inställningarna. Säkerställ att ditt språk i Foxtrick och Hattrick är samma.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporterstatistik
+matches.suppstats=Supporterstatistik
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -878,14 +878,14 @@ TeamPopupLinks.OpenNewTab=Öppna i ny flik
 total_stars=Totalt antal stjärnor
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Visa karta
-foxtrick.FlagCollectionToMap.HideMap=Göm karta
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asien
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Mellanöstern
-foxtrick.FlagCollectionToMap.SAmerica=Sydamerika
-foxtrick.FlagCollectionToMap.World=Världen
+flagCollectionToMap.ShowMap=Visa karta
+flagCollectionToMap.HideMap=Göm karta
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asien
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Mellanöstern
+flagCollectionToMap.SAmerica=Sydamerika
+flagCollectionToMap.World=Världen
 
 # SkillTable
 Skill_table=Förmågetabell
@@ -930,14 +930,14 @@ minimum=Min
 maximum=Max
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Visa efter ID
-Senior=Senior
-Youth=Junior
+rapidId.viewById=Visa efter ID
+rapidId.senior=Senior
+rapidId.youth=Junior
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Växla vy
-foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current
-foxtrick.SkillTable.showTimeInClub_title=Visar tiden sedan spelaren gick med i klubbens seniorlag
+skillTable.switchView=Växla vy
+skillTable.addHomegrown=Adds all homegrown players from the current
+skillTable.showTimeInClub=Visar tiden sedan spelaren gick med i klubbens seniorlag
 foxtrick.SkillTable.detach=Lösgör
 
 # HTMSPrediction
@@ -1011,21 +1011,21 @@ LocalTime.local.title=Tid i din egen tidszon. Klicka på klockan för att skifta
 Links.feeds=Flöden av länklistor (separerade med radbrytningar)
 
 #actions
-Copy=Kopiera
-View=View
+button.copy=Kopiera
+rapidId.view=View
 Switch_view=Växla vy
 Detach=Lösgör
 AddHomegrown=Add homegrown players
 showTimeInClub=Visa tid i klubben
-sort.up=Upp
-sort.down=Ner
-action.clearCache=Rensa cache
-action.clearCache.title=Rensar FoxTricks Xml cache. FoxTrick laddar ner extrainformation from Hattrick's servrar på efterfrågan. Tills du stänger din browser, kommer FoxTrick att använda lokalt lagrade kopior of denna data. I sällsynta fall kan de bli utdaterade. Rensa cachen om du vill att FoxTrick skall ladda ner denna extrainformation igen.
+button.up=Upp
+button.down=Ner
+api.clearCache=Rensa cache
+api.clearCache.title=Rensar FoxTricks Xml cache. FoxTrick laddar ner extrainformation from Hattrick's servrar på efterfrågan. Tills du stänger din browser, kommer FoxTrick att använda lokalt lagrade kopior of denna data. I sällsynta fall kan de bli utdaterade. Rensa cachen om du vill att FoxTrick skall ladda ner denna extrainformation igen.
 
 # fennec ui
-pageAction.rightSidebar=Visa högra fältet
+pageAction.rightMenu=Visa högra fältet
 pageAction.mainContent=Visa huvudinnehåll
-pageAction.leftSidebar=Visa vänstra fältet
+pageAction.leftMenu=Visa vänstra fältet
 pageAction.all=Visa allt
 
 # buttons
@@ -1156,10 +1156,10 @@ about.designers=Designers
 prefs.view.by.category=Kategori
 prefs.view.by.page=Senaste hattricksida
 
-prefs.delete_foxtrick_branches_ask=Är du säker på att du vill återställa till standardinställningarna?
-prefs.delete_oauth_ask=Radera OAuth poletten/hemlig för lagID %s? 
-prefs.disable_all_foxtrick_modules_ask=Är du säker på att du vill inaktivera samtliga moduler?
+prefs.restoreDefault.ask=Är du säker på att du vill återställa till standardinställningarna?
+prefs.deleteToken.ask=Radera OAuth poletten/hemlig för lagID %s? 
+prefs.disableAllModules.ask=Är du säker på att du vill inaktivera samtliga moduler?
 
-prefs.permissionsHint=%s behöver behörighet för att fungera. Tillåt åtkomst i följande dialogruta.
+prefs.getPermissions.alert=%s behöver behörighet för att fungera. Tillåt åtkomst i följande dialogruta.
 
 ###EOF
