--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -770,7 +770,7 @@ foxtrick.ntremoveconfirmation=Gerçekten bu oyuncuyu kadronuza eklemeyi/çıkarm
 foxtrick.confirmstripserver=Hattrick sunucusunu daha kullanılır kılmak için linklerden arındırmak istiyor musunuz?
 foxtrick.conferences.signaturetoggle=İmza
 foxtrick.conferences.markunread=Buradan okunmadı olarak işaretle
-foxtrick.tweaks.selectplayer=Oyuncu Seç
+copy.selectplayer=Oyuncu Seç
 foxtrick.linkscustom.selecticon=Simgesini seçin
 foxtrick.linkscustom.addpersonallink=Kişisel bağlantı ekle
 foxtrick.linkscustom.addlink=Link Ekle
@@ -783,11 +783,11 @@ foxtrick.linkscustom.tags=Etiketler
 foxtrick.linkscustom.help=Yardım
 foxtrick.linkscustom.helptext=İlk olarak bu sadece duzenleme modudur.Bu kutunun başlığına tıklayarak düzenle ve normal mod arasında geçiş yapabilirsiniz. Dış durağan linklerin eklenmesi kolaydır sadece tam web adresini (Örneğin\: http\://ornej.org/lig/427  gibi) ekleyiniz.İç statik linkler için sunucu kısmını atlayınız (Örnek \: /Dunya/Ligler/Default.aspx?LeagueLevelUnitID\=427). Etiketlere sadece dinamik linkler için ihtiyacınız olacaktır. Etikerler ile linkler,bulunduğunuz sayfadaki bilgileri kullanarak otomatik olarak değişirler.Örnek olarak http\://example.org/league/[LeaugeID] sizi daima o anda Hattrick de baktığınız ligin ID sini kullanarak ilgili sayfasına götürecektir.Her sayfada bulunabilen etiketler seç kutusunun içinde bulunmaktadır.Kendinize ait özel bir link eklerken sadece o sayfada listelenen etiketleri kullanabilirsiniz.Kutunun içindeki metin sadece örnek bir şablondur.Kendiniz de bir etiket yazabilirsiniz([] kullanarak).
 foxtrick.linkscustom.helptext2=Linklerinizi ( bağlantılarınızı) saklayabilir ve paylaşabilirsiniz.Bunu yapmak için gönder butonuna basın ve linki kaydetmek için bir dosya seçiniz. Linkler dosyaya eklenecektir , böylelikle bir sürü linki bir dosyaya kaydedebilirsiniz. Linkleri siteye yüklemek için ise terchiler diyaloguna gidiniz ve yükle tercihlerine giriniz. Sadece seçilen dosyadaki girişler, yani sizin kendi linkleriniz yüklenecektir. Ve önceki linklerinizin hiç biri silinmeyecektir.
-foxtrick.matches.income=Gelir\:
-foxtrick.tweaks.Birthdays=Doğum günü
-foxtrick.tweaks.BirthdayToday=Bugün doğum günü
-foxtrick.tweaks.BirthdayLastWeek=Geçen hafta Doğum günleri
-foxtrick.tweaks.BirthdayNextWeek=Önümüzdeki hafta Doğum günleri
+matches.income=Gelir\:
+copy.Birthdays=Doğum günü
+copy.BirthdayToday=Bugün doğum günü
+copy.BirthdayLastWeek=Geçen hafta Doğum günleri
+copy.BirthdayNextWeek=Önümüzdeki hafta Doğum günleri
 foxtrick.copymatchid=Panoya matchID kopyalamak için tıklayın
 foxtrick.ExtendedPlayerDetails.perseason=/sezon
 
@@ -810,10 +810,10 @@ CurrentSquad=Takım kadrosu
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Olaylar
-foxtrick.tweaks.writeinguestbook=Ziyaretçi defterine yazmak
-foxtrick.tweaks.copyplayerad=oyuncu reklamı kopyala
-foxtrick.tweaks.copied=Oyuncu reklamı panoya kopyalandı.
+sidebarBox.actions=Olaylar
+managerButtons.writeInGuestbook=Ziyaretçi defterine yazmak
+copy.copyplayerad=oyuncu reklamı kopyala
+copy.copied=Oyuncu reklamı panoya kopyalandı.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -846,31 +846,31 @@ MatchReportFormat.extraTime=Uzatma
 MatchReportFormat.penaltyShootOut=Seri Penaltılar
 MatchReportFormat.result=Sonuç
 
-CopySelected.desc=Ctrl C ile kopyalayın seçimi.
-SpecialPaste.desc=Shift+Sol tıklama ile yapıştırın.
+copy.copySelected=Ctrl C ile kopyalayın seçimi.
+copy.operaPaste=Shift+Sol tıklama ile yapıştırın.
 
-foxtrick.tweaks.youthclub=Hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Yetenek tablosunu panoya kopyala (HTML )
-foxtrick.tweaks.skilltablecopied=Yetenek tablosu panoya kopyalandı
-foxtrick.tweaks.matchidcopied=Maç Id'si panoya kopyalandı
-foxtrick.tweaks.postidcopied=Msj No[msj\=%s] panoya kopyalandı.\n
-foxtrick.tweaks.postingcopied=Gönderiminiz %s pano'ya kopyalandı.
-foxtrick.tweaks.youthstatistics=Gençlik istatistikleri ht-ys.org
+copy.youthclub=Hattrick-youthclub.org
+copy.copy.skilltable=Yetenek tablosunu panoya kopyala (HTML )
+copy.copied.skilltable=Yetenek tablosu panoya kopyalandı
+copy.copied.matchid=Maç Id'si panoya kopyalandı
+copy.copied.postid=Msj No[msj\=%s] panoya kopyalandı.\n
+copy.copied.posting=Gönderiminiz %s pano'ya kopyalandı.
+copy.youthstatistics=Gençlik istatistikleri ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Atak & Defans
-foxtrick.matches.right=Sağ
-foxtrick.matches.left=Sol
-foxtrick.matches.center=orta
-foxtrick.matches.defense=def
-foxtrick.matches.attack=atak
-foxtrick.matches.indfreekick=Endirekt serbet vuruş
-foxtrick.matches.wronglang=FoxTrick \: Dil'iniz kayıtlı olmadığından yada tercihlerinizde yanlış dil seçiminde bulunduğunuzdan dolayı İstatistikler gösterilemiyor. Lütfen Foxtrick dil seçiminizin Hattrick dil seçiminizle aynı olsun.\n
+matches.attackdefensebars=Atak & Defans
+matches.right=Sağ
+matches.left=Sol
+matches.center=orta
+matches.defense=def
+matches.attack=atak
+matches.indfreekick=Endirekt serbet vuruş
+matches.wronglang=FoxTrick \: Dil'iniz kayıtlı olmadığından yada tercihlerinizde yanlış dil seçiminde bulunduğunuzdan dolayı İstatistikler gösterilemiyor. Lütfen Foxtrick dil seçiminizin Hattrick dil seçiminizle aynı olsun.\n
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Taraftar istatistikleri
+matches.suppstats=Taraftar istatistikleri
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -905,14 +905,14 @@ TeamPopupLinks.OpenNewTab=Yeni sekmede aç
 total_stars=Toplam yıldız
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Haritayı göster
-foxtrick.FlagCollectionToMap.HideMap=Haritayı gizle
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Asya
-foxtrick.FlagCollectionToMap.Europe=Avrupa
-foxtrick.FlagCollectionToMap.MEast=Orta Doğu
-foxtrick.FlagCollectionToMap.SAmerica=Güney Amerika
-foxtrick.FlagCollectionToMap.World=Dünya
+flagCollectionToMap.ShowMap=Haritayı göster
+flagCollectionToMap.HideMap=Haritayı gizle
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Asya
+flagCollectionToMap.Europe=Avrupa
+flagCollectionToMap.MEast=Orta Doğu
+flagCollectionToMap.SAmerica=Güney Amerika
+flagCollectionToMap.World=Dünya
 
 # SkillTable
 Skill_table=Yetenek tablosu
@@ -957,16 +957,16 @@ minimum=En Az
 maximum=Maksimum
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=ID'ye göre görünüm
-Senior=As
-Youth=genç
-Tournaments=Turnuvalar
-Tournament=Turnuva
+rapidId.viewById=ID'ye göre görünüm
+rapidId.senior=As
+rapidId.youth=genç
+rapidId.tournaments=Turnuvalar
+rapidId.tournament=Turnuva
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Tablonun görünümünü değiştir.
-foxtrick.SkillTable.Add_homegrown_title=Takımda yetişen oyuncuları mevcut oyuncular arasından ekler
-foxtrick.SkillTable.showTimeInClub_title=Oyuncunun klübün As takımına katıldığı zamanı gösterir
+skillTable.switchView=Tablonun görünümünü değiştir.
+skillTable.addHomegrown=Takımda yetişen oyuncuları mevcut oyuncular arasından ekler
+skillTable.showTimeInClub=Oyuncunun klübün As takımına katıldığı zamanı gösterir
 foxtrick.SkillTable.detach=Ayır
 
 # HTMSPrediction
@@ -1040,21 +1040,21 @@ LocalTime.local.title=Saat yerel saate göre ayarlı. Hattrick saatine dönmek i
 Links.feeds=Bağlantı listeleri Kaynaklar (çizgilerle ayrılmıştırlar)
 
 #actions
-Copy=Kopyala
-View=Görünüm
+button.copy=Kopyala
+rapidId.view=Görünüm
 Switch_view=Görünümü değiştir
 Detach=Ayır
 AddHomegrown=Takımda yetişmiş oyuncuları ekle
 showTimeInClub=Kulüpteki geçirdiği süreyi göster
-sort.up=Yukarı
-sort.down=Aşağı
-action.clearCache=Önbelleği temizle
-action.clearCache.title=FoxTrick'in Xml önbelliğini temizler. Foxtrik Hattrick serverlarından ekstra bilgi yükler. web trarayıcınızı kapatana kadar Foxtrick bu bilgilerin yerel kopyalarını saklar. Nadir durumlarda bu bilgiler eskir. Bu ekstra bilgileri tekrar edinmek için Foxtrick'in önbelleğini temizleyiniz.
+button.up=Yukarı
+button.down=Aşağı
+api.clearCache=Önbelleği temizle
+api.clearCache.title=FoxTrick'in Xml önbelliğini temizler. Foxtrik Hattrick serverlarından ekstra bilgi yükler. web trarayıcınızı kapatana kadar Foxtrick bu bilgilerin yerel kopyalarını saklar. Nadir durumlarda bu bilgiler eskir. Bu ekstra bilgileri tekrar edinmek için Foxtrick'in önbelleğini temizleyiniz.
 
 # fennec ui
-pageAction.rightSidebar=Sağ taraftaki çubuğu göster
+pageAction.rightMenu=Sağ taraftaki çubuğu göster
 pageAction.mainContent=Ana içeriği göster
-pageAction.leftSidebar=Sol çubuğu göster
+pageAction.leftMenu=Sol çubuğu göster
 pageAction.all=Tümünü göster
 
 # buttons
@@ -1187,11 +1187,11 @@ about.designers=Tasarımcılar
 prefs.view.by.category=Kategoriye göre göster
 prefs.view.by.page=Son ht sayfa görüntülemek
 
-prefs.delete_foxtrick_branches_ask=Varsayılan ayarları geri yüklemek istediğinizden emin misiniz?
-prefs.delete_oauth_ask=OAuth, TeamID %s için silinsin mi?
-prefs.disable_all_foxtrick_modules_ask=Tüm modülleri devre dışı bırakmak istediğinizden emin misiniz?
-prefs.revoke_permissions_ask=Tüm isteğe bağlı izinleri iptal etmek istediğinizden emin misiniz?
+prefs.restoreDefault.ask=Varsayılan ayarları geri yüklemek istediğinizden emin misiniz?
+prefs.deleteToken.ask=OAuth, TeamID %s için silinsin mi?
+prefs.disableAllModules.ask=Tüm modülleri devre dışı bırakmak istediğinizden emin misiniz?
+prefs.revokePermissions.ask=Tüm isteğe bağlı izinleri iptal etmek istediğinizden emin misiniz?
 
-prefs.permissionsHint=%S çalışması için izin gerekiyor. Aşağıdaki iletişim erişimine izin verin. Eğer reddederseniz bu modül özelliği devre dışı kalacaktır.
+prefs.getPermissions.alert=%S çalışması için izin gerekiyor. Aşağıdaki iletişim erişimine izin verin. Eğer reddederseniz bu modül özelliği devre dışı kalacaktır.
 
 ###EOF
