--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -380,7 +380,7 @@ foxtrick.matchdetail.leftshort=Л
 foxtrick.matchdetail.ifkshort=С
 foxtrick.bidconfirmation=Ці вы жадаеце зрабіць прапанову за гэтага гульца?  Кошт\: %s.
 foxtrick.conferences.signaturetoggle=Подпіс
-foxtrick.tweaks.selectplayer=Абраць гульца
+copy.selectplayer=Абраць гульца
 foxtrick.linkscustom.selecticon=Абраць значак
 foxtrick.linkscustom.addpersonallink=Дадаць ўласную спасылку
 foxtrick.linkscustom.addlink=Дадаць спасылку
@@ -393,11 +393,11 @@ foxtrick.linkscustom.tags=Тэгі
 foxtrick.linkscustom.help=Дапамога
 foxtrick.linkscustom.helptext=Па-першае, гэта проста рэжым рэдагаваньня. ClickingПстрычка на загаловак гэтага простакутніку пераключае паміж звычайным і рэжымам рэдагаваньня. Толькі ў нармальным рэжыме вашыя ўласныя спасылкі функцыянуюць цалкам. Зьнешнія статычныя спасылку лёгка дадаць, проста дадайце url цалкам (Напрыклад\: http\: //alltid.org/league/427/). Для ўнутраных статычных старонак прыбярыце сэрверную частку (Напрыклад\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Тэгі спатрэбяцца вам толькі для дынамічных спасылак. З тэгамі спасылкі дынамічна зьмяняюцца, выкарыстоўваючы інфармацыю пра старонку, на якой вы знаходзіцеся. Напрыклад, http\://alltid.org/league/[leagueid] перамесьціць вас на старонку Alltid  для лігі, якую вы толькі што праглядалі ў Hattrick. Тэгі, якія даступныя на кожнай старонцы пералічаныя ў сьпісе. Вы можаце выкарыстоўваць толькі тыя з іх, якія прысутнічаюць на старонцы, дзе вы дадаеце ўласную спасылку. Тэкст прыведзены ў простакутніку толькі для прыкладу. Вы можаце падпісаць тэг уласнаручна (выкарыстоўвая []).
 foxtrick.linkscustom.helptext2=Вы таксама маеце магчымасьць экпартаваць спасылкі і падзяліцца імі. Каб зрабіць гэта, націсьніце на кнопку экспартаваць і абярыце файл, у які захаваць гэтую спасылку. Спасылку будуць дададзены ў гэты файл, то бок можна захаваць некалькі ў адзін файл. Каб імпартаваць спасылкі, перайдзіце на старонку наладаў і імпартуйце налады. Толькі дадзеныя з абранага файлу будуць імпартаваныя, што ў гэтым выпадку азначае вашыя спасылкі. Ніякія з вашых папярэдніх спасылак ня будуць выдаленыя.
-foxtrick.matches.income=Даход\:
-foxtrick.tweaks.Birthdays=Дні народзінаў
-foxtrick.tweaks.BirthdayToday=Народзіны сёньня
-foxtrick.tweaks.BirthdayLastWeek=Народзіны на мінулым тыдні
-foxtrick.tweaks.BirthdayNextWeek=Народзіны на гэтым тыдні
+matches.income=Даход\:
+copy.Birthdays=Дні народзінаў
+copy.BirthdayToday=Народзіны сёньня
+copy.BirthdayLastWeek=Народзіны на мінулым тыдні
+copy.BirthdayNextWeek=Народзіны на гэтым тыдні
 foxtrick.copymatchid=Націсьніце, каб зкапіяваць matchID
 foxtrick.ExtendedPlayerDetails.perseason=/сэзон
 
@@ -415,10 +415,10 @@ Coach=Трэнэр
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Дзеяньні
-foxtrick.tweaks.writeinguestbook=Напісаць у гасьцёўню
-foxtrick.tweaks.copyplayerad=Капіяваць аб’яву гульца
-foxtrick.tweaks.copied=Аб’ява пра гульца была зкапіявана
+sidebarBox.actions=Дзеяньні
+managerButtons.writeInGuestbook=Напісаць у гасьцёўню
+copy.copyplayerad=Капіяваць аб’яву гульца
+copy.copied=Аб’ява пра гульца была зкапіявана
 
 
 CopyRatings.home=Капіяваць рэйтынгі гаспадароў (у HT-ML)
@@ -428,27 +428,27 @@ CopyRatings.copied=Рэйтынгі былі зкапіяваныя.
 
 
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Капіяваць табліцы здольнасьцей (in HT-ML)
-foxtrick.tweaks.skilltablecopied=Табліца здольнасьцей  была зкапіявана.
-foxtrick.tweaks.matchidcopied=ID матчу  быў зкапіяваны.
-foxtrick.tweaks.postidcopied=ID паведамленьня [post\=%s] было зкапіявана.
-foxtrick.tweaks.postingcopied=Паведамленьне было зкапіявана.
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Капіяваць табліцы здольнасьцей (in HT-ML)
+copy.copied.skilltable=Табліца здольнасьцей  была зкапіявана.
+copy.copied.matchid=ID матчу  быў зкапіяваны.
+copy.copied.postid=ID паведамленьня [post\=%s] было зкапіявана.
+copy.copied.posting=Паведамленьне было зкапіявана.
 
 #matches
-foxtrick.matches.attackdefensebars=Нападзеньне vs Абарона
-foxtrick.matches.right=Справа
-foxtrick.matches.left=Зьлева
-foxtrick.matches.center=Цэнтр
-foxtrick.matches.defense=аб
-foxtrick.matches.attack=нап
-foxtrick.matches.indfreekick=Непрамыя стандарты
-foxtrick.matches.wronglang=FoxTrick\: Статыстыка ня можа быць адлюстраваная, бо вашая мова не зарэгістраваная, альбо вы абралі няслушную мову ў наладах. Калі ласка, пераканайцеся, што вашая мова ў наладах Foxtrick тая ж, што і мова Хэттрыку.
+matches.attackdefensebars=Нападзеньне vs Абарона
+matches.right=Справа
+matches.left=Зьлева
+matches.center=Цэнтр
+matches.defense=аб
+matches.attack=нап
+matches.indfreekick=Непрамыя стандарты
+matches.wronglang=FoxTrick\: Статыстыка ня можа быць адлюстраваная, бо вашая мова не зарэгістраваная, альбо вы абралі няслушную мову ў наладах. Калі ласка, пераканайцеся, што вашая мова ў наладах Foxtrick тая ж, што і мова Хэттрыку.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Статыстыка Supporter’а
+matches.suppstats=Статыстыка Supporter’а
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -478,14 +478,14 @@ less=меней...
 
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Пакзваць мапу
-foxtrick.FlagCollectionToMap.HideMap=Схаваць мапу
-foxtrick.FlagCollectionToMap.Africa=Афрыка
-foxtrick.FlagCollectionToMap.Asia=Азія
-foxtrick.FlagCollectionToMap.Europe=Эўропа
-foxtrick.FlagCollectionToMap.MEast=Сярэдні Ўсход
-foxtrick.FlagCollectionToMap.SAmerica=Паўднёвая Амерыка
-foxtrick.FlagCollectionToMap.World=Сьвет
+flagCollectionToMap.ShowMap=Пакзваць мапу
+flagCollectionToMap.HideMap=Схаваць мапу
+flagCollectionToMap.Africa=Афрыка
+flagCollectionToMap.Asia=Азія
+flagCollectionToMap.Europe=Эўропа
+flagCollectionToMap.MEast=Сярэдні Ўсход
+flagCollectionToMap.SAmerica=Паўднёвая Амерыка
+flagCollectionToMap.World=Сьвет
 
 # SkillTable
 Skill_table=Табліца здольнасьцяў
@@ -509,11 +509,11 @@ Series=Ліга
 # refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Глядзець па ID
-Senior=Дарослыя
+rapidId.viewById=Глядзець па ID
+rapidId.senior=Дарослыя
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Зьмяніць выгляд табліцы.
+skillTable.switchView=Зьмяніць выгляд табліцы.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Прадказаны вынік
@@ -544,8 +544,8 @@ CrossTable.table=Шахматная-табліца сэзону
 # Links
 
 #actions
-Copy=Капіяваць
-View=Від
+button.copy=Капіяваць
+rapidId.view=Від
 Switch_view=Зьмяніць выгляд
 
 # fennec ui
@@ -620,7 +620,7 @@ about.translators=Перакладчыкі
 about.designers=Дызайнеры
 
 
-prefs.delete_foxtrick_branches_ask=Ці вы ўпэўнены што жадаеце аднавіць налады па-змаўчаньні?\nFirefox павінен быць перазапушчаны, каб зьмены адбыліся\!
+prefs.restoreDefault.ask=Ці вы ўпэўнены што жадаеце аднавіць налады па-змаўчаньні?\nFirefox павінен быць перазапушчаны, каб зьмены адбыліся\!
 
 
 ###EOF
