--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -222,8 +222,8 @@ notify.newForumMessage=There is %s new forum reply to you.;There are %s new foru
 
 
 #matches
-foxtrick.matches.attackdefensebars=Attack vs Defence
-foxtrick.matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+matches.attackdefensebars=Attack vs Defence
+matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
 
 
 # NOTE TO TRANSLATORS
@@ -251,13 +251,13 @@ TransferCompare=Transfer Compare
 # refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=View by ID
-Tournaments=Tournaments
-Tournament=Tournament
+rapidId.viewById=View by ID
+rapidId.tournaments=Tournaments
+rapidId.tournament=Tournament
 
 # SkillTable
-foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current senior squad
-foxtrick.SkillTable.showTimeInClub_title=Shows time since player joined the club's senior squad
+skillTable.addHomegrown=Adds all homegrown players from the current senior squad
+skillTable.showTimeInClub=Shows time since player joined the club's senior squad
 
 # HTMSPrediction
 
@@ -289,7 +289,7 @@ MarkAllAsRead.title=Mark all threads in all forums as read
 
 #actions
 AddHomegrown=Add home grown players
-action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored data afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download the extra information again.
+api.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored data afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download the extra information again.
 
 # fennec ui
 
@@ -367,11 +367,11 @@ releaseNotes.version=Version\:
 
 
 
-prefs.delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?
-prefs.delete_oauth_ask=Delete OAuth token/secret for TeamID  %s?
-prefs.disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
-prefs.revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
+prefs.restoreDefault.ask=Are you sure you want to restore the default settings?
+prefs.deleteToken.ask=Delete OAuth token/secret for TeamID  %s?
+prefs.disableAllModules.ask=Are you sure you want to disable all modules?
+prefs.revokePermissions.ask=Are you sure you want to revoke all optional permissions?
 
-prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
+prefs.getPermissions.alert=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
 
 ###EOF
