--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -777,7 +777,7 @@ foxtrick.ntremoveconfirmation=¿Deseas añadir/remover este jugador del equipo?
 foxtrick.confirmstripserver=¿Deseas modificar los servidores de Hattrick en los enlaces, para hacerlos funcionar en el foro?
 foxtrick.conferences.signaturetoggle=Firma
 foxtrick.conferences.markunread=Marcar como no leído desde aquí
-foxtrick.tweaks.selectplayer=Seleccionar jugador
+copy.selectplayer=Seleccionar jugador
 foxtrick.linkscustom.selecticon=Seleccionar icono
 foxtrick.linkscustom.addpersonallink=Añadir enlace persinalizado
 foxtrick.linkscustom.addlink=Añadir enlace
@@ -790,11 +790,11 @@ foxtrick.linkscustom.tags=Etiquetas
 foxtrick.linkscustom.help=Ayuda
 foxtrick.linkscustom.helptext=Este es el modo editor. Dando clic en el encabezado, cambias entre el modo editor y el normal. Solo en el modo normal tus enlaces son totalemente funcionales. Enlaces externos estáticos son fáciles de añadir, solo agrega la URL completa (Ej\: http\: //alltid.org/league/427/) . Para enlaces internos estáticos, omite la parte del servidor (Ej\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Las etiquetas solo las necesitas para enlaces dinámicos. Con las etiquetas, los enlaces dinámicos cambian usando la información del lado o página donde te encuentras. Por ejemplo http\://alltid.org/league/[leagueid] te llevará al enlace de la liga que estas viendo en Hattrick. Las etiquetas que estás disponibles para cada página están enlistadas en el cuadro de selección. Solo puedes usar las etiquetas en la lista de la página en la que te encuentras, cuando añades el enlace personalizado. El texto que se produce es unicamente una plantilla. Puedes escribir la etiqueta usando []
 foxtrick.linkscustom.helptext2=También puedes exportar los enlaces y compartirlos.Para lograr esto, usa el botón de exportar un archivo y guarda el enlace. Los enlaces se añaden al archivo, por lo tanto puedes tener varios enlaces dentro de un archivo. Para importar enlaces, ve al cuado de preferencias y elige preferencias de Importar. Solo las preferencias presentadas dentro del archivo seleccionado serán importados, que en este caso son tus enlacess. Ninguno de los enlaces previos serán eliminados.
-foxtrick.matches.income=Ingreso\:
-foxtrick.tweaks.Birthdays=Cumpleaños
-foxtrick.tweaks.BirthdayToday=Cumpleaños hoy
-foxtrick.tweaks.BirthdayLastWeek=Última semana
-foxtrick.tweaks.BirthdayNextWeek=Próxima semana
+matches.income=Ingreso\:
+copy.Birthdays=Cumpleaños
+copy.BirthdayToday=Cumpleaños hoy
+copy.BirthdayLastWeek=Última semana
+copy.BirthdayNextWeek=Próxima semana
 foxtrick.copymatchid=Clic para copiar el matchID al portapapeles
 foxtrick.ExtendedPlayerDetails.perseason=/temporada
 
@@ -817,10 +817,10 @@ CurrentSquad=Club Actual
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Acciones
-foxtrick.tweaks.writeinguestbook=Escribir en el Libro de Visitas
-foxtrick.tweaks.copyplayerad=Copiar anuncio de jugador al portapapeles
-foxtrick.tweaks.copied=El anuncio del jugador ha sido copiado al portapapeles
+sidebarBox.actions=Acciones
+managerButtons.writeInGuestbook=Escribir en el Libro de Visitas
+copy.copyplayerad=Copiar anuncio de jugador al portapapeles
+copy.copied=El anuncio del jugador ha sido copiado al portapapeles
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -853,31 +853,31 @@ MatchReportFormat.extraTime=Tiempo Extra
 MatchReportFormat.penaltyShootOut=Ronda de Penales
 MatchReportFormat.result=Resultado
 
-CopySelected.desc=Copiar selección con Ctrl + C.
-SpecialPaste.desc=Pegar selección con Shift + Clic izquierdo
+copy.copySelected=Copiar selección con Ctrl + C.
+copy.operaPaste=Pegar selección con Shift + Clic izquierdo
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
-foxtrick.tweaks.skilltablecopied=El código de la tabla de habilidades ha sido copiada al portapapeles
-foxtrick.tweaks.matchidcopied=El ID del partido ha sido copiado al portapapeles.
-foxtrick.tweaks.postidcopied=El ID del mensaje [post\=%s] ha sido copiado al portapapeles.
-foxtrick.tweaks.postingcopied=El mensaje %s ha sido copiado al portapapeles.
-foxtrick.tweaks.youthstatistics=Estadísticas juveniles ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
+copy.copied.skilltable=El código de la tabla de habilidades ha sido copiada al portapapeles
+copy.copied.matchid=El ID del partido ha sido copiado al portapapeles.
+copy.copied.postid=El ID del mensaje [post\=%s] ha sido copiado al portapapeles.
+copy.copied.posting=El mensaje %s ha sido copiado al portapapeles.
+copy.youthstatistics=Estadísticas juveniles ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Comparación Ataque vs Defensa
-foxtrick.matches.right=Derecha
-foxtrick.matches.left=Izquierda
-foxtrick.matches.center=Central
-foxtrick.matches.defense=def
-foxtrick.matches.attack=atq
-foxtrick.matches.indfreekick=Tiros libres indirectos
-foxtrick.matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
+matches.attackdefensebars=Comparación Ataque vs Defensa
+matches.right=Derecha
+matches.left=Izquierda
+matches.center=Central
+matches.defense=def
+matches.attack=atq
+matches.indfreekick=Tiros libres indirectos
+matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Estadísticas de Supporter
+matches.suppstats=Estadísticas de Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -912,14 +912,14 @@ TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
 total_stars=Total de estrellas
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Mostrar mapa
-foxtrick.FlagCollectionToMap.HideMap=Ocultar mapa
-foxtrick.FlagCollectionToMap.Africa=Africa
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Medio Este
-foxtrick.FlagCollectionToMap.SAmerica=Sudamerica
-foxtrick.FlagCollectionToMap.World=Mundo
+flagCollectionToMap.ShowMap=Mostrar mapa
+flagCollectionToMap.HideMap=Ocultar mapa
+flagCollectionToMap.Africa=Africa
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Medio Este
+flagCollectionToMap.SAmerica=Sudamerica
+flagCollectionToMap.World=Mundo
 
 # SkillTable
 Skill_table=Tabla de Habilidades
@@ -964,16 +964,16 @@ minimum=Mínimo
 maximum=Máximo
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Vista por ID
-Senior=Senior
-Youth=Juvenil
-Tournaments=Torneos
-Tournament=Torneo
+rapidId.viewById=Vista por ID
+rapidId.senior=Senior
+rapidId.youth=Juvenil
+rapidId.tournaments=Torneos
+rapidId.tournament=Torneo
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Cambiar la vista de la tabla
-foxtrick.SkillTable.Add_homegrown_title=Añadir a todos los canterandos del equipo actual
-foxtrick.SkillTable.showTimeInClub_title=Mostrar el tiempo desde que el jugador se unió al equipo mayor
+skillTable.switchView=Cambiar la vista de la tabla
+skillTable.addHomegrown=Añadir a todos los canterandos del equipo actual
+skillTable.showTimeInClub=Mostrar el tiempo desde que el jugador se unió al equipo mayor
 foxtrick.SkillTable.detach=Separar
 
 # HTMSPrediction
@@ -1047,21 +1047,21 @@ LocalTime.local.title=Tiempo/hora local. Clicen el reloj para cambiar a la hora 
 Links.feeds=Fuentes de listas de enlace (separadas por saltos de línea)
 
 #actions
-Copy=Copiar
-View=Vista
+button.copy=Copiar
+rapidId.view=Vista
 Switch_view=Cambiar Vista
 Detach=Separar
 AddHomegrown=Añadir canterano
 showTimeInClub=Mostrar tiempo en el club
-sort.up=Arriba
-sort.down=Abajo
-action.clearCache=Borrar cache
-action.clearCache.title=Borra el cache del Xml de Foxtrick. FoxTrick descarga información extra desde los servidores de Hattrick en demanda. Hasta que cierres tu navegador, Foxtrick posteriormente usará copias almacenadas localmente. En raras ocaciones pueden volverse obsoletas. Borra el cache si quieres que Foxtrick descargue esa información extra nuevamente.
+button.up=Arriba
+button.down=Abajo
+api.clearCache=Borrar cache
+api.clearCache.title=Borra el cache del Xml de Foxtrick. FoxTrick descarga información extra desde los servidores de Hattrick en demanda. Hasta que cierres tu navegador, Foxtrick posteriormente usará copias almacenadas localmente. En raras ocaciones pueden volverse obsoletas. Borra el cache si quieres que Foxtrick descargue esa información extra nuevamente.
 
 # fennec ui
-pageAction.rightSidebar=Mostrar barra dereacha
+pageAction.rightMenu=Mostrar barra dereacha
 pageAction.mainContent=Mostrar contenido principal
-pageAction.leftSidebar=Mostrar barra izquierda
+pageAction.leftMenu=Mostrar barra izquierda
 pageAction.all=Mostrar todo
 
 # buttons
@@ -1203,11 +1203,11 @@ about.designers=Deseñadores
 prefs.view.by.category=Ver por cateoría
 prefs.view.by.page=Ver de acuerdo a última página de HT
 
-prefs.delete_foxtrick_branches_ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto\!
-prefs.delete_oauth_ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s?
-prefs.disable_all_foxtrick_modules_ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
-prefs.revoke_permissions_ask=¿Está seguro que desea revocar todos los permisos opcionales?
+prefs.restoreDefault.ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto\!
+prefs.deleteToken.ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s?
+prefs.disableAllModules.ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
+prefs.revokePermissions.ask=¿Está seguro que desea revocar todos los permisos opcionales?
 
-prefs.permissionsHint=%s necesita autorización para funcionar. Permita el acceso en el siguiente cuadro de dialogo. Si lo deniega esta característica del modulo va a ser deshabilitada.
+prefs.getPermissions.alert=%s necesita autorización para funcionar. Permita el acceso en el siguiente cuadro de dialogo. Si lo deniega esta característica del modulo va a ser deshabilitada.
 
 ###EOF
