--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -777,7 +777,7 @@ foxtrick.ntremoveconfirmation=Voulez-vous vraiment ajouter/supprimer ce joueur d
 foxtrick.confirmstripserver=Voulez-vous supprimer le serveur du lien interne pour les rendre utilisable dans les forums ?
 foxtrick.conferences.signaturetoggle=Signature
 foxtrick.conferences.markunread=Marquer le sujet comme non lu jusqu'ici.
-foxtrick.tweaks.selectplayer=Sélectionnez le joueur
+copy.selectplayer=Sélectionnez le joueur
 foxtrick.linkscustom.selecticon=Sélectionnez l'icône
 foxtrick.linkscustom.addpersonallink=Liens personnels
 foxtrick.linkscustom.addlink=Ajouter ce lien
@@ -790,11 +790,11 @@ foxtrick.linkscustom.tags=mots-clés
 foxtrick.linkscustom.help=Aide
 foxtrick.linkscustom.helptext=Vous êtes actuellement dans le mode Edition. Vous pouvez basculer entre le mode Edition et le mode Normal en cliquant sur le titre <Liens externes>. Notez que vos liens personnels sont entièrement fonctionnels uniquement en mode Normal. Les liens statiques sont faciles à ajouter, il vous suffit de renseigner leurs adresses URL complètes (Exemple\: http\: //alltid.org/league/427/). Pour les liens statiques internes ne précisez pas la partie serveur (Exemple\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Grâce aux mots-clés, les liens peuvent être modifiés dynamiquement en utilisant les informations de la page Hattrick où vous vous trouvez. Par exemple, le lien http\://alltid.org/league/[leagueid] vous affichera la page Alltid de la ligue actuellement affichée dans Hattrick. La liste des mots-clés disponibles est mise à jour dans la liste de sélection selon la page affichée. Vous ne pouvez utiliser que les mots-clés qui sont énumérés sur la page où vous ajoutez votre lien personnel. Le texte dans la boîte ne sert qu'à titre d'exemple. Vous pouvez inclure vous-même un mot-clé dans votre lien en encadrant celui-ci de crochets ([]).
 foxtrick.linkscustom.helptext2=Vous pouvez également exporter vos liens afin de les partager. Pour ce faire, cliquez sur le bouton Exporter et sélectionnez un fichier pour sauvegarder ce lien. Les liens seront ajoutés à ce fichier, vous pouvez donc mettre plusieurs liens dans un même fichier. Pour importer de nouveaux liens, importez votre fichier de liens depuis le menu Configurer FoxTrick \=> Général \=> Export/Import des préférences \=> Importer les préférences. Seuls les liens présents dans le fichier seront importés, aucun de vos liens existants ne seront supprimés.
-foxtrick.matches.income=Recette \:
-foxtrick.tweaks.Birthdays=Anniversaires
-foxtrick.tweaks.BirthdayToday=Aujourd'hui
-foxtrick.tweaks.BirthdayLastWeek=La semaine dernière
-foxtrick.tweaks.BirthdayNextWeek=La semaine prochaine
+matches.income=Recette \:
+copy.Birthdays=Anniversaires
+copy.BirthdayToday=Aujourd'hui
+copy.BirthdayLastWeek=La semaine dernière
+copy.BirthdayNextWeek=La semaine prochaine
 foxtrick.copymatchid=Cliquez pour copier l'identifiant du match dans le presse-papiers.
 foxtrick.ExtendedPlayerDetails.perseason=/ saison
 
@@ -817,10 +817,10 @@ CurrentSquad=Équipe actuelle
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Actions
-foxtrick.tweaks.writeinguestbook=Ecrire dans le Livre d'or
-foxtrick.tweaks.copyplayerad=Copier les details du joueur dans le presse-papiers
-foxtrick.tweaks.copied=Les détails du joueur ont été copiés dans le presse-papiers.
+sidebarBox.actions=Actions
+managerButtons.writeInGuestbook=Ecrire dans le Livre d'or
+copy.copyplayerad=Copier les details du joueur dans le presse-papiers
+copy.copied=Les détails du joueur ont été copiés dans le presse-papiers.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -853,31 +853,31 @@ MatchReportFormat.extraTime=Prolongation
 MatchReportFormat.penaltyShootOut=Tirs au but
 MatchReportFormat.result=Score final
 
-CopySelected.desc=Copier la sélection avec Ctrl + c
-SpecialPaste.desc=Coller avec Shift + clic gauche.
+copy.copySelected=Copier la sélection avec Ctrl + c
+copy.operaPaste=Coller avec Shift + clic gauche.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Copier le tableau de compétences dans le presse-papiers (style HT Forum)
-foxtrick.tweaks.skilltablecopied=Le tableau de compétences a été copié dans le presse-papiers.
-foxtrick.tweaks.matchidcopied=L'identifiant du match a été copié dans le presse-papiers.
-foxtrick.tweaks.postidcopied=L'identifiant du sujet a été copié dans le presse-papiers.
-foxtrick.tweaks.postingcopied=Le message a été copié dans le presse-papiers.
-foxtrick.tweaks.youthstatistics=Statistiques de l'équipe des jeunes ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Copier le tableau de compétences dans le presse-papiers (style HT Forum)
+copy.copied.skilltable=Le tableau de compétences a été copié dans le presse-papiers.
+copy.copied.matchid=L'identifiant du match a été copié dans le presse-papiers.
+copy.copied.postid=L'identifiant du sujet a été copié dans le presse-papiers.
+copy.copied.posting=Le message a été copié dans le presse-papiers.
+copy.youthstatistics=Statistiques de l'équipe des jeunes ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Attaques / Défenses
-foxtrick.matches.right=Droite
-foxtrick.matches.left=Gauche
-foxtrick.matches.center=Centre
-foxtrick.matches.defense=déf
-foxtrick.matches.attack=att
-foxtrick.matches.indfreekick=Coup franc indirect
-foxtrick.matches.wronglang=FoxTrick\: Les statistiques ne peuvent pas être affichés parce que votre langue n'est pas enregistrée ou parce que vous avez défini la mauvaise langue dans les préférences
+matches.attackdefensebars=Attaques / Défenses
+matches.right=Droite
+matches.left=Gauche
+matches.center=Centre
+matches.defense=déf
+matches.attack=att
+matches.indfreekick=Coup franc indirect
+matches.wronglang=FoxTrick\: Les statistiques ne peuvent pas être affichés parce que votre langue n'est pas enregistrée ou parce que vous avez défini la mauvaise langue dans les préférences
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Stats Supporter
+matches.suppstats=Stats Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -912,14 +912,14 @@ TeamPopupLinks.OpenNewTab=Ouvrir dans un nouvel onglet
 total_stars=Nombre total d'étoiles
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Voir la carte
-foxtrick.FlagCollectionToMap.HideMap=Cacher la carte
-foxtrick.FlagCollectionToMap.Africa=Afrique
-foxtrick.FlagCollectionToMap.Asia=Asie
-foxtrick.FlagCollectionToMap.Europe=Europe
-foxtrick.FlagCollectionToMap.MEast=Moyen-Orient
-foxtrick.FlagCollectionToMap.SAmerica=Amérique du Sud
-foxtrick.FlagCollectionToMap.World=Monde
+flagCollectionToMap.ShowMap=Voir la carte
+flagCollectionToMap.HideMap=Cacher la carte
+flagCollectionToMap.Africa=Afrique
+flagCollectionToMap.Asia=Asie
+flagCollectionToMap.Europe=Europe
+flagCollectionToMap.MEast=Moyen-Orient
+flagCollectionToMap.SAmerica=Amérique du Sud
+flagCollectionToMap.World=Monde
 
 # SkillTable
 Skill_table=Tableau des compétences
@@ -964,16 +964,16 @@ minimum=Au moins
 maximum=Maximum
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Recherche par ID
-Senior=Senior
-Youth=Junior
-Tournaments=Tournois
-Tournament=Tournoi
+rapidId.viewById=Recherche par ID
+rapidId.senior=Senior
+rapidId.youth=Junior
+rapidId.tournaments=Tournois
+rapidId.tournament=Tournoi
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Trier l'affichage du tableau.
-foxtrick.SkillTable.Add_homegrown_title=Ajoute tous les joueurs issus du club de l'équipe senior en place
-foxtrick.SkillTable.showTimeInClub_title=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
+skillTable.switchView=Trier l'affichage du tableau.
+skillTable.addHomegrown=Ajoute tous les joueurs issus du club de l'équipe senior en place
+skillTable.showTimeInClub=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
 foxtrick.SkillTable.detach=Détacher
 
 # HTMSPrediction
@@ -1047,21 +1047,21 @@ LocalTime.local.title=Heure du fuseau horaire local. Cliquez sur l'horloge pour 
 Links.feeds=Listes des liens vers un flux (séparés par des sauts de ligne)
 
 #actions
-Copy=Copier
-View=Voir
+button.copy=Copier
+rapidId.view=Voir
 Switch_view=Changer de vue
 Detach=Détacher
 AddHomegrown=Ajouter les joueurs locaux
 showTimeInClub=Afficher l'heure du l'équipe
-sort.up=Vers le haut
-sort.down=Vers le bas
-action.clearCache=Vider le cache
-action.clearCache.title=Effacer le cache Xml de FoxTrick. FoxTrick télécharge au fur et à mesure des informations supplémentaires provenant des serveurs de Hattrick. FoxTrick utilise les données stockées localement jusqu'à ce que vous fermiez votre navigateur. En de rares occasions, ces données peuvnt être erronées. Vider le cache permettra à FoxTrick de télécharger de nouveau les informations supplémentaires.
+button.up=Vers le haut
+button.down=Vers le bas
+api.clearCache=Vider le cache
+api.clearCache.title=Effacer le cache Xml de FoxTrick. FoxTrick télécharge au fur et à mesure des informations supplémentaires provenant des serveurs de Hattrick. FoxTrick utilise les données stockées localement jusqu'à ce que vous fermiez votre navigateur. En de rares occasions, ces données peuvnt être erronées. Vider le cache permettra à FoxTrick de télécharger de nouveau les informations supplémentaires.
 
 # fennec ui
-pageAction.rightSidebar=Afficher la barre de droite
+pageAction.rightMenu=Afficher la barre de droite
 pageAction.mainContent=Afficher le menu principal
-pageAction.leftSidebar=Afficher la barre de gauche
+pageAction.leftMenu=Afficher la barre de gauche
 pageAction.all=Tout Montrer
 
 # buttons
@@ -1202,11 +1202,11 @@ about.designers=Designers
 prefs.view.by.category=Afficher par catégorie
 prefs.view.by.page=Vu par dernière page HT
 
-prefs.delete_foxtrick_branches_ask=Êtes-vous sûr que vous souhaitez restaurer les paramètres par défaut ?\nFirefox doit être redémarré pour prendre en compte les paramètres\!
-prefs.delete_oauth_ask=Supprimer OAuth token/secret pour la TeamID  %s?
-prefs.disable_all_foxtrick_modules_ask=Êtes-vous sûr de vouloir désactiver tous les modules ?\n
-prefs.revoke_permissions_ask=Êtes-vous sûr que vous voulez révoquer toutes les autorisations facultatives ?
+prefs.restoreDefault.ask=Êtes-vous sûr que vous souhaitez restaurer les paramètres par défaut ?\nFirefox doit être redémarré pour prendre en compte les paramètres\!
+prefs.deleteToken.ask=Supprimer OAuth token/secret pour la TeamID  %s?
+prefs.disableAllModules.ask=Êtes-vous sûr de vouloir désactiver tous les modules ?\n
+prefs.revokePermissions.ask=Êtes-vous sûr que vous voulez révoquer toutes les autorisations facultatives ?
 
-prefs.permissionsHint=%s doit obtenir une permission pour fonctionner. Autorisez l'accès dans la boîte de dialogue suivante. Si vous refusez, cette fonction sera désactivée.
+prefs.getPermissions.alert=%s doit obtenir une permission pour fonctionner. Autorisez l'accès dans la boîte de dialogue suivante. Si vous refusez, cette fonction sera désactivée.
 
 ###EOF
