--- a/content/locale/fur/foxtrick.properties
+++ b/content/locale/fur/foxtrick.properties
@@ -543,7 +543,7 @@ foxtrick.conferences.signaturetoggle=Signature
 
 
 
-foxtrick.tweaks.selectplayer=Select player
+copy.selectplayer=Select player
 foxtrick.linkscustom.selecticon=Select icon
 foxtrick.linkscustom.addpersonallink=Add personal link
 foxtrick.linkscustom.addlink=Add link
@@ -556,10 +556,10 @@ foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Help
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http: \/\/alltid.org\/league\/427\/). For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http:\/\/alltid.org\/league\/[leagueid] would always lead you to the Alltid page of the series you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. To do this you can click on the export button and select a file to save that link. Links are append to that file, hence you can save several links in one file. To import links go to the preference dialog and go to import preferences. Only the entries in the selected file will be imported, which in this case are your links. None of your previous links will be deleted.
-foxtrick.matches.income=Income:
-foxtrick.tweaks.Birthdays=Birthdays
-foxtrick.tweaks.BirthdayLastWeek=Birthdays last week
-foxtrick.tweaks.BirthdayNextWeek=Birthdays next week
+matches.income=Income:
+copy.Birthdays=Birthdays
+copy.BirthdayLastWeek=Birthdays last week
+copy.BirthdayNextWeek=Birthdays next week
 foxtrick.copymatchid=Click to copy matchID to clipboard
 foxtrick.ExtendedPlayerDetails.perseason=/season
 
@@ -586,14 +586,14 @@ Coach=Coach
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Actions
+sidebarBox.actions=Actions
 # Look on your players page (Club -> Players) to the box title on the right with the list of players
 
 
-foxtrick.tweaks.writeinguestbook=Write in Guestbook
+managerButtons.writeInGuestbook=Write in Guestbook
 
-foxtrick.tweaks.copyplayerad=Copy player ad to clipboard
-foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
+copy.copyplayerad=Copy player ad to clipboard
+copy.copied=The player ad has been copied to the clipboard.
 
 
 
@@ -601,27 +601,27 @@ foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
 CopyRatings.home=Copy home team ratings to the clipboard (HT-BBCode style)
 CopyRatings.away=Copy away team ratings to the clipboard (HT-BBCode style)
 CopyRatings.copied=The Ratings have been copied to the clipboard.
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
+copy.youthclub=hattrick-youthclub.org
 
-foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (HT Forum style)
-
-
+copy.copy.skilltable=Copy skill table to clipboard (HT Forum style)
 
 
 
-foxtrick.tweaks.matchidcopied=The match ID has been copied to the clipboard.
-foxtrick.tweaks.postidcopied=The post ID has been copied to the clipboard.
-foxtrick.tweaks.postingcopied=The posting has been copied to the clipboard.
+
+
+copy.copied.matchid=The match ID has been copied to the clipboard.
+copy.copied.postid=The post ID has been copied to the clipboard.
+copy.copied.posting=The posting has been copied to the clipboard.
 
 #matches
-foxtrick.matches.attackdefensebars=Attack vs Defense bars
-foxtrick.matches.right=Right
-foxtrick.matches.left=Left
-foxtrick.matches.center=Central
-foxtrick.matches.defense=def
-foxtrick.matches.attack=att
-foxtrick.matches.indfreekick=Ind. free kick
-foxtrick.matches.wronglang=FoxTrick: The stats cannot be displayed because your language is not registered or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+matches.attackdefensebars=Attack vs Defense bars
+matches.right=Right
+matches.left=Left
+matches.center=Central
+matches.defense=def
+matches.attack=att
+matches.indfreekick=Ind. free kick
+matches.wronglang=FoxTrick: The stats cannot be displayed because your language is not registered or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
 # NOTE TO TRANSLATORS
 # Look on a lineup from a played match. The Positions are marked with 2-3 letters
 
@@ -638,7 +638,7 @@ foxtrick.matches.wronglang=FoxTrick: The stats cannot be displayed because your 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter Statistics
+matches.suppstats=Supporter Statistics
 # Look on your Matches page: copy the header of the sold seats box
 
 
@@ -670,14 +670,14 @@ less=less...
 total_stars=Total stars count
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Show map
-foxtrick.FlagCollectionToMap.HideMap=Hide map
-foxtrick.FlagCollectionToMap.Africa=Africa
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europe
-foxtrick.FlagCollectionToMap.MEast=Middle East
-foxtrick.FlagCollectionToMap.SAmerica=South America
-foxtrick.FlagCollectionToMap.World=World
+flagCollectionToMap.ShowMap=Show map
+flagCollectionToMap.HideMap=Hide map
+flagCollectionToMap.Africa=Africa
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europe
+flagCollectionToMap.MEast=Middle East
+flagCollectionToMap.SAmerica=South America
+flagCollectionToMap.World=World
 
 
 Player=Player
@@ -773,8 +773,8 @@ button.import=Load
 
 
 
-prefs.delete_foxtrick_branches_ask=Are you sure you want to restore the default settings?\nFirefox must be restarted for this to take effect!
-prefs.disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
+prefs.restoreDefault.ask=Are you sure you want to restore the default settings?\nFirefox must be restarted for this to take effect!
+prefs.disableAllModules.ask=Are you sure you want to disable all modules?\n
 
 #status bar menu
 prefs.title=Preferences
