--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -774,7 +774,7 @@ foxtrick.ntremoveconfirmation=Wil je deze speler echt toevoegen aan of verwijder
 foxtrick.confirmstripserver=Wil je de hattrick-server uit de link verwijderen om de link bruikbaar te maken op het forum?
 foxtrick.conferences.signaturetoggle=Toon handtekening
 foxtrick.conferences.markunread=Markeer als ongelezen vanaf hier
-foxtrick.tweaks.selectplayer=Selecteer speler
+copy.selectplayer=Selecteer speler
 foxtrick.linkscustom.selecticon=Selecteer icoon
 foxtrick.linkscustom.addpersonallink=Voeg eigen link toe
 foxtrick.linkscustom.addlink=Voeg link toe
@@ -787,11 +787,11 @@ foxtrick.linkscustom.tags=Parameters
 foxtrick.linkscustom.help=Help
 foxtrick.linkscustom.helptext=Allereerst, dit is de bewerkingsmodus. Door op de bovenkant van deze box te klikken, schakel je tussen de bewerkingsmodus en de normale modus. Alleen in de normale modus werken de links. Statische externe links zijn gemakkelijk toe te voegen, voeg gewoon de volledige URL toe (voorbeeld\: http\: //alltid.org/league/427/). Voor statische links binnen Hattrick laat je het server gedeelte weg (voorbeeld\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). De parameters zijn alleen nodig voor dynamische links. Met parameters kun je informatie van Hattrick dynamisch in links plaatsen (voorbeeld\: http\://alltid.org/league/[leagueid] stuurt je naar de alltid site van de competitie die je op dat moment bekijkt). De parameters die op iedere pagina beschikbaar zijn, worden getoond in een selectieveld. Je kunt alleen die parameters gebruiken. De tekst die getoond wordt in een link, is slechts een voorbeeld. Je kunt die tekst zelf vervangen door je parameter naar keuze (met de []).
 foxtrick.linkscustom.helptext2=Je kunt je links ook exporteren en delen. Hiertoe klik je op de export knop en selecteer je een bestand om je links in op te slaan. Links worden aan dat bestand toegevoegd, dus je kunt verscheidene links in één bestand opslaan. Om links te importeren ga je in het voorkeuren venster naar inporteer voorkeuren. Alleen de voorkeuren uit het geselecteerde bestand worden geïmporteerd. In dit geval zijn dat dus alleen jouw links. Reeds bestaande links worden niet verwijderd.
-foxtrick.matches.income=Recette\:
-foxtrick.tweaks.Birthdays=Verjaardagen
-foxtrick.tweaks.BirthdayToday=Verjaardagen vandaag
-foxtrick.tweaks.BirthdayLastWeek=Verjaardagen afgelopen week
-foxtrick.tweaks.BirthdayNextWeek=Verjaardagen komende week
+matches.income=Recette\:
+copy.Birthdays=Verjaardagen
+copy.BirthdayToday=Verjaardagen vandaag
+copy.BirthdayLastWeek=Verjaardagen afgelopen week
+copy.BirthdayNextWeek=Verjaardagen komende week
 foxtrick.copymatchid=Klik hier om het wedstrijd ID naar je klembord te kopiëren
 foxtrick.ExtendedPlayerDetails.perseason=/ seizoen
 
@@ -814,10 +814,10 @@ CurrentSquad=Huidig team
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Acties
-foxtrick.tweaks.writeinguestbook=Schrijf in het gastenboek
-foxtrick.tweaks.copyplayerad=Kopieer transferadvertentie voor speler naar klembord
-foxtrick.tweaks.copied=De advertentie is naar het klembord gekopieerd.
+sidebarBox.actions=Acties
+managerButtons.writeInGuestbook=Schrijf in het gastenboek
+copy.copyplayerad=Kopieer transferadvertentie voor speler naar klembord
+copy.copied=De advertentie is naar het klembord gekopieerd.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -850,31 +850,31 @@ MatchReportFormat.extraTime=Extra tijd
 MatchReportFormat.penaltyShootOut=Penalty's
 MatchReportFormat.result=Resultaat
 
-CopySelected.desc=Kopieer selectie met CTRL + C.
-SpecialPaste.desc=Plak met SHIFT + linker muis klik.
+copy.copySelected=Kopieer selectie met CTRL + C.
+copy.operaPaste=Plak met SHIFT + linker muis klik.
 
-foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Kopieer tabel met vaardigheden naar het klembord (HT-ML formaat)
-foxtrick.tweaks.skilltablecopied=De tabel met vaardigheden is naar het klembord gekopieerd.
-foxtrick.tweaks.matchidcopied=Het wedstrijd-ID is naar het klembord gekopieerd.
-foxtrick.tweaks.postidcopied=Het bericht-ID [post\=%s] is naar het klembord gekopieerd.
-foxtrick.tweaks.postingcopied=Bericht %s is naar het klembord gekopieerd.
-foxtrick.tweaks.youthstatistics=Jeugd statistieken ht-ys.org
+copy.youthclub=hattrick-youthclub.org
+copy.copy.skilltable=Kopieer tabel met vaardigheden naar het klembord (HT-ML formaat)
+copy.copied.skilltable=De tabel met vaardigheden is naar het klembord gekopieerd.
+copy.copied.matchid=Het wedstrijd-ID is naar het klembord gekopieerd.
+copy.copied.postid=Het bericht-ID [post\=%s] is naar het klembord gekopieerd.
+copy.copied.posting=Bericht %s is naar het klembord gekopieerd.
+copy.youthstatistics=Jeugd statistieken ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Aanval vs Verdediging
-foxtrick.matches.right=Rechter
-foxtrick.matches.left=Linker
-foxtrick.matches.center=Centr.
-foxtrick.matches.defense=verd.
-foxtrick.matches.attack=aanv.
-foxtrick.matches.indfreekick=Ind. vrije trap
-foxtrick.matches.wronglang=FoxTrick\: De statistieken kunnen niet getoond worden, omdat jouw taal niet is geregistreerd of omdat je de verkeerde taal in je instellingen hebt gekozen. Zorg er voor dat je FoxTrick taalinstellingen gelijk zijn aan je Hattrick taalinstellingen.
+matches.attackdefensebars=Aanval vs Verdediging
+matches.right=Rechter
+matches.left=Linker
+matches.center=Centr.
+matches.defense=verd.
+matches.attack=aanv.
+matches.indfreekick=Ind. vrije trap
+matches.wronglang=FoxTrick\: De statistieken kunnen niet getoond worden, omdat jouw taal niet is geregistreerd of omdat je de verkeerde taal in je instellingen hebt gekozen. Zorg er voor dat je FoxTrick taalinstellingen gelijk zijn aan je Hattrick taalinstellingen.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter statistieken
+matches.suppstats=Supporter statistieken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -909,14 +909,14 @@ TeamPopupLinks.OpenNewTab=Openen in nieuwe tab
 total_stars=Totaal aantal sterren
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Toon kaart
-foxtrick.FlagCollectionToMap.HideMap=Verberg kaart
-foxtrick.FlagCollectionToMap.Africa=Afrika
-foxtrick.FlagCollectionToMap.Asia=Azië
-foxtrick.FlagCollectionToMap.Europe=Europa
-foxtrick.FlagCollectionToMap.MEast=Midden-Oosten
-foxtrick.FlagCollectionToMap.SAmerica=Zuid-Amerika
-foxtrick.FlagCollectionToMap.World=Wereld
+flagCollectionToMap.ShowMap=Toon kaart
+flagCollectionToMap.HideMap=Verberg kaart
+flagCollectionToMap.Africa=Afrika
+flagCollectionToMap.Asia=Azië
+flagCollectionToMap.Europe=Europa
+flagCollectionToMap.MEast=Midden-Oosten
+flagCollectionToMap.SAmerica=Zuid-Amerika
+flagCollectionToMap.World=Wereld
 
 # SkillTable
 Skill_table=Vaardighedentabel
@@ -961,16 +961,16 @@ minimum=Minstens
 maximum=Maximaal
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Zoek op ID
-Senior=Senior
-Youth=Jeugd
-Tournaments=Toernooien
-Tournament=Toernooi
+rapidId.viewById=Zoek op ID
+rapidId.senior=Senior
+rapidId.youth=Jeugd
+rapidId.tournaments=Toernooien
+rapidId.tournament=Toernooi
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Wissel de weergave van de tabel
-foxtrick.SkillTable.Add_homegrown_title=Voeg alle jeugdspelers toe
-foxtrick.SkillTable.showTimeInClub_title=Laat de periode zien sinds de speler bij het senioren team speelt
+skillTable.switchView=Wissel de weergave van de tabel
+skillTable.addHomegrown=Voeg alle jeugdspelers toe
+skillTable.showTimeInClub=Laat de periode zien sinds de speler bij het senioren team speelt
 foxtrick.SkillTable.detach=Loskoppelen
 
 # HTMSPrediction
@@ -1044,21 +1044,21 @@ LocalTime.local.title=Tijd in locale tijdzone. Klik op de klok om te wisselen na
 Links.feeds=Feed met lijst van snelkoppelingen (gescheiden door regeleinden)
 
 #actions
-Copy=Kopieer
-View=Bekijk
+button.copy=Kopieer
+rapidId.view=Bekijk
 Switch_view=Wissel weergave
 Detach=Koppel los
 AddHomegrown=Voeg eigen jeugdspelers toe
 showTimeInClub=Laat periode bij club zien
-sort.up=Omhoog
-sort.down=Omlaag
-action.clearCache=Cache-geheugen leeghalen
-action.clearCache.title=Leeg Foxtrick's XML cache. FoxTrick haalt extra informatie van Hattrick's servers op verzoek. Totdat je de browser sluit, zal FoxTrick locale kopieën gebruiken. Soms kan het voorkomen dat deze niet meer up-to-date zijn. Leeg het cache-geheugen als je wilt dat FoxTrick de informatie nogmaals download.
+button.up=Omhoog
+button.down=Omlaag
+api.clearCache=Cache-geheugen leeghalen
+api.clearCache.title=Leeg Foxtrick's XML cache. FoxTrick haalt extra informatie van Hattrick's servers op verzoek. Totdat je de browser sluit, zal FoxTrick locale kopieën gebruiken. Soms kan het voorkomen dat deze niet meer up-to-date zijn. Leeg het cache-geheugen als je wilt dat FoxTrick de informatie nogmaals download.
 
 # fennec ui
-pageAction.rightSidebar=Laat rechter balk zien
+pageAction.rightMenu=Laat rechter balk zien
 pageAction.mainContent=Laat het hoofddeel van de site zien
-pageAction.leftSidebar=Laat linker balk zien
+pageAction.leftMenu=Laat linker balk zien
 pageAction.all=Laat alles zien
 
 # buttons
@@ -1192,11 +1192,11 @@ about.designers=Designers
 prefs.view.by.category=Laat per categorie zien
 prefs.view.by.page=Laat voor de laatste HT pagina zien
 
-prefs.delete_foxtrick_branches_ask=Weet je zeker dat je de standaardinstellingen wilt terugzetten?\nFirefox moet hiervoor opnieuw opgestart worden\!
-prefs.delete_oauth_ask=Verwijder OAuth token voor teamid %s?
-prefs.disable_all_foxtrick_modules_ask=Weet je zeker dat je alle modules wilt uitschakelen?\n
-prefs.revoke_permissions_ask=Weet je zeker dat je alle permissies wilt intrekken?
+prefs.restoreDefault.ask=Weet je zeker dat je de standaardinstellingen wilt terugzetten?\nFirefox moet hiervoor opnieuw opgestart worden\!
+prefs.deleteToken.ask=Verwijder OAuth token voor teamid %s?
+prefs.disableAllModules.ask=Weet je zeker dat je alle modules wilt uitschakelen?\n
+prefs.revokePermissions.ask=Weet je zeker dat je alle permissies wilt intrekken?
 
-prefs.permissionsHint=%s vereist permissie om te werken. Sta toegang toe in het volgende venster.
+prefs.getPermissions.alert=%s vereist permissie om te werken. Sta toegang toe in het volgende venster.
 
 ###EOF
